--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "إعدادات",
   "app-tab-help-title": "يساعد",
   "app-tab-audio-chat-title": "دردشة صوتية",
+  "app-notification-too-few-compare-topics": "قم أولاً بإضافة موضوعين أو أكثر إلى المقارنة، باستخدام الزر (الموجود أعلى مقالة ويكيبيديا وفي القسم التعريفي للموضوع)",
   "app-search-placeholder": "يبحث",
-  "app-structured-search-title": "بحث منظم",
+  "app-topics-found": "المواضيع التي تم العثور عليها",
   "app-title-occurence": "خريطة الحدوث",
   "app-title-super": "ممتاز",
   "app-title-sub": "الفرعية",
   "app-title-pages": "الصفحات",
   "app-title-citations": "اقتباسات",
-  "app-guide-see-more": "شاهد المزيد",
-  "app-guide-page": "صفحة",
-  "app-guide-current-events": "الاحداث الحالية",
-  "app-guide-topic": "عنوان",
-  "app-guide-artwork": "تلوين",
-  "app-guide-organism": "كائن حي",
-  "app-guide-music": "موسيقى",
-  "app-guide-science": "علوم",
-  "app-topics-found": "المواضيع التي تم العثور عليها",
-  "app-section-main": "رئيسي",
-  "app-section-info": "معلومات",
-  "app-section-library": "مكتبة",
-  "app-section-web": "الويب",
-  "app-section-news": "أخبار",
-  "app-section-news-general": "عام",
-  "app-section-social": "اجتماعي",
-  "app-section-news-tech": "تقنية",
-  "app-section-society-jobs": "وظائف",
-  "app-section-location": "موقع",
-  "app-section-location-geography": "جغرافية",
-  "app-section-location-demography": "الديموغرافيا",
-  "app-section-location-ecology": "علم البيئة",
-  "app-section-location-travel": "يسافر",
-  "app-section-location-weather": "طقس",
-  "app-section-location-real-estate": "العقارات",
   "app-menu-actions": "أجراءات",
   "app-menu-background-audio": "صوتي",
   "app-menu-background-midi": "ميدي",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "ملء الشاشة تبديل",
   "app-menu-bookmark-actions": "إجراءات اختيار الإشارة المرجعية",
   "app-menu-bookmark-actions-reasoning": "منطق",
-  "app-guide-bookmark-teach-topics": "علمني",
-  "app-guide-bookmark-quiz-topics": "اختبرني",
-  "app-guide-bookmark-related-topics": "مواضيع ذات صلة",
-  "app-guide-bookmark-topic-differences": "اختلافات",
-  "app-guide-bookmark-commonalities": "القواسم المشتركة",
-  "app-guide-bookmark-similarities": "التشابه",
-  "app-guide-bookmark-implications": "تداعيات",
-  "app-guide-bookmark-history": "تاريخ",
   "app-menu-import-as": "استيراد الإشارات المرجعية",
   "app-menu-export-as": "تصدير الإشارات المرجعية",
   "app-menu-bookmark-actions-media": "وسائط",
+  "app-menu-upload-json": "رفع",
+  "app-menu-bookmark-current-view": "المرجعية العرض الحالي",
   "app-menu-visual-search": "البحث البصري",
   "app-menu-reading-assistance": "المساعدة في القراءة",
   "app-menu-bread": "بداية الكلمة بالخط العريض",
   "app-menu-ai-tutor": "مدرس الذكاء الاصطناعي",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "المرجعية العرض الحالي",
+  "app-menu-datasources": "مصادر البيانات",
   "app-menu-clone-tab": "علامة التبويب استنساخ",
   "app-menu-plant-identification": "تحديد النبات",
   "app-menu-text-identification": "تحديد النص",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "تبديل الشريط الجانبي",
   "app-menu-add-bookmark": "اضافة للمفضلة",
   "app-menu-note-1": "الملاحظة 1: متاحة فقط عندما يكون التركيز على الشريط الجانبي أو جزء مقالة ويكيبيديا.",
+  "app-menu-features": "سمات",
+  "app-menu-persona": "شخصية",
+  "app-menu-country-select": "دولة",
+  "app-menu-interests": "الإهتمامات",
+  "app-menu-nature-location-quiz": "مسابقة موقع الطبيعة",
+  "app-menu-command-editor": "محرر الأوامر",
+  "app-menu-presentation": "عرض تقديمي",
+  "app-menu-editor": "محرر",
+  "app-menu-run-code": "يجري",
+  "app-menu-clear-editor": "واضح",
+  "app-menu-cover-topic": "موضوع الغلاف",
+  "app-menu-news": "أخبار",
+  "app-menu-culture": "ثقافة",
+  "app-menu-nature": "طبيعة",
+  "app-menu-license": "رخصة",
+  "app-menu-goto-next-topic": "انتقل إلى الموضوع التالي (في نتائج الشريط الجانبي)",
+  "app-menu-goto-previous-topic": "انتقل إلى الموضوع السابق (في نتائج الشريط الجانبي)",
+  "app-menu-goto-next-pane": "انتقل إلى الجزء التالي",
+  "app-menu-goto-previous-pane": "انتقل إلى الجزء السابق",
+  "app-menu-new-search": "بحث جديد",
+  "app-menu-structured-search": "بحث منظم",
+  "app-menu-geo-search": "البحث الجغرافي",
+  "app-section-main": "رئيسي",
+  "app-section-info": "معلومات",
+  "app-section-library": "مكتبة",
+  "app-section-web": "الويب",
+  "app-section-news": "أخبار",
+  "app-section-news-general": "عام",
+  "app-section-social": "اجتماعي",
+  "app-section-news-tech": "تقنية",
+  "app-section-society-jobs": "وظائف",
+  "app-section-location": "موقع",
+  "app-section-location-geography": "جغرافية",
+  "app-section-location-demography": "الديموغرافيا",
+  "app-section-location-ecology": "علم البيئة",
+  "app-section-location-travel": "يسافر",
+  "app-section-location-weather": "طقس",
+  "app-section-location-real-estate": "العقارات",
   "app-section-business": "عمل",
   "app-section-government": "حكومة",
   "app-section-government-general": "عام",
@@ -132,6 +132,7 @@
   "app-section-library-general": "عام",
   "app-section-library-manuscripts": "المخطوطات",
   "app-section-library-history": "تاريخ",
+  "app-section-library-philosophy": "فلسفة",
   "app-section-library-genealogy": "علم الأنساب",
   "app-section-library-legal": "قانوني",
   "app-section-library-products": "منتجات",
@@ -144,19 +145,31 @@
   "app-section-society": "مجتمع",
   "app-section-society-sports": "رياضات",
   "app-section-society-food": "طعام",
-  "app-section-library-philosophy": "فلسفة",
   "app-section-library-religion": "دِين",
   "app-section-library-poetry": "شِعر",
   "app-section-library-identity": "هوية",
   "app-section-society-events": "الأحداث",
-  "app-guide-welcome-text": "Conzept هي محاولة لإنشاء موسوعة للقرن الحادي والعشرين.  <br><br> استمتع بالاستكشافات الخاصة بك! ",
   "app-section-society-shopping": "التسوق",
-  "app-notification-too-few-compare-topics": "قم أولاً بإضافة موضوعين أو أكثر إلى المقارنة، باستخدام الزر (الموجود أعلى مقالة ويكيبيديا وفي القسم التعريفي للموضوع)",
-  "app-menu-goto-next-topic": "انتقل إلى الموضوع التالي (في نتائج الشريط الجانبي)",
-  "app-menu-goto-previous-topic": "انتقل إلى الموضوع السابق (في نتائج الشريط الجانبي)",
-  "app-menu-goto-next-pane": "انتقل إلى الجزء التالي",
-  "app-menu-goto-previous-pane": "انتقل إلى الجزء السابق",
-  "app-menu-new-search": "بحث جديد",
+  "app-guide-bookmarks-selected": "المحدد",
+  "app-guide-bookmarks-deselect-all": "الغاء تحديد الكل",
+  "app-guide-bookmark-teach-topics": "علمني",
+  "app-guide-bookmark-quiz-topics": "اختبرني",
+  "app-guide-bookmark-related-topics": "مواضيع ذات صلة",
+  "app-guide-bookmark-topic-differences": "اختلافات",
+  "app-guide-bookmark-commonalities": "القواسم المشتركة",
+  "app-guide-bookmark-similarities": "التشابه",
+  "app-guide-bookmark-implications": "تداعيات",
+  "app-guide-bookmark-history": "تاريخ",
+  "app-guide-bookmark-gapminder-country-trend": "اتجاه البلاد",
+  "app-guide-see-more": "شاهد المزيد",
+  "app-guide-page": "صفحة",
+  "app-guide-current-events": "الاحداث الحالية",
+  "app-guide-topic": "عنوان",
+  "app-guide-artwork": "تلوين",
+  "app-guide-organism": "كائن حي",
+  "app-guide-music": "موسيقى",
+  "app-guide-science": "علوم",
+  "app-guide-welcome-text": "Conzept هي محاولة لإنشاء موسوعة للقرن الحادي والعشرين.  <br><br> استمتع بالاستكشافات الخاصة بك! ",
   "app-guide-documentary": "وثائقي",
   "app-guide-country": "دولة",
   "app-guide-string-search": "بحث سلسلة",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "بكتيريا",
   "app-guide-virus": "فايروس",
   "app-guide-featured-article": "مقال متميز",
-  "app-menu-cover-topic": "موضوع الغلاف",
-  "app-menu-news": "أخبار",
-  "app-menu-culture": "ثقافة",
-  "app-menu-nature": "طبيعة",
-  "app-menu-license": "رخصة",
   "app-guide-help": "يساعد",
   "app-guide-sea": "بحر",
   "app-guide-continent": "القارة",
@@ -192,7 +200,7 @@
   "app-guide-atom": "ذرة",
   "app-guide-protist": "بروتيست",
   "app-guide-country-map": "خريطة البلد",
-  "app-guide-capital": "الكابيتول",
+  "app-guide-capital": "عاصمة",
   "app-guide-form-of-government": "شكل من الحكومة.",
   "app-guide-religion": "دِين",
   "app-guide-period": "فترة",
@@ -215,25 +223,20 @@
   "app-guide-dish": "طبق",
   "app-guide-cell-type": "نوع من الخلايا",
   "app-guide-archae": "العتائق",
-  "app-menu-persona": "شخصية",
   "app-guide-featured-portal": "بوابة مميزة",
   "app-guide-musical-instrument": "أداة",
   "app-guide-technology": "تكنولوجيا",
   "app-guide-near-me": "بالقرب مني",
+  "app-guide-news-gdelt": "جيدلت",
   "app-guide-newspapers": "الصحف",
+  "app-guide-radio-map": "خريطة الراديو",
   "app-guide-news-radio": "مذياع",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "البث التلفزيوني المباشر",
   "app-guide-news-tv": "تلفزيون",
   "app-guide-news-economic-indicators": "المؤشرات الاقتصادية",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "اتجاهات التنمية",
+  "app-guide-conflict-map": "خريطة الصراع",
   "app-guide-ongoing-conflicts": "الصراعات",
   "app-guide-radio": "مذياع",
-  "app-menu-country-select": "دولة",
-  "app-menu-interests": "الإهتمامات",
-  "app-menu-command-editor": "محرر الأوامر",
-  "app-menu-presentation": "عرض تقديمي",
-  "app-menu-editor": "محرر",
-  "app-menu-run-code": "يجري",
-  "app-menu-clear-editor": "واضح",
   "app-foo": "فو بار باز"
 }
