--- a/app/explore2/assets/i18n/ui/conzept-ca.json
+++ b/app/explore2/assets/i18n/ui/conzept-ca.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "configuracions",
   "app-tab-help-title": "ajuda",
   "app-tab-audio-chat-title": "xat d'àudio",
+  "app-notification-too-few-compare-topics": "Primer afegiu dos o més temes a la comparació, utilitzant el botó (situat a la part superior de l'article de la Viquipèdia i a la meta-secció del tema)",
   "app-search-placeholder": "cerca",
-  "app-structured-search-title": "cerca estructurada",
+  "app-topics-found": "temes trobats",
   "app-title-occurence": "Mapa d'ocurrència",
   "app-title-super": "súper",
   "app-title-sub": "sub",
   "app-title-pages": "pàgines",
   "app-title-citations": "Citacions",
-  "app-guide-see-more": "veure més",
-  "app-guide-page": "pàgina",
-  "app-guide-current-events": "esdeveniments actuals",
-  "app-guide-topic": "tema",
-  "app-guide-artwork": "pintura",
-  "app-guide-organism": "organisme",
-  "app-guide-music": "música",
-  "app-guide-science": "ciència",
-  "app-topics-found": "temes trobats",
-  "app-section-main": "principal",
-  "app-section-info": "informació",
-  "app-section-library": "biblioteca",
-  "app-section-web": "web",
-  "app-section-news": "Notícies",
-  "app-section-news-general": "general",
-  "app-section-social": "socials",
-  "app-section-news-tech": "tecnologia",
-  "app-section-society-jobs": "llocs de treball",
-  "app-section-location": "ubicació",
-  "app-section-location-geography": "geografia",
-  "app-section-location-demography": "demografia",
-  "app-section-location-ecology": "ecologia",
-  "app-section-location-travel": "viatjar",
-  "app-section-location-weather": "el temps",
-  "app-section-location-real-estate": "estat real",
   "app-menu-actions": "accions",
   "app-menu-background-audio": "àudio",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "commuta la pantalla completa",
   "app-menu-bookmark-actions": "accions de selecció de marcadors",
   "app-menu-bookmark-actions-reasoning": "raonament",
-  "app-guide-bookmark-teach-topics": "Ensenya'm",
-  "app-guide-bookmark-quiz-topics": "qüestiona'm",
-  "app-guide-bookmark-related-topics": "temes relacionats",
-  "app-guide-bookmark-topic-differences": "diferències",
-  "app-guide-bookmark-commonalities": "aspectes comuns",
-  "app-guide-bookmark-similarities": "semblances",
-  "app-guide-bookmark-implications": "implicacions",
-  "app-guide-bookmark-history": "història",
   "app-menu-import-as": "importar adreces d'interès",
   "app-menu-export-as": "exportar adreces d'interès",
   "app-menu-bookmark-actions-media": "mitjans de comunicació",
+  "app-menu-upload-json": "carregar",
+  "app-menu-bookmark-current-view": "marca la vista actual",
   "app-menu-visual-search": "cerca visual",
   "app-menu-reading-assistance": "ajuda a la lectura",
   "app-menu-bread": "inici de paraula en negreta",
   "app-menu-ai-tutor": "Tutor d'IA",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "marca la vista actual",
+  "app-menu-datasources": "fonts de dades",
   "app-menu-clone-tab": "pestanya de clonació",
   "app-menu-plant-identification": "identificació de plantes",
   "app-menu-text-identification": "identificació del text",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "alterna la barra lateral",
   "app-menu-add-bookmark": "afegir Punt de llibre",
   "app-menu-note-1": "nota 1: només disponible quan el focus es troba a la barra lateral o al panell d'articles de la Viquipèdia.",
+  "app-menu-features": "característiques",
+  "app-menu-persona": "persona",
+  "app-menu-country-select": "país",
+  "app-menu-interests": "interessos",
+  "app-menu-nature-location-quiz": "qüestionari d'ubicació de la natura",
+  "app-menu-command-editor": "editor d'ordres",
+  "app-menu-presentation": "presentació",
+  "app-menu-editor": "editor",
+  "app-menu-run-code": "correr",
+  "app-menu-clear-editor": "clar",
+  "app-menu-cover-topic": "tema de portada",
+  "app-menu-news": "Notícies",
+  "app-menu-culture": "cultura",
+  "app-menu-nature": "naturalesa",
+  "app-menu-license": "llicència",
+  "app-menu-goto-next-topic": "aneu al tema següent (a la barra lateral de resultats)",
+  "app-menu-goto-previous-topic": "anar al tema anterior (a la barra lateral de resultats)",
+  "app-menu-goto-next-pane": "aneu al panell següent",
+  "app-menu-goto-previous-pane": "aneu al panell anterior",
+  "app-menu-new-search": "nova cerca",
+  "app-menu-structured-search": "cerca estructurada",
+  "app-menu-geo-search": "cerca geogràfica",
+  "app-section-main": "principal",
+  "app-section-info": "informació",
+  "app-section-library": "biblioteca",
+  "app-section-web": "web",
+  "app-section-news": "Notícies",
+  "app-section-news-general": "general",
+  "app-section-social": "socials",
+  "app-section-news-tech": "tecnologia",
+  "app-section-society-jobs": "llocs de treball",
+  "app-section-location": "ubicació",
+  "app-section-location-geography": "geografia",
+  "app-section-location-demography": "demografia",
+  "app-section-location-ecology": "ecologia",
+  "app-section-location-travel": "viatjar",
+  "app-section-location-weather": "el temps",
+  "app-section-location-real-estate": "estat real",
   "app-section-business": "negocis",
   "app-section-government": "govern",
   "app-section-government-general": "general",
@@ -132,6 +132,7 @@
   "app-section-library-general": "general",
   "app-section-library-manuscripts": "manuscrits",
   "app-section-library-history": "història",
+  "app-section-library-philosophy": "filosofia",
   "app-section-library-genealogy": "genealogia",
   "app-section-library-legal": "legal",
   "app-section-library-products": "productes",
@@ -144,19 +145,31 @@
   "app-section-society": "societat",
   "app-section-society-sports": "esports",
   "app-section-society-food": "menjar",
-  "app-section-library-philosophy": "filosofia",
   "app-section-library-religion": "religió",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identitat",
   "app-section-society-events": "esdeveniments",
-  "app-guide-welcome-text": "Conzept és un intent de crear una enciclopèdia per al segle XXI.  <br><br> Gaudeix de les teves exploracions! ",
   "app-section-society-shopping": "compres",
-  "app-notification-too-few-compare-topics": "Primer afegiu dos o més temes a la comparació, utilitzant el botó (situat a la part superior de l'article de la Viquipèdia i a la meta-secció del tema)",
-  "app-menu-goto-next-topic": "aneu al tema següent (a la barra lateral de resultats)",
-  "app-menu-goto-previous-topic": "anar al tema anterior (a la barra lateral de resultats)",
-  "app-menu-goto-next-pane": "aneu al panell següent",
-  "app-menu-goto-previous-pane": "aneu al panell anterior",
-  "app-menu-new-search": "nova cerca",
+  "app-guide-bookmarks-selected": "seleccionat",
+  "app-guide-bookmarks-deselect-all": "deseleccionar tot",
+  "app-guide-bookmark-teach-topics": "Ensenya'm",
+  "app-guide-bookmark-quiz-topics": "qüestiona'm",
+  "app-guide-bookmark-related-topics": "temes relacionats",
+  "app-guide-bookmark-topic-differences": "diferències",
+  "app-guide-bookmark-commonalities": "aspectes comuns",
+  "app-guide-bookmark-similarities": "semblances",
+  "app-guide-bookmark-implications": "implicacions",
+  "app-guide-bookmark-history": "història",
+  "app-guide-bookmark-gapminder-country-trend": "tendència del país",
+  "app-guide-see-more": "veure més",
+  "app-guide-page": "pàgina",
+  "app-guide-current-events": "esdeveniments actuals",
+  "app-guide-topic": "tema",
+  "app-guide-artwork": "pintura",
+  "app-guide-organism": "organisme",
+  "app-guide-music": "música",
+  "app-guide-science": "ciència",
+  "app-guide-welcome-text": "Conzept és un intent de crear una enciclopèdia per al segle XXI.  <br><br> Gaudeix de les teves exploracions! ",
   "app-guide-documentary": "documental",
   "app-guide-country": "país",
   "app-guide-string-search": "cerca de cadenes",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bacteri",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "article destacat",
-  "app-menu-cover-topic": "tema de portada",
-  "app-menu-news": "Notícies",
-  "app-menu-culture": "cultura",
-  "app-menu-nature": "naturalesa",
-  "app-menu-license": "llicència",
   "app-guide-help": "ajuda",
   "app-guide-sea": "mar",
   "app-guide-continent": "continent",
@@ -192,7 +200,7 @@
   "app-guide-atom": "àtom",
   "app-guide-protist": "protista",
   "app-guide-country-map": "mapa del país",
-  "app-guide-capital": "capitoli",
+  "app-guide-capital": "capital",
   "app-guide-form-of-government": "forma de govern.",
   "app-guide-religion": "religió",
   "app-guide-period": "període",
@@ -215,25 +223,20 @@
   "app-guide-dish": "plat",
   "app-guide-cell-type": "tipus cel·lular",
   "app-guide-archae": "arqueo",
-  "app-menu-persona": "persona",
   "app-guide-featured-portal": "portal destacat",
   "app-guide-musical-instrument": "instrument",
   "app-guide-technology": "tecnologia",
   "app-guide-near-me": "a prop meu",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "diaris",
+  "app-guide-radio-map": "mapa de ràdio",
   "app-guide-news-radio": "ràdio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "televisió en directe",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "indicadors econòmics",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "tendències de desenvolupament",
+  "app-guide-conflict-map": "mapa de conflictes",
   "app-guide-ongoing-conflicts": "conflictes",
   "app-guide-radio": "ràdio",
-  "app-menu-country-select": "país",
-  "app-menu-interests": "interessos",
-  "app-menu-command-editor": "editor d'ordres",
-  "app-menu-presentation": "presentació",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "correr",
-  "app-menu-clear-editor": "clar",
   "app-foo": "foo bar baz"
 }
