--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "mga setting",
   "app-tab-help-title": "tabang",
   "app-tab-audio-chat-title": "audio chat",
+  "app-notification-too-few-compare-topics": "Pagdugang una og duha o daghan pa nga mga hilisgutan sa pagtandi, gamit ang buton (naa sa ibabaw sa Wikipedia-artikulo ug sa meta-seksyon sa hilisgutan)",
   "app-search-placeholder": "pangitaa",
-  "app-structured-search-title": "structured nga pagpangita",
+  "app-topics-found": "mga hilisgutan nga nakit-an",
   "app-title-occurence": "Mapa sa panghitabo",
   "app-title-super": "super",
   "app-title-sub": "sub",
   "app-title-pages": "mga panid",
   "app-title-citations": "Mga kinutlo",
-  "app-guide-see-more": "tan-awa pa",
-  "app-guide-page": "panid",
-  "app-guide-current-events": "kasamtangan nga mga panghitabo",
-  "app-guide-topic": "hilisgutan",
-  "app-guide-artwork": "pagpintal",
-  "app-guide-organism": "organismo",
-  "app-guide-music": "musika",
-  "app-guide-science": "siyensya",
-  "app-topics-found": "mga hilisgutan nga nakit-an",
-  "app-section-main": "nag-una",
-  "app-section-info": "impormasyon",
-  "app-section-library": "librarya",
-  "app-section-web": "web",
-  "app-section-news": "balita",
-  "app-section-news-general": "heneral",
-  "app-section-social": "sosyal",
-  "app-section-news-tech": "tech",
-  "app-section-society-jobs": "mga trabaho",
-  "app-section-location": "lokasyon",
-  "app-section-location-geography": "geograpiya",
-  "app-section-location-demography": "demograpiya",
-  "app-section-location-ecology": "ekolohiya",
-  "app-section-location-travel": "pagbiyahe",
-  "app-section-location-weather": "panahon",
-  "app-section-location-real-estate": "real estate",
   "app-menu-actions": "mga aksyon",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "i-toggle ang fullscreen",
   "app-menu-bookmark-actions": "mga aksyon sa pagpili sa bookmark",
   "app-menu-bookmark-actions-reasoning": "pangatarungan",
-  "app-guide-bookmark-teach-topics": "tudloi ko",
-  "app-guide-bookmark-quiz-topics": "quiz nako",
-  "app-guide-bookmark-related-topics": "may kalabutan nga mga hilisgutan",
-  "app-guide-bookmark-topic-differences": "mga kalainan",
-  "app-guide-bookmark-commonalities": "komonidad",
-  "app-guide-bookmark-similarities": "pagkaparehas",
-  "app-guide-bookmark-implications": "mga implikasyon",
-  "app-guide-bookmark-history": "kasaysayan",
   "app-menu-import-as": "import nga mga bookmark",
   "app-menu-export-as": "i-eksport ang mga bookmark",
   "app-menu-bookmark-actions-media": "media",
+  "app-menu-upload-json": "upload",
+  "app-menu-bookmark-current-view": "bookmark karon nga pagtan-aw",
   "app-menu-visual-search": "biswal nga pagpangita",
   "app-menu-reading-assistance": "tabang sa pagbasa",
   "app-menu-bread": "pulong-pagsugod bolding",
   "app-menu-ai-tutor": "AI tutor",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "bookmark karon nga pagtan-aw",
+  "app-menu-datasources": "mga tinubdan sa datos",
   "app-menu-clone-tab": "clone nga tab",
   "app-menu-plant-identification": "pag-ila sa tanom",
   "app-menu-text-identification": "pag-ila sa teksto",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "i-toggle ang sidebar",
   "app-menu-add-bookmark": "idugang ang bookmark",
   "app-menu-note-1": "nota 1: magamit lang kung ang focus kay naa sa sidebar o sa pane sa artikulo sa Wikipedia.",
+  "app-menu-features": "mga bahin",
+  "app-menu-persona": "persona",
+  "app-menu-country-select": "nasud",
+  "app-menu-interests": "interes",
+  "app-menu-nature-location-quiz": "quiz sa lokasyon sa kinaiyahan",
+  "app-menu-command-editor": "command editor",
+  "app-menu-presentation": "presentasyon",
+  "app-menu-editor": "editor",
+  "app-menu-run-code": "dagan",
+  "app-menu-clear-editor": "klaro",
+  "app-menu-cover-topic": "tabon nga topiko",
+  "app-menu-news": "balita",
+  "app-menu-culture": "kultura",
+  "app-menu-nature": "kinaiyahan",
+  "app-menu-license": "lisensya",
+  "app-menu-goto-next-topic": "adto sa sunod nga topiko (sa resulta sa sidebar)",
+  "app-menu-goto-previous-topic": "adto sa miaging hilisgutan (sa mga resulta sa sidebar)",
+  "app-menu-goto-next-pane": "adto sa sunod nga pane",
+  "app-menu-goto-previous-pane": "adto sa miaging pane",
+  "app-menu-new-search": "bag-ong pagpangita",
+  "app-menu-structured-search": "structured nga pagpangita",
+  "app-menu-geo-search": "pagpangita sa geo",
+  "app-section-main": "nag-una",
+  "app-section-info": "impormasyon",
+  "app-section-library": "librarya",
+  "app-section-web": "web",
+  "app-section-news": "balita",
+  "app-section-news-general": "heneral",
+  "app-section-social": "sosyal",
+  "app-section-news-tech": "tech",
+  "app-section-society-jobs": "mga trabaho",
+  "app-section-location": "lokasyon",
+  "app-section-location-geography": "geograpiya",
+  "app-section-location-demography": "demograpiya",
+  "app-section-location-ecology": "ekolohiya",
+  "app-section-location-travel": "pagbiyahe",
+  "app-section-location-weather": "panahon",
+  "app-section-location-real-estate": "real estate",
   "app-section-business": "negosyo",
   "app-section-government": "gobyerno",
   "app-section-government-general": "heneral",
@@ -132,6 +132,7 @@
   "app-section-library-general": "heneral",
   "app-section-library-manuscripts": "mga manuskrito",
   "app-section-library-history": "kasaysayan",
+  "app-section-library-philosophy": "pilosopiya",
   "app-section-library-genealogy": "genealogy",
   "app-section-library-legal": "legal",
   "app-section-library-products": "mga produkto",
@@ -144,19 +145,31 @@
   "app-section-society": "katilingban",
   "app-section-society-sports": "sports",
   "app-section-society-food": "pagkaon",
-  "app-section-library-philosophy": "pilosopiya",
   "app-section-library-religion": "relihiyon",
   "app-section-library-poetry": "balak",
   "app-section-library-identity": "pagkatawo",
   "app-section-society-events": "mga panghitabo",
-  "app-guide-welcome-text": "Ang Conzept usa ka pagsulay sa paghimo og ensiklopedia para sa ika-21 nga siglo.  <br><br> Malingaw sa imong mga eksplorasyon! ",
   "app-section-society-shopping": "pagpamalit",
-  "app-notification-too-few-compare-topics": "Pagdugang una og duha o daghan pa nga mga hilisgutan sa pagtandi, gamit ang buton (naa sa ibabaw sa Wikipedia-artikulo ug sa meta-seksyon sa hilisgutan)",
-  "app-menu-goto-next-topic": "adto sa sunod nga topiko (sa resulta sa sidebar)",
-  "app-menu-goto-previous-topic": "adto sa miaging hilisgutan (sa mga resulta sa sidebar)",
-  "app-menu-goto-next-pane": "adto sa sunod nga pane",
-  "app-menu-goto-previous-pane": "adto sa miaging pane",
-  "app-menu-new-search": "bag-ong pagpangita",
+  "app-guide-bookmarks-selected": "gipili",
+  "app-guide-bookmarks-deselect-all": "buwagi ang tanan",
+  "app-guide-bookmark-teach-topics": "tudloi ko",
+  "app-guide-bookmark-quiz-topics": "quiz nako",
+  "app-guide-bookmark-related-topics": "may kalabutan nga mga hilisgutan",
+  "app-guide-bookmark-topic-differences": "mga kalainan",
+  "app-guide-bookmark-commonalities": "komonidad",
+  "app-guide-bookmark-similarities": "pagkaparehas",
+  "app-guide-bookmark-implications": "mga implikasyon",
+  "app-guide-bookmark-history": "kasaysayan",
+  "app-guide-bookmark-gapminder-country-trend": "uso sa nasud",
+  "app-guide-see-more": "tan-awa pa",
+  "app-guide-page": "panid",
+  "app-guide-current-events": "kasamtangan nga mga panghitabo",
+  "app-guide-topic": "hilisgutan",
+  "app-guide-artwork": "pagpintal",
+  "app-guide-organism": "organismo",
+  "app-guide-music": "musika",
+  "app-guide-science": "siyensya",
+  "app-guide-welcome-text": "Ang Conzept usa ka pagsulay sa paghimo og ensiklopedia para sa ika-21 nga siglo.  <br><br> Malingaw sa imong mga eksplorasyon! ",
   "app-guide-documentary": "dokumentaryo",
   "app-guide-country": "nasud",
   "app-guide-string-search": "pagpangita sa string",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bakterya",
   "app-guide-virus": "mga bayrus",
   "app-guide-featured-article": "featured nga artikulo",
-  "app-menu-cover-topic": "tabon nga topiko",
-  "app-menu-news": "balita",
-  "app-menu-culture": "kultura",
-  "app-menu-nature": "kinaiyahan",
-  "app-menu-license": "lisensya",
   "app-guide-help": "tabang",
   "app-guide-sea": "dagat",
   "app-guide-continent": "kontinente",
@@ -192,7 +200,7 @@
   "app-guide-atom": "atomo",
   "app-guide-protist": "protista",
   "app-guide-country-map": "mapa sa nasud",
-  "app-guide-capital": "kapitolyo",
+  "app-guide-capital": "kapital",
   "app-guide-form-of-government": "porma sa gov.",
   "app-guide-religion": "relihiyon",
   "app-guide-period": "panahon",
@@ -215,25 +223,20 @@
   "app-guide-dish": "pinggan",
   "app-guide-cell-type": "tipo sa selula",
   "app-guide-archae": "archae",
-  "app-menu-persona": "persona",
   "app-guide-featured-portal": "gipakita nga portal",
   "app-guide-musical-instrument": "instrumento",
   "app-guide-technology": "teknolohiya",
   "app-guide-near-me": "duol nako",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "mga mantalaan",
+  "app-guide-radio-map": "mapa sa radyo",
   "app-guide-news-radio": "radyo",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "live nga TV",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "mga timailhan sa ekonomiya",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "mga uso sa pag-uswag",
+  "app-guide-conflict-map": "mapa sa panagbangi",
   "app-guide-ongoing-conflicts": "mga panagsumpaki",
   "app-guide-radio": "radyo",
-  "app-menu-country-select": "nasud",
-  "app-menu-interests": "interes",
-  "app-menu-command-editor": "command editor",
-  "app-menu-presentation": "presentasyon",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "dagan",
-  "app-menu-clear-editor": "klaro",
   "app-foo": "foo bar baz"
 }
