--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "nastavení",
   "app-tab-help-title": "Pomoc",
   "app-tab-audio-chat-title": "audio chat",
+  "app-notification-too-few-compare-topics": "Nejprve přidejte do srovnání dvě nebo více témat pomocí tlačítka (umístěného v horní části článku Wikipedie a v metasekci tématu)",
   "app-search-placeholder": "Vyhledávání",
-  "app-structured-search-title": "strukturované vyhledávání",
+  "app-topics-found": "nalezená témata",
   "app-title-occurence": "Mapa výskytu",
   "app-title-super": "super",
   "app-title-sub": "sub",
   "app-title-pages": "stránky",
   "app-title-citations": "Citace",
-  "app-guide-see-more": "vidět víc",
-  "app-guide-page": "strana",
-  "app-guide-current-events": "aktuální události",
-  "app-guide-topic": "téma",
-  "app-guide-artwork": "malování",
-  "app-guide-organism": "organismus",
-  "app-guide-music": "hudba",
-  "app-guide-science": "Věda",
-  "app-topics-found": "nalezená témata",
-  "app-section-main": "hlavní",
-  "app-section-info": "info",
-  "app-section-library": "knihovna",
-  "app-section-web": "web",
-  "app-section-news": "zprávy",
-  "app-section-news-general": "Všeobecné",
-  "app-section-social": "sociální",
-  "app-section-news-tech": "tech",
-  "app-section-society-jobs": "pracovní místa",
-  "app-section-location": "umístění",
-  "app-section-location-geography": "zeměpis",
-  "app-section-location-demography": "demografie",
-  "app-section-location-ecology": "ekologie",
-  "app-section-location-travel": "cestovat",
-  "app-section-location-weather": "počasí",
-  "app-section-location-real-estate": "nemovitost",
   "app-menu-actions": "akce",
   "app-menu-background-audio": "Zvuk",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "přepnout na celou obrazovku",
   "app-menu-bookmark-actions": "akce výběru záložek",
   "app-menu-bookmark-actions-reasoning": "uvažování",
-  "app-guide-bookmark-teach-topics": "uč mě",
-  "app-guide-bookmark-quiz-topics": "otestuj mě",
-  "app-guide-bookmark-related-topics": "související témata",
-  "app-guide-bookmark-topic-differences": "rozdíly",
-  "app-guide-bookmark-commonalities": "společné rysy",
-  "app-guide-bookmark-similarities": "podobnosti",
-  "app-guide-bookmark-implications": "Dopady",
-  "app-guide-bookmark-history": "Dějiny",
   "app-menu-import-as": "importovat záložky",
   "app-menu-export-as": "exportovat záložky",
   "app-menu-bookmark-actions-media": "média",
+  "app-menu-upload-json": "nahrát",
+  "app-menu-bookmark-current-view": "uložit aktuální pohled do záložek",
   "app-menu-visual-search": "vizuální vyhledávání",
   "app-menu-reading-assistance": "pomoc při čtení",
   "app-menu-bread": "tučné písmo na začátku slova",
   "app-menu-ai-tutor": "učitel AI",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "uložit aktuální pohled do záložek",
+  "app-menu-datasources": "zdroje dat",
   "app-menu-clone-tab": "karta klon",
   "app-menu-plant-identification": "identifikace rostlin",
   "app-menu-text-identification": "textová identifikace",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "přepnout postranní panel",
   "app-menu-add-bookmark": "přidat záložku",
   "app-menu-note-1": "poznámka 1: k dispozici pouze tehdy, když je fokus na postranním panelu nebo v podokně článků Wikipedie.",
+  "app-menu-features": "funkce",
+  "app-menu-persona": "persona",
+  "app-menu-country-select": "země",
+  "app-menu-interests": "zájmy",
+  "app-menu-nature-location-quiz": "kvíz o poloze v přírodě",
+  "app-menu-command-editor": "příkazový editor",
+  "app-menu-presentation": "prezentace",
+  "app-menu-editor": "editor",
+  "app-menu-run-code": "běh",
+  "app-menu-clear-editor": "Průhledná",
+  "app-menu-cover-topic": "krycí téma",
+  "app-menu-news": "zprávy",
+  "app-menu-culture": "kultura",
+  "app-menu-nature": "Příroda",
+  "app-menu-license": "licence",
+  "app-menu-goto-next-topic": "přejít na další téma (ve výsledcích postranního panelu)",
+  "app-menu-goto-previous-topic": "přejít na předchozí téma (ve výsledcích postranního panelu)",
+  "app-menu-goto-next-pane": "přejděte na další panel",
+  "app-menu-goto-previous-pane": "přejděte na předchozí panel",
+  "app-menu-new-search": "nové hledání",
+  "app-menu-structured-search": "strukturované vyhledávání",
+  "app-menu-geo-search": "geografické vyhledávání",
+  "app-section-main": "hlavní",
+  "app-section-info": "info",
+  "app-section-library": "knihovna",
+  "app-section-web": "web",
+  "app-section-news": "zprávy",
+  "app-section-news-general": "Všeobecné",
+  "app-section-social": "sociální",
+  "app-section-news-tech": "tech",
+  "app-section-society-jobs": "pracovní místa",
+  "app-section-location": "umístění",
+  "app-section-location-geography": "zeměpis",
+  "app-section-location-demography": "demografie",
+  "app-section-location-ecology": "ekologie",
+  "app-section-location-travel": "cestovat",
+  "app-section-location-weather": "počasí",
+  "app-section-location-real-estate": "nemovitost",
   "app-section-business": "podnikání",
   "app-section-government": "vláda",
   "app-section-government-general": "Všeobecné",
@@ -132,6 +132,7 @@
   "app-section-library-general": "Všeobecné",
   "app-section-library-manuscripts": "rukopisy",
   "app-section-library-history": "Dějiny",
+  "app-section-library-philosophy": "filozofie",
   "app-section-library-genealogy": "genealogie",
   "app-section-library-legal": "právní",
   "app-section-library-products": "produkty",
@@ -144,19 +145,31 @@
   "app-section-society": "společnost",
   "app-section-society-sports": "sportovní",
   "app-section-society-food": "jídlo",
-  "app-section-library-philosophy": "filozofie",
   "app-section-library-religion": "náboženství",
   "app-section-library-poetry": "poezie",
   "app-section-library-identity": "identita",
   "app-section-society-events": "Události",
-  "app-guide-welcome-text": "Conzept je pokus o vytvoření encyklopedie pro 21. století.  <br><br> Užijte si své průzkumy! ",
   "app-section-society-shopping": "nakupování",
-  "app-notification-too-few-compare-topics": "Nejprve přidejte do srovnání dvě nebo více témat pomocí tlačítka (umístěného v horní části článku Wikipedie a v metasekci tématu)",
-  "app-menu-goto-next-topic": "přejít na další téma (ve výsledcích postranního panelu)",
-  "app-menu-goto-previous-topic": "přejít na předchozí téma (ve výsledcích postranního panelu)",
-  "app-menu-goto-next-pane": "přejděte na další panel",
-  "app-menu-goto-previous-pane": "přejděte na předchozí panel",
-  "app-menu-new-search": "nové hledání",
+  "app-guide-bookmarks-selected": "vybraný",
+  "app-guide-bookmarks-deselect-all": "Odznačit vše",
+  "app-guide-bookmark-teach-topics": "uč mě",
+  "app-guide-bookmark-quiz-topics": "otestuj mě",
+  "app-guide-bookmark-related-topics": "související témata",
+  "app-guide-bookmark-topic-differences": "rozdíly",
+  "app-guide-bookmark-commonalities": "společné rysy",
+  "app-guide-bookmark-similarities": "podobnosti",
+  "app-guide-bookmark-implications": "Dopady",
+  "app-guide-bookmark-history": "Dějiny",
+  "app-guide-bookmark-gapminder-country-trend": "trend země",
+  "app-guide-see-more": "vidět víc",
+  "app-guide-page": "strana",
+  "app-guide-current-events": "aktuální události",
+  "app-guide-topic": "téma",
+  "app-guide-artwork": "malování",
+  "app-guide-organism": "organismus",
+  "app-guide-music": "hudba",
+  "app-guide-science": "Věda",
+  "app-guide-welcome-text": "Conzept je pokus o vytvoření encyklopedie pro 21. století.  <br><br> Užijte si své průzkumy! ",
   "app-guide-documentary": "dokumentární",
   "app-guide-country": "země",
   "app-guide-string-search": "hledání řetězce",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bakterie",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "doporučený článek",
-  "app-menu-cover-topic": "krycí téma",
-  "app-menu-news": "zprávy",
-  "app-menu-culture": "kultura",
-  "app-menu-nature": "Příroda",
-  "app-menu-license": "licence",
   "app-guide-help": "Pomoc",
   "app-guide-sea": "moře",
   "app-guide-continent": "kontinent",
@@ -215,25 +223,20 @@
   "app-guide-dish": "jídlo",
   "app-guide-cell-type": "typ buňky",
   "app-guide-archae": "archae",
-  "app-menu-persona": "persona",
   "app-guide-featured-portal": "doporučený portál",
   "app-guide-musical-instrument": "nástroj",
   "app-guide-technology": "technika",
   "app-guide-near-me": "blízko mne",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "noviny",
+  "app-guide-radio-map": "rádiová mapa",
   "app-guide-news-radio": "rádio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "živá TV",
   "app-guide-news-tv": "televize",
   "app-guide-news-economic-indicators": "ekonomické ukazatele",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "vývojové trendy",
+  "app-guide-conflict-map": "konfliktní mapa",
   "app-guide-ongoing-conflicts": "konflikty",
   "app-guide-radio": "rádio",
-  "app-menu-country-select": "země",
-  "app-menu-interests": "zájmy",
-  "app-menu-command-editor": "příkazový editor",
-  "app-menu-presentation": "prezentace",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "běh",
-  "app-menu-clear-editor": "Průhledná",
   "app-foo": "foo bar baz"
 }
