--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -7,7 +7,10 @@
   "app-tab-help-title": "helfen",
   "app-tab-audio-chat-title": "Audio-Chat",
   "app-search-placeholder": "suchen",
-  "app-structured-search-title": "Strukturierte Suche",
+  "app-menu-geo-search": "geo search",
+  "app-menu-features": "features",
+  "app-menu-nature-location-quiz": "nature location quiz",
+  "app-menu-structured-search": "Strukturierte Suche",
   "app-title-occurence": "Vorkommenskarte",
   "app-title-super": "super",
   "app-title-sub": "sub",
@@ -132,6 +135,7 @@
   "app-section-library-general": "allgemein",
   "app-section-library-manuscripts": "Manuskripte",
   "app-section-library-history": "Geschichte",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-genealogy": "Genealogie",
   "app-section-library-legal": "legal",
   "app-section-library-products": "Produkte",
