--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "ajustes",
   "app-tab-help-title": "ayuda",
   "app-tab-audio-chat-title": "charla de audio",
+  "app-notification-too-few-compare-topics": "Primero agregue dos o más temas a la comparación, usando el botón (ubicado en la parte superior del artículo de Wikipedia y en la metasección del tema)",
   "app-search-placeholder": "buscar",
-  "app-structured-search-title": "búsqueda estructurada",
+  "app-topics-found": "temas encontrados",
   "app-title-occurence": "mapa de ocurrencia",
   "app-title-super": "súper",
   "app-title-sub": "sub",
   "app-title-pages": "paginas",
   "app-title-citations": "Citas",
-  "app-guide-see-more": "ver más",
-  "app-guide-page": "página",
-  "app-guide-current-events": "eventos actuales",
-  "app-guide-topic": "tema",
-  "app-guide-artwork": "cuadro",
-  "app-guide-organism": "organismo",
-  "app-guide-music": "música",
-  "app-guide-science": "ciencia",
-  "app-topics-found": "temas encontrados",
-  "app-section-main": "principal",
-  "app-section-info": "información",
-  "app-section-library": "biblioteca",
-  "app-section-web": "web",
-  "app-section-news": "noticias",
-  "app-section-news-general": "general",
-  "app-section-social": "social",
-  "app-section-news-tech": "tecnología",
-  "app-section-society-jobs": "trabajos",
-  "app-section-location": "ubicación",
-  "app-section-location-geography": "geografía",
-  "app-section-location-demography": "demografía",
-  "app-section-location-ecology": "ecología",
-  "app-section-location-travel": "viajar",
-  "app-section-location-weather": "clima",
-  "app-section-location-real-estate": "bienes raíces",
   "app-menu-actions": "comportamiento",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "midi",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "alternar pantalla completa",
   "app-menu-bookmark-actions": "acciones de selección de marcadores",
   "app-menu-bookmark-actions-reasoning": "razonamiento",
-  "app-guide-bookmark-teach-topics": "Enseñame",
-  "app-guide-bookmark-quiz-topics": "pregúntame",
-  "app-guide-bookmark-related-topics": "Temas relacionados",
-  "app-guide-bookmark-topic-differences": "diferencias",
-  "app-guide-bookmark-commonalities": "puntos en común",
-  "app-guide-bookmark-similarities": "similitudes",
-  "app-guide-bookmark-implications": "trascendencia",
-  "app-guide-bookmark-history": "historia",
   "app-menu-import-as": "importar marcadores",
   "app-menu-export-as": "exportar marcadores",
   "app-menu-bookmark-actions-media": "medios de comunicación",
+  "app-menu-upload-json": "subir",
+  "app-menu-bookmark-current-view": "marcar vista actual",
   "app-menu-visual-search": "búsqueda visual",
   "app-menu-reading-assistance": "asistencia de lectura",
   "app-menu-bread": "negrita de inicio de palabra",
   "app-menu-ai-tutor": "tutor de IA",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "marcar vista actual",
+  "app-menu-datasources": "fuentes de datos",
   "app-menu-clone-tab": "pestaña clonar",
   "app-menu-plant-identification": "identificación de plantas",
   "app-menu-text-identification": "identificación de texto",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "alternar la barra lateral",
   "app-menu-add-bookmark": "añadir marcador",
   "app-menu-note-1": "nota 1: solo está disponible cuando el foco está en la barra lateral o en el panel de un artículo de Wikipedia.",
+  "app-menu-features": "características",
+  "app-menu-persona": "persona",
+  "app-menu-country-select": "país",
+  "app-menu-interests": "intereses",
+  "app-menu-nature-location-quiz": "prueba de ubicación de la naturaleza",
+  "app-menu-command-editor": "editor de comandos",
+  "app-menu-presentation": "presentación",
+  "app-menu-editor": "editor",
+  "app-menu-run-code": "correr",
+  "app-menu-clear-editor": "claro",
+  "app-menu-cover-topic": "tema de portada",
+  "app-menu-news": "noticias",
+  "app-menu-culture": "cultura",
+  "app-menu-nature": "naturaleza",
+  "app-menu-license": "licencia",
+  "app-menu-goto-next-topic": "ir al siguiente tema (en los resultados de la barra lateral)",
+  "app-menu-goto-previous-topic": "ir al tema anterior (en los resultados de la barra lateral)",
+  "app-menu-goto-next-pane": "ir al siguiente panel",
+  "app-menu-goto-previous-pane": "ir al panel anterior",
+  "app-menu-new-search": "nueva búsqueda",
+  "app-menu-structured-search": "búsqueda estructurada",
+  "app-menu-geo-search": "búsqueda geográfica",
+  "app-section-main": "principal",
+  "app-section-info": "información",
+  "app-section-library": "biblioteca",
+  "app-section-web": "web",
+  "app-section-news": "noticias",
+  "app-section-news-general": "general",
+  "app-section-social": "social",
+  "app-section-news-tech": "tecnología",
+  "app-section-society-jobs": "trabajos",
+  "app-section-location": "ubicación",
+  "app-section-location-geography": "geografía",
+  "app-section-location-demography": "demografía",
+  "app-section-location-ecology": "ecología",
+  "app-section-location-travel": "viajar",
+  "app-section-location-weather": "clima",
+  "app-section-location-real-estate": "bienes raíces",
   "app-section-business": "negocio",
   "app-section-government": "gobierno",
   "app-section-government-general": "general",
@@ -132,6 +132,7 @@
   "app-section-library-general": "general",
   "app-section-library-manuscripts": "manuscritos",
   "app-section-library-history": "historia",
+  "app-section-library-philosophy": "filosofía",
   "app-section-library-genealogy": "genealogía",
   "app-section-library-legal": "legal",
   "app-section-library-products": "productos",
@@ -142,21 +143,33 @@
   "app-section-media-software": "software",
   "app-section-meta": "meta",
   "app-section-society": "sociedad",
-  "app-section-society-sports": "deportes",
+  "app-section-society-sports": "Deportes",
   "app-section-society-food": "alimento",
-  "app-section-library-philosophy": "filosofía",
   "app-section-library-religion": "religión",
   "app-section-library-poetry": "poesía",
   "app-section-library-identity": "identidad",
   "app-section-society-events": "eventos",
-  "app-guide-welcome-text": "Conzept es un intento de crear una enciclopedia para el siglo XXI.  <br><br> ¡Disfruta de tus exploraciones! ",
   "app-section-society-shopping": "compras",
-  "app-notification-too-few-compare-topics": "Primero agregue dos o más temas a la comparación, usando el botón (ubicado en la parte superior del artículo de Wikipedia y en la metasección del tema)",
-  "app-menu-goto-next-topic": "ir al siguiente tema (en los resultados de la barra lateral)",
-  "app-menu-goto-previous-topic": "ir al tema anterior (en los resultados de la barra lateral)",
-  "app-menu-goto-next-pane": "ir al siguiente panel",
-  "app-menu-goto-previous-pane": "ir al panel anterior",
-  "app-menu-new-search": "nueva búsqueda",
+  "app-guide-bookmarks-selected": "seleccionado",
+  "app-guide-bookmarks-deselect-all": "deseleccionar todo",
+  "app-guide-bookmark-teach-topics": "Enseñame",
+  "app-guide-bookmark-quiz-topics": "pregúntame",
+  "app-guide-bookmark-related-topics": "Temas relacionados",
+  "app-guide-bookmark-topic-differences": "diferencias",
+  "app-guide-bookmark-commonalities": "puntos en común",
+  "app-guide-bookmark-similarities": "similitudes",
+  "app-guide-bookmark-implications": "trascendencia",
+  "app-guide-bookmark-history": "historia",
+  "app-guide-bookmark-gapminder-country-trend": "tendencia del país",
+  "app-guide-see-more": "ver más",
+  "app-guide-page": "página",
+  "app-guide-current-events": "eventos actuales",
+  "app-guide-topic": "tema",
+  "app-guide-artwork": "cuadro",
+  "app-guide-organism": "organismo",
+  "app-guide-music": "música",
+  "app-guide-science": "ciencia",
+  "app-guide-welcome-text": "Conzept es un intento de crear una enciclopedia para el siglo XXI.  <br><br> ¡Disfruta de tus exploraciones! ",
   "app-guide-documentary": "documental",
   "app-guide-country": "país",
   "app-guide-string-search": "búsqueda de cadenas",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bacteria",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "artículo destacado",
-  "app-menu-cover-topic": "tema de portada",
-  "app-menu-news": "noticias",
-  "app-menu-culture": "cultura",
-  "app-menu-nature": "naturaleza",
-  "app-menu-license": "licencia",
   "app-guide-help": "ayuda",
   "app-guide-sea": "mar",
   "app-guide-continent": "continente",
@@ -215,25 +223,20 @@
   "app-guide-dish": "plato",
   "app-guide-cell-type": "tipo de célula",
   "app-guide-archae": "arqueas",
-  "app-menu-persona": "persona",
   "app-guide-featured-portal": "portal destacado",
   "app-guide-musical-instrument": "instrumento",
   "app-guide-technology": "tecnología",
   "app-guide-near-me": "cerca de mí",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "periódicos",
+  "app-guide-radio-map": "mapa de radio",
   "app-guide-news-radio": "radio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "televisión en vivo",
   "app-guide-news-tv": "TELEVISOR",
   "app-guide-news-economic-indicators": "indicadores económicos",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "tendencias de desarrollo",
+  "app-guide-conflict-map": "mapa de conflicto",
   "app-guide-ongoing-conflicts": "conflictos",
   "app-guide-radio": "radio",
-  "app-menu-country-select": "país",
-  "app-menu-interests": "intereses",
-  "app-menu-command-editor": "editor de comandos",
-  "app-menu-presentation": "presentación",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "correr",
-  "app-menu-clear-editor": "claro",
   "app-foo": "foo bar baz"
 }
