--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "تنظیمات",
   "app-tab-help-title": "کمک",
   "app-tab-audio-chat-title": "چت صوتی",
+  "app-notification-too-few-compare-topics": "ابتدا دو یا چند موضوع را با استفاده از دکمه (که در بالای مقاله ویکی‌پدیا و در بخش متا موضوع قرار دارد) به مقایسه اضافه کنید.",
   "app-search-placeholder": "جستجو کردن",
-  "app-structured-search-title": "جستجوی ساخت یافته",
+  "app-topics-found": "موضوعات یافت شده",
   "app-title-occurence": "نقشه وقوع",
   "app-title-super": "فوق العاده",
   "app-title-sub": "زیر",
   "app-title-pages": "صفحات",
   "app-title-citations": "استناد",
-  "app-guide-see-more": "بیشتر ببین",
-  "app-guide-page": "صفحه",
-  "app-guide-current-events": "رویدادهای جاری",
-  "app-guide-topic": "موضوع",
-  "app-guide-artwork": "رنگ آمیزی",
-  "app-guide-organism": "ارگانیسم",
-  "app-guide-music": "موسیقی",
-  "app-guide-science": "علوم پایه",
-  "app-topics-found": "موضوعات یافت شده",
-  "app-section-main": "اصلی",
-  "app-section-info": "اطلاعات",
-  "app-section-library": "کتابخانه",
-  "app-section-web": "وب",
-  "app-section-news": "اخبار",
-  "app-section-news-general": "عمومی",
-  "app-section-social": "اجتماعی",
-  "app-section-news-tech": "فن آوری",
-  "app-section-society-jobs": "شغل ها",
-  "app-section-location": "محل",
-  "app-section-location-geography": "جغرافیا",
-  "app-section-location-demography": "جمعیت شناسی",
-  "app-section-location-ecology": "بوم شناسی",
-  "app-section-location-travel": "مسافرت رفتن",
-  "app-section-location-weather": "آب و هوا",
-  "app-section-location-real-estate": "مشاور املاک",
   "app-menu-actions": "اقدامات",
   "app-menu-background-audio": "سمعی",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "تمام صفحه را تغییر دهید",
   "app-menu-bookmark-actions": "اقدامات انتخاب نشانک",
   "app-menu-bookmark-actions-reasoning": "استدلال",
-  "app-guide-bookmark-teach-topics": "به من بیاموز",
-  "app-guide-bookmark-quiz-topics": "من را امتحان کنید",
-  "app-guide-bookmark-related-topics": "مطالب مرتبط",
-  "app-guide-bookmark-topic-differences": "تفاوت",
-  "app-guide-bookmark-commonalities": "مشترکات",
-  "app-guide-bookmark-similarities": "شباهت ها",
-  "app-guide-bookmark-implications": "مفاهیم",
-  "app-guide-bookmark-history": "تاریخ",
   "app-menu-import-as": "وارد کردن نشانک ها",
   "app-menu-export-as": "صادرات نشانک ها",
   "app-menu-bookmark-actions-media": "رسانه ها",
+  "app-menu-upload-json": "بارگذاری",
+  "app-menu-bookmark-current-view": "نمای فعلی نشانک",
   "app-menu-visual-search": "جستجوی بصری",
   "app-menu-reading-assistance": "کمک خواندن",
   "app-menu-bread": "پررنگ کردن کلمه شروع کنید",
   "app-menu-ai-tutor": "معلم هوش مصنوعی",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "نمای فعلی نشانک",
+  "app-menu-datasources": "منابع اطلاعات",
   "app-menu-clone-tab": "تب کلون",
   "app-menu-plant-identification": "شناسایی گیاه",
   "app-menu-text-identification": "شناسایی متن",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "نوار کناری را تغییر دهید",
   "app-menu-add-bookmark": "اضافه کردن نشانه",
   "app-menu-note-1": "توجه 1: فقط زمانی در دسترس است که تمرکز روی نوار کناری یا صفحه مقاله ویکی‌پدیا باشد.",
+  "app-menu-features": "امکانات",
+  "app-menu-persona": "شخصیت",
+  "app-menu-country-select": "کشور",
+  "app-menu-interests": "منافع",
+  "app-menu-nature-location-quiz": "مسابقه مکان یابی طبیعت",
+  "app-menu-command-editor": "ویرایشگر فرمان",
+  "app-menu-presentation": "ارائه",
+  "app-menu-editor": "ویرایشگر",
+  "app-menu-run-code": "اجرا کن",
+  "app-menu-clear-editor": "روشن",
+  "app-menu-cover-topic": "پوشش موضوع",
+  "app-menu-news": "اخبار",
+  "app-menu-culture": "فرهنگ",
+  "app-menu-nature": "طبیعت",
+  "app-menu-license": "مجوز",
+  "app-menu-goto-next-topic": "رفتن به موضوع بعدی (در نتایج نوار کناری)",
+  "app-menu-goto-previous-topic": "رفتن به مبحث قبلی (در نتایج نوار کناری)",
+  "app-menu-goto-next-pane": "به صفحه بعدی بروید",
+  "app-menu-goto-previous-pane": "به صفحه قبلی بروید",
+  "app-menu-new-search": "جستجوی جدید",
+  "app-menu-structured-search": "جستجوی ساختار یافته",
+  "app-menu-geo-search": "جستجوی جغرافیایی",
+  "app-section-main": "اصلی",
+  "app-section-info": "اطلاعات",
+  "app-section-library": "کتابخانه",
+  "app-section-web": "وب",
+  "app-section-news": "اخبار",
+  "app-section-news-general": "عمومی",
+  "app-section-social": "اجتماعی",
+  "app-section-news-tech": "فن آوری",
+  "app-section-society-jobs": "شغل ها",
+  "app-section-location": "محل",
+  "app-section-location-geography": "جغرافیا",
+  "app-section-location-demography": "جمعیت شناسی",
+  "app-section-location-ecology": "بوم شناسی",
+  "app-section-location-travel": "مسافرت رفتن",
+  "app-section-location-weather": "آب و هوا",
+  "app-section-location-real-estate": "مشاور املاک",
   "app-section-business": "کسب و کار",
   "app-section-government": "دولت",
   "app-section-government-general": "عمومی",
@@ -132,6 +132,7 @@
   "app-section-library-general": "عمومی",
   "app-section-library-manuscripts": "نسخه های خطی",
   "app-section-library-history": "تاریخ",
+  "app-section-library-philosophy": "فلسفه",
   "app-section-library-genealogy": "شجره نامه",
   "app-section-library-legal": "مجاز",
   "app-section-library-products": "محصولات",
@@ -144,19 +145,31 @@
   "app-section-society": "جامعه",
   "app-section-society-sports": "ورزش ها",
   "app-section-society-food": "غذا",
-  "app-section-library-philosophy": "فلسفه",
   "app-section-library-religion": "دین",
   "app-section-library-poetry": "شعر",
   "app-section-library-identity": "هویت",
   "app-section-society-events": "مناسبت ها",
-  "app-guide-welcome-text": "Conzept تلاشی برای ایجاد دانشنامه ای برای قرن بیست و یکم است.  <br><br> از اکتشافات خود لذت ببرید! ",
   "app-section-society-shopping": "خريد كردن",
-  "app-notification-too-few-compare-topics": "ابتدا دو یا چند موضوع را با استفاده از دکمه (که در بالای مقاله ویکی‌پدیا و در بخش متا موضوع قرار دارد) به مقایسه اضافه کنید.",
-  "app-menu-goto-next-topic": "رفتن به موضوع بعدی (در نتایج نوار کناری)",
-  "app-menu-goto-previous-topic": "رفتن به مبحث قبلی (در نتایج نوار کناری)",
-  "app-menu-goto-next-pane": "به صفحه بعدی بروید",
-  "app-menu-goto-previous-pane": "به صفحه قبلی بروید",
-  "app-menu-new-search": "جستجوی جدید",
+  "app-guide-bookmarks-selected": "انتخاب شد",
+  "app-guide-bookmarks-deselect-all": "همه را لغو انتخاب کنید",
+  "app-guide-bookmark-teach-topics": "به من بیاموز",
+  "app-guide-bookmark-quiz-topics": "من را امتحان کنید",
+  "app-guide-bookmark-related-topics": "مطالب مرتبط",
+  "app-guide-bookmark-topic-differences": "تفاوت",
+  "app-guide-bookmark-commonalities": "مشترکات",
+  "app-guide-bookmark-similarities": "شباهت ها",
+  "app-guide-bookmark-implications": "مفاهیم",
+  "app-guide-bookmark-history": "تاریخ",
+  "app-guide-bookmark-gapminder-country-trend": "روند کشور",
+  "app-guide-see-more": "بیشتر ببین",
+  "app-guide-page": "صفحه",
+  "app-guide-current-events": "رویدادهای جاری",
+  "app-guide-topic": "موضوع",
+  "app-guide-artwork": "رنگ آمیزی",
+  "app-guide-organism": "ارگانیسم",
+  "app-guide-music": "موسیقی",
+  "app-guide-science": "علوم پایه",
+  "app-guide-welcome-text": "Conzept تلاشی برای ایجاد دانشنامه ای برای قرن بیست و یکم است.  <br><br> از اکتشافات خود لذت ببرید! ",
   "app-guide-documentary": "مستند",
   "app-guide-country": "کشور",
   "app-guide-string-search": "جستجوی رشته",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "باکتری",
   "app-guide-virus": "ویروس",
   "app-guide-featured-article": "مقاله برجسته",
-  "app-menu-cover-topic": "پوشش موضوع",
-  "app-menu-news": "اخبار",
-  "app-menu-culture": "فرهنگ",
-  "app-menu-nature": "طبیعت",
-  "app-menu-license": "مجوز",
   "app-guide-help": "کمک",
   "app-guide-sea": "دریا",
   "app-guide-continent": "قاره",
@@ -192,7 +200,7 @@
   "app-guide-atom": "اتم",
   "app-guide-protist": "پروتیست",
   "app-guide-country-map": "نقشه کشور",
-  "app-guide-capital": "کاپیتول",
+  "app-guide-capital": "سرمایه، پایتخت",
   "app-guide-form-of-government": "شکل حکومت",
   "app-guide-religion": "دین",
   "app-guide-period": "دوره زمانی",
@@ -215,25 +223,20 @@
   "app-guide-dish": "ظرف",
   "app-guide-cell-type": "نوع سلول",
   "app-guide-archae": "باستانی",
-  "app-menu-persona": "شخصیت",
   "app-guide-featured-portal": "پورتال برجسته",
   "app-guide-musical-instrument": "ابزار",
   "app-guide-technology": "فن آوری",
   "app-guide-near-me": "نزدیک من",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "روزنامه ها",
+  "app-guide-radio-map": "نقشه رادیویی",
   "app-guide-news-radio": "رادیو",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "تلویزیون زنده",
   "app-guide-news-tv": "تلویزیون",
   "app-guide-news-economic-indicators": "نشانگرهای اقتصادی",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "روندهای توسعه",
+  "app-guide-conflict-map": "نقشه درگیری",
   "app-guide-ongoing-conflicts": "درگیری ها",
   "app-guide-radio": "رادیو",
-  "app-menu-country-select": "کشور",
-  "app-menu-interests": "منافع",
-  "app-menu-command-editor": "ویرایشگر فرمان",
-  "app-menu-presentation": "ارائه",
-  "app-menu-editor": "ویرایشگر",
-  "app-menu-run-code": "اجرا کن",
-  "app-menu-clear-editor": "روشن",
   "app-foo": "فو بار باز"
 }
