--- a/app/explore2/assets/i18n/ui/conzept-fi.json
+++ b/app/explore2/assets/i18n/ui/conzept-fi.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "asetukset",
   "app-tab-help-title": "auta",
   "app-tab-audio-chat-title": "äänikeskustelu",
+  "app-notification-too-few-compare-topics": "Lisää ensin kaksi tai useampi aihe vertailuun käyttämällä -painiketta (sijaitsee Wikipedia-artikkelin yläosassa ja aiheen meta-osiossa)",
   "app-search-placeholder": "Hae",
-  "app-structured-search-title": "strukturoitu haku",
+  "app-topics-found": "aiheita löytyi",
   "app-title-occurence": "Tapahtumien kartta",
   "app-title-super": "super",
   "app-title-sub": "sub",
   "app-title-pages": "sivuja",
   "app-title-citations": "Lainaukset",
-  "app-guide-see-more": "Katso lisää",
-  "app-guide-page": "sivu",
-  "app-guide-current-events": "ajankohtaiset tapahtumat",
-  "app-guide-topic": "aihe",
-  "app-guide-artwork": "maalaus",
-  "app-guide-organism": "organismi",
-  "app-guide-music": "musiikkia",
-  "app-guide-science": "tiede",
-  "app-topics-found": "aiheita löytyi",
-  "app-section-main": "pää",
-  "app-section-info": "tiedot",
-  "app-section-library": "kirjasto",
-  "app-section-web": "web",
-  "app-section-news": "uutiset",
-  "app-section-news-general": "yleistä",
-  "app-section-social": "sosiaalinen",
-  "app-section-news-tech": "tekniikka",
-  "app-section-society-jobs": "työpaikkoja",
-  "app-section-location": "sijainti",
-  "app-section-location-geography": "maantiede",
-  "app-section-location-demography": "väestötiede",
-  "app-section-location-ecology": "ekologia",
-  "app-section-location-travel": "matkustaa",
-  "app-section-location-weather": "sää",
-  "app-section-location-real-estate": "Kiinteistöt",
   "app-menu-actions": "Toiminnot",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "vaihtaa koko näytön päälle",
   "app-menu-bookmark-actions": "kirjanmerkkien valintatoiminnot",
   "app-menu-bookmark-actions-reasoning": "perustelut",
-  "app-guide-bookmark-teach-topics": "opeta minua",
-  "app-guide-bookmark-quiz-topics": "kysy minulta",
-  "app-guide-bookmark-related-topics": "liittyvät aiheet",
-  "app-guide-bookmark-topic-differences": "eroja",
-  "app-guide-bookmark-commonalities": "yhteisiä piirteitä",
-  "app-guide-bookmark-similarities": "yhtäläisyyksiä",
-  "app-guide-bookmark-implications": "seurauksia",
-  "app-guide-bookmark-history": "historia",
   "app-menu-import-as": "tuoda kirjanmerkkejä",
   "app-menu-export-as": "viedä kirjanmerkkejä",
   "app-menu-bookmark-actions-media": "media",
+  "app-menu-upload-json": "lataa",
+  "app-menu-bookmark-current-view": "merkitse nykyinen näkymä kirjanmerkkeihin",
   "app-menu-visual-search": "visuaalinen haku",
   "app-menu-reading-assistance": "lukuapua",
   "app-menu-bread": "sana-alku lihavointi",
   "app-menu-ai-tutor": "AI tutor",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "merkitse nykyinen näkymä kirjanmerkkeihin",
+  "app-menu-datasources": "tietolähteet",
   "app-menu-clone-tab": "klooni-välilehti",
   "app-menu-plant-identification": "kasvin tunnistaminen",
   "app-menu-text-identification": "tekstitunniste",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "vaihtaa sivupalkkia",
   "app-menu-add-bookmark": "lisää kirjanmerkki",
   "app-menu-note-1": "huomautus 1: käytettävissä vain, kun kohdistus on sivupalkissa tai Wikipedian artikkeliruudussa.",
+  "app-menu-features": "ominaisuudet",
+  "app-menu-persona": "persoona",
+  "app-menu-country-select": "maa",
+  "app-menu-interests": "kiinnostuksen kohteet",
+  "app-menu-nature-location-quiz": "luontopaikan tietokilpailu",
+  "app-menu-command-editor": "komentoeditori",
+  "app-menu-presentation": "esittely",
+  "app-menu-editor": "toimittaja",
+  "app-menu-run-code": "juosta",
+  "app-menu-clear-editor": "asia selvä",
+  "app-menu-cover-topic": "kansi aihe",
+  "app-menu-news": "uutiset",
+  "app-menu-culture": "kulttuuri",
+  "app-menu-nature": "luonto",
+  "app-menu-license": "lisenssi",
+  "app-menu-goto-next-topic": "siirry seuraavaan aiheeseen (sivupalkin tuloksissa)",
+  "app-menu-goto-previous-topic": "Siirry edelliseen aiheeseen (sivupalkin tuloksissa)",
+  "app-menu-goto-next-pane": "siirry seuraavaan ruutuun",
+  "app-menu-goto-previous-pane": "siirry edelliseen ruutuun",
+  "app-menu-new-search": "uusi haku",
+  "app-menu-structured-search": "strukturoitu haku",
+  "app-menu-geo-search": "geohaku",
+  "app-section-main": "pää",
+  "app-section-info": "tiedot",
+  "app-section-library": "kirjasto",
+  "app-section-web": "web",
+  "app-section-news": "uutiset",
+  "app-section-news-general": "yleistä",
+  "app-section-social": "sosiaalinen",
+  "app-section-news-tech": "tekniikka",
+  "app-section-society-jobs": "työpaikkoja",
+  "app-section-location": "sijainti",
+  "app-section-location-geography": "maantiede",
+  "app-section-location-demography": "väestötiede",
+  "app-section-location-ecology": "ekologia",
+  "app-section-location-travel": "matkustaa",
+  "app-section-location-weather": "sää",
+  "app-section-location-real-estate": "Kiinteistöt",
   "app-section-business": "liiketoimintaa",
   "app-section-government": "hallitus",
   "app-section-government-general": "yleistä",
@@ -132,6 +132,7 @@
   "app-section-library-general": "yleistä",
   "app-section-library-manuscripts": "käsikirjoituksia",
   "app-section-library-history": "historia",
+  "app-section-library-philosophy": "filosofia",
   "app-section-library-genealogy": "sukututkimusta",
   "app-section-library-legal": "laillinen",
   "app-section-library-products": "Tuotteet",
@@ -144,19 +145,31 @@
   "app-section-society": "yhteiskuntaan",
   "app-section-society-sports": "Urheilu",
   "app-section-society-food": "ruokaa",
-  "app-section-library-philosophy": "filosofia",
   "app-section-library-religion": "uskonto",
   "app-section-library-poetry": "runous",
   "app-section-library-identity": "identiteetti",
   "app-section-society-events": "Tapahtumat",
-  "app-guide-welcome-text": "Conzept on yritys luoda tietosanakirja 2000-luvulle.  <br><br> Nauti tutkimusmatkastasi! ",
   "app-section-society-shopping": "ostoksilla",
-  "app-notification-too-few-compare-topics": "Lisää ensin kaksi tai useampi aihe vertailuun käyttämällä -painiketta (sijaitsee Wikipedia-artikkelin yläosassa ja aiheen meta-osiossa)",
-  "app-menu-goto-next-topic": "siirry seuraavaan aiheeseen (sivupalkin tuloksissa)",
-  "app-menu-goto-previous-topic": "Siirry edelliseen aiheeseen (sivupalkin tuloksissa)",
-  "app-menu-goto-next-pane": "siirry seuraavaan ruutuun",
-  "app-menu-goto-previous-pane": "siirry edelliseen ruutuun",
-  "app-menu-new-search": "uusi haku",
+  "app-guide-bookmarks-selected": "valittu",
+  "app-guide-bookmarks-deselect-all": "poista kaikki valinnat",
+  "app-guide-bookmark-teach-topics": "opeta minua",
+  "app-guide-bookmark-quiz-topics": "kysy minulta",
+  "app-guide-bookmark-related-topics": "liittyvät aiheet",
+  "app-guide-bookmark-topic-differences": "eroja",
+  "app-guide-bookmark-commonalities": "yhteisiä piirteitä",
+  "app-guide-bookmark-similarities": "yhtäläisyyksiä",
+  "app-guide-bookmark-implications": "seurauksia",
+  "app-guide-bookmark-history": "historia",
+  "app-guide-bookmark-gapminder-country-trend": "maan trendi",
+  "app-guide-see-more": "Katso lisää",
+  "app-guide-page": "sivu",
+  "app-guide-current-events": "ajankohtaiset tapahtumat",
+  "app-guide-topic": "aihe",
+  "app-guide-artwork": "maalaus",
+  "app-guide-organism": "organismi",
+  "app-guide-music": "musiikkia",
+  "app-guide-science": "tiede",
+  "app-guide-welcome-text": "Conzept on yritys luoda tietosanakirja 2000-luvulle.  <br><br> Nauti tutkimusmatkastasi! ",
   "app-guide-documentary": "dokumentti",
   "app-guide-country": "maa",
   "app-guide-string-search": "merkkijonohaku",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bakteeri",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "esillä oleva artikkeli",
-  "app-menu-cover-topic": "kansi aihe",
-  "app-menu-news": "uutiset",
-  "app-menu-culture": "kulttuuri",
-  "app-menu-nature": "luonto",
-  "app-menu-license": "lisenssi",
   "app-guide-help": "auta",
   "app-guide-sea": "meri",
   "app-guide-continent": "maanosa",
@@ -192,7 +200,7 @@
   "app-guide-atom": "atomi",
   "app-guide-protist": "protisti",
   "app-guide-country-map": "maan kartta",
-  "app-guide-capital": "pääkaupunki",
+  "app-guide-capital": "iso alkukirjain",
   "app-guide-form-of-government": "hallituksen muoto.",
   "app-guide-religion": "uskonto",
   "app-guide-period": "ajanjaksoa",
@@ -200,7 +208,7 @@
   "app-guide-revolution": "vallankumous",
   "app-guide-war": "sota",
   "app-guide-battle": "taistelu",
-  "app-guide-documentary-title": "dokumentin otsikko",
+  "app-guide-documentary-title": "dokumentin nimi",
   "app-guide-film-title": "elokuvan nimi",
   "app-guide-art-movement": "taiteen liike",
   "app-guide-composer": "säveltäjä",
@@ -215,25 +223,20 @@
   "app-guide-dish": "ruokalaji",
   "app-guide-cell-type": "solutyyppi",
   "app-guide-archae": "archae",
-  "app-menu-persona": "persoona",
   "app-guide-featured-portal": "esitelty portaali",
   "app-guide-musical-instrument": "väline",
   "app-guide-technology": "teknologiaa",
   "app-guide-near-me": "lähellä minua",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "sanomalehdet",
+  "app-guide-radio-map": "radio kartta",
   "app-guide-news-radio": "radio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "suora lähetys",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "taloudelliset indikaattorit",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "kehityssuuntauksia",
+  "app-guide-conflict-map": "konfliktikartta",
   "app-guide-ongoing-conflicts": "konflikteja",
   "app-guide-radio": "radio",
-  "app-menu-country-select": "maa",
-  "app-menu-interests": "kiinnostuksen kohteet",
-  "app-menu-command-editor": "komentoeditori",
-  "app-menu-presentation": "esittely",
-  "app-menu-editor": "toimittaja",
-  "app-menu-run-code": "juosta",
-  "app-menu-clear-editor": "asia selvä",
   "app-foo": "foo bar baz"
 }
