--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "paramètres",
   "app-tab-help-title": "aide",
   "app-tab-audio-chat-title": "conversation audio",
+  "app-notification-too-few-compare-topics": "Ajoutez d'abord deux sujets ou plus à la comparaison, en utilisant le bouton (situé en haut de l'article Wikipédia et dans la méta-section du sujet)",
   "app-search-placeholder": "recherche",
-  "app-structured-search-title": "recherche structurée",
+  "app-topics-found": "sujets trouvés",
   "app-title-occurence": "Carte des occurrences",
   "app-title-super": "super",
   "app-title-sub": "sous",
   "app-title-pages": "pages",
   "app-title-citations": "Citations",
-  "app-guide-see-more": "voir plus",
-  "app-guide-page": "page",
-  "app-guide-current-events": "événements actuels",
-  "app-guide-topic": "sujet",
-  "app-guide-artwork": "peinture",
-  "app-guide-organism": "organisme",
-  "app-guide-music": "musique",
-  "app-guide-science": "science",
-  "app-topics-found": "sujets trouvés",
-  "app-section-main": "principal",
-  "app-section-info": "Info",
-  "app-section-library": "bibliothèque",
-  "app-section-web": "la toile",
-  "app-section-news": "nouvelles",
-  "app-section-news-general": "général",
-  "app-section-social": "sociale",
-  "app-section-news-tech": "technologie",
-  "app-section-society-jobs": "emplois",
-  "app-section-location": "emplacement",
-  "app-section-location-geography": "géographie",
-  "app-section-location-demography": "démographie",
-  "app-section-location-ecology": "écologie",
-  "app-section-location-travel": "voyage",
-  "app-section-location-weather": "météo",
-  "app-section-location-real-estate": "immobilier",
   "app-menu-actions": "Actions",
   "app-menu-background-audio": "l'audio",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "basculer en plein écran",
   "app-menu-bookmark-actions": "actions de sélection de favoris",
   "app-menu-bookmark-actions-reasoning": "raisonnement",
-  "app-guide-bookmark-teach-topics": "enseigne moi",
-  "app-guide-bookmark-quiz-topics": "interroge-moi",
-  "app-guide-bookmark-related-topics": "Rubriques connexes",
-  "app-guide-bookmark-topic-differences": "différences",
-  "app-guide-bookmark-commonalities": "points communs",
-  "app-guide-bookmark-similarities": "similitudes",
-  "app-guide-bookmark-implications": "conséquences",
-  "app-guide-bookmark-history": "histoire",
   "app-menu-import-as": "importer des signets",
   "app-menu-export-as": "exporter des signets",
   "app-menu-bookmark-actions-media": "médias",
+  "app-menu-upload-json": "télécharger",
+  "app-menu-bookmark-current-view": "ajouter la vue actuelle aux favoris",
   "app-menu-visual-search": "recherche visuelle",
   "app-menu-reading-assistance": "aide à la lecture",
   "app-menu-bread": "mise en gras du début du mot",
   "app-menu-ai-tutor": "Tuteur IA",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "ajouter la vue actuelle aux favoris",
+  "app-menu-datasources": "les sources de données",
   "app-menu-clone-tab": "onglet cloner",
   "app-menu-plant-identification": "identification des plantes",
   "app-menu-text-identification": "identification de texte",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "basculer la barre latérale",
   "app-menu-add-bookmark": "ajouter un marque-page",
   "app-menu-note-1": "note 1 : disponible uniquement lorsque le focus est sur la barre latérale ou sur un volet d'article Wikipédia.",
+  "app-menu-features": "caractéristiques",
+  "app-menu-persona": "personnage",
+  "app-menu-country-select": "pays",
+  "app-menu-interests": "intérêts",
+  "app-menu-nature-location-quiz": "quiz sur la localisation dans la nature",
+  "app-menu-command-editor": "éditeur de commandes",
+  "app-menu-presentation": "présentation",
+  "app-menu-editor": "éditeur",
+  "app-menu-run-code": "courir",
+  "app-menu-clear-editor": "clair",
+  "app-menu-cover-topic": "sujet de couverture",
+  "app-menu-news": "nouvelles",
+  "app-menu-culture": "culture",
+  "app-menu-nature": "nature",
+  "app-menu-license": "Licence",
+  "app-menu-goto-next-topic": "passer au sujet suivant (dans la barre latérale des résultats)",
+  "app-menu-goto-previous-topic": "aller au sujet précédent (dans la barre latérale des résultats)",
+  "app-menu-goto-next-pane": "aller au volet suivant",
+  "app-menu-goto-previous-pane": "aller au volet précédent",
+  "app-menu-new-search": "nouvelle recherche",
+  "app-menu-structured-search": "recherche structurée",
+  "app-menu-geo-search": "recherche géographique",
+  "app-section-main": "principal",
+  "app-section-info": "Info",
+  "app-section-library": "bibliothèque",
+  "app-section-web": "la toile",
+  "app-section-news": "nouvelles",
+  "app-section-news-general": "général",
+  "app-section-social": "sociale",
+  "app-section-news-tech": "technologie",
+  "app-section-society-jobs": "emplois",
+  "app-section-location": "emplacement",
+  "app-section-location-geography": "géographie",
+  "app-section-location-demography": "démographie",
+  "app-section-location-ecology": "écologie",
+  "app-section-location-travel": "voyage",
+  "app-section-location-weather": "météo",
+  "app-section-location-real-estate": "immobilier",
   "app-section-business": "entreprise",
   "app-section-government": "gouvernement",
   "app-section-government-general": "général",
@@ -132,6 +132,7 @@
   "app-section-library-general": "général",
   "app-section-library-manuscripts": "manuscrits",
   "app-section-library-history": "histoire",
+  "app-section-library-philosophy": "philosophie",
   "app-section-library-genealogy": "généalogie",
   "app-section-library-legal": "légal",
   "app-section-library-products": "des produits",
@@ -144,19 +145,31 @@
   "app-section-society": "société",
   "app-section-society-sports": "des sports",
   "app-section-society-food": "nourriture",
-  "app-section-library-philosophy": "philosophie",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poésie",
   "app-section-library-identity": "identité",
   "app-section-society-events": "événements",
-  "app-guide-welcome-text": "Conzept est une tentative de créer une encyclopédie pour le 21e siècle.  <br><br> Bonnes explorations ! ",
   "app-section-society-shopping": "achats",
-  "app-notification-too-few-compare-topics": "Ajoutez d'abord deux sujets ou plus à la comparaison, en utilisant le bouton (situé en haut de l'article Wikipédia et dans la méta-section du sujet)",
-  "app-menu-goto-next-topic": "passer au sujet suivant (dans la barre latérale des résultats)",
-  "app-menu-goto-previous-topic": "aller au sujet précédent (dans la barre latérale des résultats)",
-  "app-menu-goto-next-pane": "aller au volet suivant",
-  "app-menu-goto-previous-pane": "aller au volet précédent",
-  "app-menu-new-search": "nouvelle recherche",
+  "app-guide-bookmarks-selected": "choisi",
+  "app-guide-bookmarks-deselect-all": "tout déselectionner",
+  "app-guide-bookmark-teach-topics": "enseigne moi",
+  "app-guide-bookmark-quiz-topics": "interroge-moi",
+  "app-guide-bookmark-related-topics": "Rubriques connexes",
+  "app-guide-bookmark-topic-differences": "différences",
+  "app-guide-bookmark-commonalities": "points communs",
+  "app-guide-bookmark-similarities": "similitudes",
+  "app-guide-bookmark-implications": "conséquences",
+  "app-guide-bookmark-history": "histoire",
+  "app-guide-bookmark-gapminder-country-trend": "tendance du pays",
+  "app-guide-see-more": "voir plus",
+  "app-guide-page": "page",
+  "app-guide-current-events": "événements actuels",
+  "app-guide-topic": "sujet",
+  "app-guide-artwork": "peinture",
+  "app-guide-organism": "organisme",
+  "app-guide-music": "musique",
+  "app-guide-science": "science",
+  "app-guide-welcome-text": "Conzept est une tentative de créer une encyclopédie pour le 21e siècle.  <br><br> Bonnes explorations ! ",
   "app-guide-documentary": "documentaire",
   "app-guide-country": "pays",
   "app-guide-string-search": "recherche de chaîne",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bactérie",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "article vedette",
-  "app-menu-cover-topic": "sujet de couverture",
-  "app-menu-news": "nouvelles",
-  "app-menu-culture": "culture",
-  "app-menu-nature": "nature",
-  "app-menu-license": "Licence",
   "app-guide-help": "aide",
   "app-guide-sea": "mer",
   "app-guide-continent": "continent",
@@ -192,7 +200,7 @@
   "app-guide-atom": "atome",
   "app-guide-protist": "protiste",
   "app-guide-country-map": "carte du pays",
-  "app-guide-capital": "Capitole",
+  "app-guide-capital": "capital",
   "app-guide-form-of-government": "forme de gouvernement.",
   "app-guide-religion": "religion",
   "app-guide-period": "période",
@@ -215,25 +223,20 @@
   "app-guide-dish": "plat",
   "app-guide-cell-type": "type de cellule",
   "app-guide-archae": "archées",
-  "app-menu-persona": "personnage",
   "app-guide-featured-portal": "portail vedette",
   "app-guide-musical-instrument": "instrument",
   "app-guide-technology": "technologie",
   "app-guide-near-me": "proche de moi",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "journaux",
+  "app-guide-radio-map": "carte radio",
   "app-guide-news-radio": "radio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "en direct",
   "app-guide-news-tv": "la télé",
   "app-guide-news-economic-indicators": "indicateurs économiques",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "tendances de développement",
+  "app-guide-conflict-map": "carte du conflit",
   "app-guide-ongoing-conflicts": "conflits",
   "app-guide-radio": "radio",
-  "app-menu-country-select": "pays",
-  "app-menu-interests": "intérêts",
-  "app-menu-command-editor": "éditeur de commandes",
-  "app-menu-presentation": "présentation",
-  "app-menu-editor": "éditeur",
-  "app-menu-run-code": "courir",
-  "app-menu-clear-editor": "clair",
   "app-foo": "foo bar baz"
 }
