--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "saituna",
   "app-tab-help-title": "taimako",
   "app-tab-audio-chat-title": "audio chat",
+  "app-notification-too-few-compare-topics": "Da farko ƙara batutuwa biyu ko fiye zuwa kwatancen, ta amfani da maɓallin (wanda yake a saman labarin Wikipedia kuma a cikin meta-bangaren batun)",
   "app-search-placeholder": "bincika",
-  "app-structured-search-title": "bincike mai tsari",
+  "app-topics-found": "batutuwan da aka samo",
   "app-title-occurence": "Taswirar abin da ya faru",
   "app-title-super": "super",
   "app-title-sub": "sub",
   "app-title-pages": "shafuka",
   "app-title-citations": "ambato",
-  "app-guide-see-more": "karin gani",
-  "app-guide-page": "shafi",
-  "app-guide-current-events": "abubuwan da ke faruwa a yanzu",
-  "app-guide-topic": "batu",
-  "app-guide-artwork": "zanen",
-  "app-guide-organism": "kwayoyin halitta",
-  "app-guide-music": "kiɗa",
-  "app-guide-science": "kimiyya",
-  "app-topics-found": "batutuwan da aka samo",
-  "app-section-main": "babba",
-  "app-section-info": "bayani",
-  "app-section-library": "ɗakin karatu",
-  "app-section-web": "yanar gizo",
-  "app-section-news": "labarai",
-  "app-section-news-general": "na gaba ɗaya",
-  "app-section-social": "zamantakewa",
-  "app-section-news-tech": "fasaha",
-  "app-section-society-jobs": "ayyuka",
-  "app-section-location": "wuri",
-  "app-section-location-geography": "labarin kasa",
-  "app-section-location-demography": "alƙaluma",
-  "app-section-location-ecology": "ilimin halitta",
-  "app-section-location-travel": "tafiya",
-  "app-section-location-weather": "yanayi",
-  "app-section-location-real-estate": "dukiya",
   "app-menu-actions": "ayyuka",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "kunna cikakken allo",
   "app-menu-bookmark-actions": "alamar shafi-zaɓi ayyuka",
   "app-menu-bookmark-actions-reasoning": "tunani",
-  "app-guide-bookmark-teach-topics": "koya min",
-  "app-guide-bookmark-quiz-topics": "yi min tambaya",
-  "app-guide-bookmark-related-topics": "batutuwa masu alaka",
-  "app-guide-bookmark-topic-differences": "bambance-bambance",
-  "app-guide-bookmark-commonalities": "gama-gari",
-  "app-guide-bookmark-similarities": "kamanceceniya",
-  "app-guide-bookmark-implications": "abubuwan da ke faruwa",
-  "app-guide-bookmark-history": "tarihi",
   "app-menu-import-as": "shigo da alamun shafi",
   "app-menu-export-as": "alamun fitarwa",
   "app-menu-bookmark-actions-media": "kafofin watsa labarai",
+  "app-menu-upload-json": "upload",
+  "app-menu-bookmark-current-view": "alamar shafi na halin yanzu",
   "app-menu-visual-search": "bincike na gani",
   "app-menu-reading-assistance": "taimakon karatu",
-  "app-menu-bread": "kalma-fara ƙarfin hali",
+  "app-menu-bread": "fara ƙarfin magana",
   "app-menu-ai-tutor": "AI mai koyarwa",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "alamar shafi na halin yanzu",
+  "app-menu-datasources": "tushen bayanai",
   "app-menu-clone-tab": "clone tab",
   "app-menu-plant-identification": "ganewar shuka",
   "app-menu-text-identification": "tantance rubutu",
@@ -101,7 +63,45 @@
   "app-menu-fullscreen-active-pane": "cika allo mai aiki",
   "app-menu-toggle-sidebar": "kunna labarun gefe",
   "app-menu-add-bookmark": "ƙara alamar shafi",
-  "app-menu-note-1": "bayanin kula 1: ana samun kawai lokacin da aka mayar da hankali kan labarun gefe ko sashin labarin Wikipedia.",
+  "app-menu-note-1": "bayanin kula 1: yana samuwa kawai lokacin da aka mayar da hankali kan labarun gefe ko ɓangaren labarin Wikipedia.",
+  "app-menu-features": "fasali",
+  "app-menu-persona": "mutum",
+  "app-menu-country-select": "kasa",
+  "app-menu-interests": "sha'awa",
+  "app-menu-nature-location-quiz": "kacici-kacici wurin yanayi",
+  "app-menu-command-editor": "editan umarni",
+  "app-menu-presentation": "gabatarwa",
+  "app-menu-editor": "edita",
+  "app-menu-run-code": "gudu",
+  "app-menu-clear-editor": "bayyananne",
+  "app-menu-cover-topic": "batun rufewa",
+  "app-menu-news": "labarai",
+  "app-menu-culture": "al'ada",
+  "app-menu-nature": "yanayi",
+  "app-menu-license": "lasisi",
+  "app-menu-goto-next-topic": "je zuwa jigo na gaba (a cikin sakamakon labarun gefe)",
+  "app-menu-goto-previous-topic": "Je zuwa batun da ya gabata (a cikin sakamakon labarun gefe)",
+  "app-menu-goto-next-pane": "je zuwa shafi na gaba",
+  "app-menu-goto-previous-pane": "je zuwa sashin da ya gabata",
+  "app-menu-new-search": "sabon bincike",
+  "app-menu-structured-search": "bincike mai tsari",
+  "app-menu-geo-search": "geo search",
+  "app-section-main": "babba",
+  "app-section-info": "bayani",
+  "app-section-library": "ɗakin karatu",
+  "app-section-web": "yanar gizo",
+  "app-section-news": "labarai",
+  "app-section-news-general": "na gaba ɗaya",
+  "app-section-social": "zamantakewa",
+  "app-section-news-tech": "fasaha",
+  "app-section-society-jobs": "ayyuka",
+  "app-section-location": "wuri",
+  "app-section-location-geography": "labarin kasa",
+  "app-section-location-demography": "alƙaluma",
+  "app-section-location-ecology": "ilimin halitta",
+  "app-section-location-travel": "tafiya",
+  "app-section-location-weather": "yanayi",
+  "app-section-location-real-estate": "dukiya",
   "app-section-business": "kasuwanci",
   "app-section-government": "gwamnati",
   "app-section-government-general": "na gaba ɗaya",
@@ -132,6 +132,7 @@
   "app-section-library-general": "na gaba ɗaya",
   "app-section-library-manuscripts": "rubuce-rubucen hannu",
   "app-section-library-history": "tarihi",
+  "app-section-library-philosophy": "falsafa",
   "app-section-library-genealogy": "zuriyarsu",
   "app-section-library-legal": "na shari'a",
   "app-section-library-products": "samfurori",
@@ -144,19 +145,31 @@
   "app-section-society": "al'umma",
   "app-section-society-sports": "wasanni",
   "app-section-society-food": "abinci",
-  "app-section-library-philosophy": "falsafa",
   "app-section-library-religion": "addini",
   "app-section-library-poetry": "waka",
   "app-section-library-identity": "ainihi",
   "app-section-society-events": "abubuwan da suka faru",
-  "app-guide-welcome-text": "Conzept ƙoƙari ne na ƙirƙirar kundin sani na ƙarni na 21st.  <br><br> Ji daɗin binciken ku! ",
   "app-section-society-shopping": "cin kasuwa",
-  "app-notification-too-few-compare-topics": "Da farko ƙara batutuwa biyu ko fiye zuwa kwatancen, ta amfani da maɓallin (wanda yake a saman labarin Wikipedia kuma a cikin meta-bangaren batun)",
-  "app-menu-goto-next-topic": "je zuwa jigo na gaba (a cikin sakamakon labarun gefe)",
-  "app-menu-goto-previous-topic": "Je zuwa batun da ya gabata (a cikin sakamakon labarun gefe)",
-  "app-menu-goto-next-pane": "je zuwa shafi na gaba",
-  "app-menu-goto-previous-pane": "je zuwa sashin da ya gabata",
-  "app-menu-new-search": "sabon bincike",
+  "app-guide-bookmarks-selected": "zaba",
+  "app-guide-bookmarks-deselect-all": "deselect duk",
+  "app-guide-bookmark-teach-topics": "koya min",
+  "app-guide-bookmark-quiz-topics": "yi min tambaya",
+  "app-guide-bookmark-related-topics": "batutuwa masu alaka",
+  "app-guide-bookmark-topic-differences": "bambance-bambance",
+  "app-guide-bookmark-commonalities": "gama-gari",
+  "app-guide-bookmark-similarities": "kamanceceniya",
+  "app-guide-bookmark-implications": "abubuwan da ke faruwa",
+  "app-guide-bookmark-history": "tarihi",
+  "app-guide-bookmark-gapminder-country-trend": "yanayin kasa",
+  "app-guide-see-more": "karin gani",
+  "app-guide-page": "shafi",
+  "app-guide-current-events": "abubuwan da ke faruwa a yanzu",
+  "app-guide-topic": "batu",
+  "app-guide-artwork": "zanen",
+  "app-guide-organism": "kwayoyin halitta",
+  "app-guide-music": "kiɗa",
+  "app-guide-science": "kimiyya",
+  "app-guide-welcome-text": "Conzept ƙoƙari ne na ƙirƙirar kundin sani na ƙarni na 21st.  <br><br> Ji daɗin binciken ku! ",
   "app-guide-documentary": "takardun shaida",
   "app-guide-country": "kasa",
   "app-guide-string-search": "bincike kirtani",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "kwayoyin cuta",
   "app-guide-virus": "ƙwayar cuta",
   "app-guide-featured-article": "labarin da aka gabatar",
-  "app-menu-cover-topic": "batun rufewa",
-  "app-menu-news": "labarai",
-  "app-menu-culture": "al'ada",
-  "app-menu-nature": "yanayi",
-  "app-menu-license": "lasisi",
   "app-guide-help": "taimako",
   "app-guide-sea": "teku",
   "app-guide-continent": "nahiyar",
@@ -215,25 +223,20 @@
   "app-guide-dish": "tasa",
   "app-guide-cell-type": "nau'in tantanin halitta",
   "app-guide-archae": "archae",
-  "app-menu-persona": "mutum",
   "app-guide-featured-portal": "portal mai fasali",
   "app-guide-musical-instrument": "kayan aiki",
   "app-guide-technology": "fasaha",
   "app-guide-near-me": "kusa da ni",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "jaridu",
+  "app-guide-radio-map": "taswirar rediyo",
   "app-guide-news-radio": "rediyo",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "kai tsaye TV",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "alamomin tattalin arziki",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "abubuwan ci gaba",
+  "app-guide-conflict-map": "taswirar rikici",
   "app-guide-ongoing-conflicts": "rikice-rikice",
   "app-guide-radio": "rediyo",
-  "app-menu-country-select": "kasa",
-  "app-menu-interests": "sha'awa",
-  "app-menu-command-editor": "editan umarni",
-  "app-menu-presentation": "gabatarwa",
-  "app-menu-editor": "edita",
-  "app-menu-run-code": "gudu",
-  "app-menu-clear-editor": "bayyananne",
   "app-foo": "foo bar ba"
 }
