--- a/app/explore2/assets/i18n/ui/conzept-hi.json
+++ b/app/explore2/assets/i18n/ui/conzept-hi.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "समायोजन",
   "app-tab-help-title": "मदद",
   "app-tab-audio-chat-title": "ऑडियो चैट",
+  "app-notification-too-few-compare-topics": "पहले बटन का उपयोग करके तुलना में दो या अधिक विषय जोड़ें (विकिपीडिया-लेख के शीर्ष पर और विषय के मेटा-अनुभाग में स्थित)",
   "app-search-placeholder": "खोज",
-  "app-structured-search-title": "संरचित खोज",
+  "app-topics-found": "विषय मिले",
   "app-title-occurence": "घटना मानचित्र",
   "app-title-super": "बहुत अच्छा",
   "app-title-sub": "विषय",
   "app-title-pages": "पृष्ठों",
   "app-title-citations": "उद्धरण",
-  "app-guide-see-more": "और देखें",
-  "app-guide-page": "पृष्ठ",
-  "app-guide-current-events": "वर्तमान घटनाएं",
-  "app-guide-topic": "विषय",
-  "app-guide-artwork": "चित्रकारी",
-  "app-guide-organism": "जीव",
-  "app-guide-music": "संगीत",
-  "app-guide-science": "विज्ञान",
-  "app-topics-found": "विषय मिले",
-  "app-section-main": "मुख्य",
-  "app-section-info": "जानकारी",
-  "app-section-library": "पुस्तकालय",
-  "app-section-web": "वेब",
-  "app-section-news": "समाचार",
-  "app-section-news-general": "सामान्य",
-  "app-section-social": "सामाजिक",
-  "app-section-news-tech": "तकनीक",
-  "app-section-society-jobs": "नौकरियां",
-  "app-section-location": "जगह",
-  "app-section-location-geography": "भूगोल",
-  "app-section-location-demography": "जनसांख्यिकी",
-  "app-section-location-ecology": "परिस्थितिकी",
-  "app-section-location-travel": "यात्रा",
-  "app-section-location-weather": "मौसम",
-  "app-section-location-real-estate": "रियल एस्टेट",
   "app-menu-actions": "कार्रवाई",
   "app-menu-background-audio": "ऑडियो",
   "app-menu-background-midi": "मिडी",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "संपूर्ण स्क्रीन टॉगल करें",
   "app-menu-bookmark-actions": "बुकमार्क-चयन क्रियाएँ",
   "app-menu-bookmark-actions-reasoning": "तर्क",
-  "app-guide-bookmark-teach-topics": "मुझे पढ़ाएं",
-  "app-guide-bookmark-quiz-topics": "मुझसे प्रश्नोत्तरी करो",
-  "app-guide-bookmark-related-topics": "संबंधित विषय",
-  "app-guide-bookmark-topic-differences": "मतभेद",
-  "app-guide-bookmark-commonalities": "समानताएं",
-  "app-guide-bookmark-similarities": "समानता",
-  "app-guide-bookmark-implications": "आशय",
-  "app-guide-bookmark-history": "इतिहास",
   "app-menu-import-as": "बुकमार्क आयात करें",
   "app-menu-export-as": "बुकमार्क निर्यात करें",
   "app-menu-bookmark-actions-media": "मिडिया",
+  "app-menu-upload-json": "डालना",
+  "app-menu-bookmark-current-view": "वर्तमान दृश्य को बुकमार्क करें",
   "app-menu-visual-search": "दृश्य खोज",
   "app-menu-reading-assistance": "पढ़ने में सहायता",
   "app-menu-bread": "शब्द-प्रारंभ बोल्डिंग",
   "app-menu-ai-tutor": "एआई ट्यूटर",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "वर्तमान दृश्य को बुकमार्क करें",
+  "app-menu-datasources": "डेटा स्रोत",
   "app-menu-clone-tab": "क्लोन टैब",
   "app-menu-plant-identification": "पौधे की पहचान",
   "app-menu-text-identification": "पाठ पहचान",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "साइडबार को टॉगल करें",
   "app-menu-add-bookmark": "बुकमार्क जोड़ें",
   "app-menu-note-1": "नोट 1: केवल तभी उपलब्ध है जब फोकस साइडबार या विकिपीडिया लेख फलक पर हो।",
+  "app-menu-features": "विशेषताएँ",
+  "app-menu-persona": "व्यक्तित्व",
+  "app-menu-country-select": "देश",
+  "app-menu-interests": "रूचियाँ",
+  "app-menu-nature-location-quiz": "प्रकृति स्थान प्रश्नोत्तरी",
+  "app-menu-command-editor": "आदेश संपादक",
+  "app-menu-presentation": "प्रस्तुति",
+  "app-menu-editor": "संपादक",
+  "app-menu-run-code": "दौड़ना",
+  "app-menu-clear-editor": "स्पष्ट",
+  "app-menu-cover-topic": "कवर विषय",
+  "app-menu-news": "समाचार",
+  "app-menu-culture": "संस्कृति",
+  "app-menu-nature": "प्रकृति",
+  "app-menu-license": "लाइसेंस",
+  "app-menu-goto-next-topic": "अगले विषय पर जाएँ (साइडबार परिणामों में)",
+  "app-menu-goto-previous-topic": "पिछले विषय पर जाएँ (साइडबार परिणामों में)",
+  "app-menu-goto-next-pane": "अगले फलक पर जाएँ",
+  "app-menu-goto-previous-pane": "पिछले फलक पर जाएँ",
+  "app-menu-new-search": "नई खोज",
+  "app-menu-structured-search": "संरचित खोज",
+  "app-menu-geo-search": "भू खोज",
+  "app-section-main": "मुख्य",
+  "app-section-info": "जानकारी",
+  "app-section-library": "पुस्तकालय",
+  "app-section-web": "वेब",
+  "app-section-news": "समाचार",
+  "app-section-news-general": "सामान्य",
+  "app-section-social": "सामाजिक",
+  "app-section-news-tech": "तकनीक",
+  "app-section-society-jobs": "नौकरियां",
+  "app-section-location": "जगह",
+  "app-section-location-geography": "भूगोल",
+  "app-section-location-demography": "जनसांख्यिकी",
+  "app-section-location-ecology": "परिस्थितिकी",
+  "app-section-location-travel": "यात्रा",
+  "app-section-location-weather": "मौसम",
+  "app-section-location-real-estate": "रियल एस्टेट",
   "app-section-business": "व्यापार",
   "app-section-government": "सरकार",
   "app-section-government-general": "सामान्य",
@@ -132,6 +132,7 @@
   "app-section-library-general": "सामान्य",
   "app-section-library-manuscripts": "पांडुलिपियों",
   "app-section-library-history": "इतिहास",
+  "app-section-library-philosophy": "दर्शन",
   "app-section-library-genealogy": "वंशावली",
   "app-section-library-legal": "कानूनी",
   "app-section-library-products": "उत्पादों",
@@ -144,19 +145,31 @@
   "app-section-society": "समाज",
   "app-section-society-sports": "खेल",
   "app-section-society-food": "खाना",
-  "app-section-library-philosophy": "दर्शन",
   "app-section-library-religion": "धर्म",
   "app-section-library-poetry": "कविता",
   "app-section-library-identity": "पहचान",
   "app-section-society-events": "आयोजन",
-  "app-guide-welcome-text": "कॉन्जेप्ट 21वीं सदी के लिए एक विश्वकोश बनाने का एक प्रयास है।  <br><br> अपने अन्वेषणों का आनंद लें! ",
   "app-section-society-shopping": "खरीदारी",
-  "app-notification-too-few-compare-topics": "पहले बटन का उपयोग करके तुलना में दो या अधिक विषय जोड़ें (विकिपीडिया-लेख के शीर्ष पर और विषय के मेटा-अनुभाग में स्थित)",
-  "app-menu-goto-next-topic": "अगले विषय पर जाएँ (साइडबार परिणामों में)",
-  "app-menu-goto-previous-topic": "पिछले विषय पर जाएँ (साइडबार परिणामों में)",
-  "app-menu-goto-next-pane": "अगले फलक पर जाएँ",
-  "app-menu-goto-previous-pane": "पिछले फलक पर जाएँ",
-  "app-menu-new-search": "नई खोज",
+  "app-guide-bookmarks-selected": "चयनित",
+  "app-guide-bookmarks-deselect-all": "सबको अचयनित करो",
+  "app-guide-bookmark-teach-topics": "मुझे पढ़ाएं",
+  "app-guide-bookmark-quiz-topics": "मुझसे प्रश्नोत्तरी करो",
+  "app-guide-bookmark-related-topics": "संबंधित विषय",
+  "app-guide-bookmark-topic-differences": "मतभेद",
+  "app-guide-bookmark-commonalities": "समानताएं",
+  "app-guide-bookmark-similarities": "समानता",
+  "app-guide-bookmark-implications": "आशय",
+  "app-guide-bookmark-history": "इतिहास",
+  "app-guide-bookmark-gapminder-country-trend": "देश का रुझान",
+  "app-guide-see-more": "और देखें",
+  "app-guide-page": "पृष्ठ",
+  "app-guide-current-events": "वर्तमान घटनाएं",
+  "app-guide-topic": "विषय",
+  "app-guide-artwork": "चित्रकारी",
+  "app-guide-organism": "जीव",
+  "app-guide-music": "संगीत",
+  "app-guide-science": "विज्ञान",
+  "app-guide-welcome-text": "कॉन्जेप्ट 21वीं सदी के लिए एक विश्वकोश बनाने का एक प्रयास है।  <br><br> अपने अन्वेषणों का आनंद लें! ",
   "app-guide-documentary": "दस्तावेज़ी",
   "app-guide-country": "देश",
   "app-guide-string-search": "स्ट्रिंग खोज",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "जीवाणु",
   "app-guide-virus": "वायरस",
   "app-guide-featured-article": "प्रमुख लेख",
-  "app-menu-cover-topic": "कवर विषय",
-  "app-menu-news": "समाचार",
-  "app-menu-culture": "संस्कृति",
-  "app-menu-nature": "प्रकृति",
-  "app-menu-license": "लाइसेंस",
   "app-guide-help": "मदद",
   "app-guide-sea": "समुद्र",
   "app-guide-continent": "महाद्वीप",
@@ -192,7 +200,7 @@
   "app-guide-atom": "एटम",
   "app-guide-protist": "protist",
   "app-guide-country-map": "देश का नक्शा",
-  "app-guide-capital": "कैपिटील",
+  "app-guide-capital": "पूंजी",
   "app-guide-form-of-government": "सरकार का रूप",
   "app-guide-religion": "धर्म",
   "app-guide-period": "अवधि",
@@ -215,25 +223,20 @@
   "app-guide-dish": "व्यंजन",
   "app-guide-cell-type": "कोशिका प्रकार",
   "app-guide-archae": "पुरातन",
-  "app-menu-persona": "व्यक्तित्व",
   "app-guide-featured-portal": "विशेष पोर्टल",
   "app-guide-musical-instrument": "यंत्र",
   "app-guide-technology": "तकनीकी",
   "app-guide-near-me": "मेरे पास",
+  "app-guide-news-gdelt": "जीडीईएलटी",
   "app-guide-newspapers": "समाचार पत्र",
+  "app-guide-radio-map": "रेडियो मानचित्र",
   "app-guide-news-radio": "रेडियो",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "लाइव टीवी",
   "app-guide-news-tv": "टीवी",
   "app-guide-news-economic-indicators": "आर्थिक संकेतक",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "विकास के रुझान",
+  "app-guide-conflict-map": "संघर्ष मानचित्र",
   "app-guide-ongoing-conflicts": "संघर्ष",
   "app-guide-radio": "रेडियो",
-  "app-menu-country-select": "देश",
-  "app-menu-interests": "रूचियाँ",
-  "app-menu-command-editor": "आदेश संपादक",
-  "app-menu-presentation": "प्रस्तुति",
-  "app-menu-editor": "संपादक",
-  "app-menu-run-code": "दौड़ना",
-  "app-menu-clear-editor": "स्पष्ट",
   "app-foo": "फू बार बाज़"
 }
