--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "postavke",
   "app-tab-help-title": "Pomozite",
   "app-tab-audio-chat-title": "audio chat",
+  "app-notification-too-few-compare-topics": "Najprije dodajte dvije ili više tema u usporedbu pomoću gumba (koji se nalazi na vrhu Wikipedia-članka i u meta-odjeljku teme)",
   "app-search-placeholder": "traži",
-  "app-structured-search-title": "strukturirano pretraživanje",
+  "app-topics-found": "pronađenih tema",
   "app-title-occurence": "Karta pojavljivanja",
   "app-title-super": "super",
   "app-title-sub": "pod",
   "app-title-pages": "stranice",
   "app-title-citations": "Citati",
-  "app-guide-see-more": "vidi više",
-  "app-guide-page": "stranica",
-  "app-guide-current-events": "tekuće događaje",
-  "app-guide-topic": "tema",
-  "app-guide-artwork": "slika",
-  "app-guide-organism": "organizam",
-  "app-guide-music": "glazba, muzika",
-  "app-guide-science": "znanost",
-  "app-topics-found": "pronađenih tema",
-  "app-section-main": "glavni",
-  "app-section-info": "info",
-  "app-section-library": "knjižnica",
-  "app-section-web": "mreža",
-  "app-section-news": "vijesti",
-  "app-section-news-general": "Općenito",
-  "app-section-social": "društveni",
-  "app-section-news-tech": "tehn",
-  "app-section-society-jobs": "radnih mjesta",
-  "app-section-location": "mjesto",
-  "app-section-location-geography": "geografija",
-  "app-section-location-demography": "demografija",
-  "app-section-location-ecology": "ekologija",
-  "app-section-location-travel": "putovati",
-  "app-section-location-weather": "vrijeme",
-  "app-section-location-real-estate": "nekretnina",
   "app-menu-actions": "akcije",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "prebaci preko cijelog zaslona",
   "app-menu-bookmark-actions": "akcije odabira oznaka",
   "app-menu-bookmark-actions-reasoning": "rasuđivanje",
-  "app-guide-bookmark-teach-topics": "nauči me",
-  "app-guide-bookmark-quiz-topics": "ispitaj me",
-  "app-guide-bookmark-related-topics": "srodne teme",
-  "app-guide-bookmark-topic-differences": "Razlike",
-  "app-guide-bookmark-commonalities": "zajedničke karakteristike",
-  "app-guide-bookmark-similarities": "sličnosti",
-  "app-guide-bookmark-implications": "implikacije",
-  "app-guide-bookmark-history": "povijesti",
   "app-menu-import-as": "uvoz knjižnih oznaka",
   "app-menu-export-as": "izvoz oznaka",
   "app-menu-bookmark-actions-media": "medijima",
+  "app-menu-upload-json": "Učitaj",
+  "app-menu-bookmark-current-view": "označi trenutni prikaz",
   "app-menu-visual-search": "vizualno pretraživanje",
   "app-menu-reading-assistance": "pomoć u čitanju",
   "app-menu-bread": "početak riječi podebljano",
   "app-menu-ai-tutor": "učitelj umjetne inteligencije",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "označi trenutni prikaz",
+  "app-menu-datasources": "izvori podataka",
   "app-menu-clone-tab": "kartica kloniranja",
   "app-menu-plant-identification": "identifikacija biljke",
   "app-menu-text-identification": "identifikacija teksta",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "prebaci bočnu traku",
   "app-menu-add-bookmark": "dodaj oznaku",
   "app-menu-note-1": "napomena 1: dostupno samo kada je fokus na bočnoj traci ili oknu s člankom na Wikipediji.",
+  "app-menu-features": "značajke",
+  "app-menu-persona": "persona",
+  "app-menu-country-select": "zemlja",
+  "app-menu-interests": "interesa",
+  "app-menu-nature-location-quiz": "kviz o lokaciji u prirodi",
+  "app-menu-command-editor": "uređivač naredbi",
+  "app-menu-presentation": "prezentacija",
+  "app-menu-editor": "urednik",
+  "app-menu-run-code": "trčanje",
+  "app-menu-clear-editor": "čisto",
+  "app-menu-cover-topic": "naslovna tema",
+  "app-menu-news": "vijesti",
+  "app-menu-culture": "Kultura",
+  "app-menu-nature": "priroda",
+  "app-menu-license": "licencija",
+  "app-menu-goto-next-topic": "idi na sljedeću temu (u rezultatima na bočnoj traci)",
+  "app-menu-goto-previous-topic": "idi na prethodnu temu (u rezultatima na bočnoj traci)",
+  "app-menu-goto-next-pane": "idi na sljedeće okno",
+  "app-menu-goto-previous-pane": "idi na prethodno okno",
+  "app-menu-new-search": "nova pretraga",
+  "app-menu-structured-search": "strukturirano pretraživanje",
+  "app-menu-geo-search": "geo pretraživanje",
+  "app-section-main": "glavni",
+  "app-section-info": "info",
+  "app-section-library": "knjižnica",
+  "app-section-web": "mreža",
+  "app-section-news": "vijesti",
+  "app-section-news-general": "Općenito",
+  "app-section-social": "društveni",
+  "app-section-news-tech": "tehn",
+  "app-section-society-jobs": "radnih mjesta",
+  "app-section-location": "mjesto",
+  "app-section-location-geography": "geografija",
+  "app-section-location-demography": "demografija",
+  "app-section-location-ecology": "ekologija",
+  "app-section-location-travel": "putovati",
+  "app-section-location-weather": "vrijeme",
+  "app-section-location-real-estate": "nekretnina",
   "app-section-business": "poslovanje",
   "app-section-government": "vlada",
   "app-section-government-general": "Općenito",
@@ -132,6 +132,7 @@
   "app-section-library-general": "Općenito",
   "app-section-library-manuscripts": "rukopisi",
   "app-section-library-history": "povijesti",
+  "app-section-library-philosophy": "filozofija",
   "app-section-library-genealogy": "genealogija",
   "app-section-library-legal": "pravni",
   "app-section-library-products": "proizvoda",
@@ -144,19 +145,31 @@
   "app-section-society": "društvo",
   "app-section-society-sports": "sportski",
   "app-section-society-food": "hrana",
-  "app-section-library-philosophy": "filozofija",
   "app-section-library-religion": "religija",
   "app-section-library-poetry": "poezija",
   "app-section-library-identity": "identitet",
   "app-section-society-events": "događanja",
-  "app-guide-welcome-text": "Conzept je pokušaj stvaranja enciklopedije za 21. stoljeće.  <br><br> Uživajte u svojim istraživanjima! ",
   "app-section-society-shopping": "shopping",
-  "app-notification-too-few-compare-topics": "Najprije dodajte dvije ili više tema u usporedbu pomoću gumba (koji se nalazi na vrhu Wikipedia-članka i u meta-odjeljku teme)",
-  "app-menu-goto-next-topic": "idi na sljedeću temu (u rezultatima na bočnoj traci)",
-  "app-menu-goto-previous-topic": "idi na prethodnu temu (u rezultatima na bočnoj traci)",
-  "app-menu-goto-next-pane": "idi na sljedeće okno",
-  "app-menu-goto-previous-pane": "idi na prethodno okno",
-  "app-menu-new-search": "nova pretraga",
+  "app-guide-bookmarks-selected": "odabran",
+  "app-guide-bookmarks-deselect-all": "odznači sve",
+  "app-guide-bookmark-teach-topics": "nauči me",
+  "app-guide-bookmark-quiz-topics": "ispitaj me",
+  "app-guide-bookmark-related-topics": "srodne teme",
+  "app-guide-bookmark-topic-differences": "Razlike",
+  "app-guide-bookmark-commonalities": "zajedničke karakteristike",
+  "app-guide-bookmark-similarities": "sličnosti",
+  "app-guide-bookmark-implications": "implikacije",
+  "app-guide-bookmark-history": "povijesti",
+  "app-guide-bookmark-gapminder-country-trend": "trend zemlje",
+  "app-guide-see-more": "vidi više",
+  "app-guide-page": "stranica",
+  "app-guide-current-events": "tekuće događaje",
+  "app-guide-topic": "tema",
+  "app-guide-artwork": "slika",
+  "app-guide-organism": "organizam",
+  "app-guide-music": "glazba, muzika",
+  "app-guide-science": "znanost",
+  "app-guide-welcome-text": "Conzept je pokušaj stvaranja enciklopedije za 21. stoljeće.  <br><br> Uživajte u svojim istraživanjima! ",
   "app-guide-documentary": "dokumentarac",
   "app-guide-country": "zemlja",
   "app-guide-string-search": "pretraživanje niza",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bakterija",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "istaknuti članak",
-  "app-menu-cover-topic": "naslovna tema",
-  "app-menu-news": "vijesti",
-  "app-menu-culture": "Kultura",
-  "app-menu-nature": "priroda",
-  "app-menu-license": "licencija",
   "app-guide-help": "Pomozite",
   "app-guide-sea": "more",
   "app-guide-continent": "kontinent",
@@ -192,7 +200,7 @@
   "app-guide-atom": "atom",
   "app-guide-protist": "protist",
   "app-guide-country-map": "karta zemlje",
-  "app-guide-capital": "glavni grad",
+  "app-guide-capital": "glavni",
   "app-guide-form-of-government": "oblik gov.",
   "app-guide-religion": "religija",
   "app-guide-period": "razdoblje",
@@ -215,25 +223,20 @@
   "app-guide-dish": "jelo",
   "app-guide-cell-type": "vrsta stanice",
   "app-guide-archae": "arheje",
-  "app-menu-persona": "persona",
   "app-guide-featured-portal": "istaknuti portal",
   "app-guide-musical-instrument": "instrument",
   "app-guide-technology": "tehnologija",
   "app-guide-near-me": "blizu mene",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "novine",
+  "app-guide-radio-map": "radio karta",
   "app-guide-news-radio": "radio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "televizija uživo",
   "app-guide-news-tv": "televizor",
   "app-guide-news-economic-indicators": "ekonomski pokazatelji",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "trendovi razvoja",
+  "app-guide-conflict-map": "karta sukoba",
   "app-guide-ongoing-conflicts": "sukobi",
   "app-guide-radio": "radio",
-  "app-menu-country-select": "zemlja",
-  "app-menu-interests": "interesa",
-  "app-menu-command-editor": "uređivač naredbi",
-  "app-menu-presentation": "prezentacija",
-  "app-menu-editor": "urednik",
-  "app-menu-run-code": "trčanje",
-  "app-menu-clear-editor": "čisto",
   "app-foo": "foo bar baz"
 }
