--- a/app/explore2/assets/i18n/ui/conzept-id.json
+++ b/app/explore2/assets/i18n/ui/conzept-id.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "pengaturan",
   "app-tab-help-title": "membantu",
   "app-tab-audio-chat-title": "obrolan audio",
+  "app-notification-too-few-compare-topics": "Pertama, tambahkan dua topik atau lebih ke perbandingan, menggunakan tombol (terletak di bagian atas artikel Wikipedia dan di bagian meta topik)",
   "app-search-placeholder": "mencari",
-  "app-structured-search-title": "pencarian terstruktur",
+  "app-topics-found": "topik ditemukan",
   "app-title-occurence": "Peta kejadian",
   "app-title-super": "super",
   "app-title-sub": "sub",
   "app-title-pages": "halaman",
   "app-title-citations": "Kutipan",
-  "app-guide-see-more": "lihat lebih banyak",
-  "app-guide-page": "halaman",
-  "app-guide-current-events": "Peristiwa saat ini",
-  "app-guide-topic": "tema",
-  "app-guide-artwork": "lukisan",
-  "app-guide-organism": "organisme",
-  "app-guide-music": "musik",
-  "app-guide-science": "sains",
-  "app-topics-found": "topik ditemukan",
-  "app-section-main": "utama",
-  "app-section-info": "info",
-  "app-section-library": "perpustakaan",
-  "app-section-web": "web",
-  "app-section-news": "berita",
-  "app-section-news-general": "umum",
-  "app-section-social": "sosial",
-  "app-section-news-tech": "teknologi",
-  "app-section-society-jobs": "pekerjaan",
-  "app-section-location": "lokasi",
-  "app-section-location-geography": "geografi",
-  "app-section-location-demography": "demografi",
-  "app-section-location-ecology": "ekologi",
-  "app-section-location-travel": "bepergian",
-  "app-section-location-weather": "cuaca",
-  "app-section-location-real-estate": "perumahan",
   "app-menu-actions": "tindakan",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "beralih ke layar penuh",
   "app-menu-bookmark-actions": "tindakan pemilihan bookmark",
   "app-menu-bookmark-actions-reasoning": "pemikiran",
-  "app-guide-bookmark-teach-topics": "ajari aku",
-  "app-guide-bookmark-quiz-topics": "kuis aku",
-  "app-guide-bookmark-related-topics": "topik-topik terkait",
-  "app-guide-bookmark-topic-differences": "perbedaan",
-  "app-guide-bookmark-commonalities": "kesamaan",
-  "app-guide-bookmark-similarities": "kesamaan",
-  "app-guide-bookmark-implications": "implikasi",
-  "app-guide-bookmark-history": "sejarah",
   "app-menu-import-as": "impor bookmark",
   "app-menu-export-as": "ekspor bookmark",
   "app-menu-bookmark-actions-media": "media",
+  "app-menu-upload-json": "mengunggah",
+  "app-menu-bookmark-current-view": "tandai tampilan saat ini",
   "app-menu-visual-search": "pencarian visual",
   "app-menu-reading-assistance": "bantuan membaca",
   "app-menu-bread": "huruf tebal di awal kata",
   "app-menu-ai-tutor": "guru AI",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "tandai tampilan saat ini",
+  "app-menu-datasources": "sumber data",
   "app-menu-clone-tab": "tab klon",
   "app-menu-plant-identification": "identifikasi tanaman",
   "app-menu-text-identification": "identifikasi teks",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "alihkan bilah sisi",
   "app-menu-add-bookmark": "tambah bookmark",
   "app-menu-note-1": "catatan 1: hanya tersedia bila fokus berada pada bilah sisi atau panel artikel Wikipedia.",
+  "app-menu-features": "fitur",
+  "app-menu-persona": "kepribadian",
+  "app-menu-country-select": "negara",
+  "app-menu-interests": "minat",
+  "app-menu-nature-location-quiz": "kuis lokasi alam",
+  "app-menu-command-editor": "editor perintah",
+  "app-menu-presentation": "presentasi",
+  "app-menu-editor": "editor",
+  "app-menu-run-code": "berlari",
+  "app-menu-clear-editor": "jernih",
+  "app-menu-cover-topic": "topik sampul",
+  "app-menu-news": "berita",
+  "app-menu-culture": "budaya",
+  "app-menu-nature": "alam",
+  "app-menu-license": "lisensi",
+  "app-menu-goto-next-topic": "lanjutkan ke topik berikutnya (di hasil sidebar)",
+  "app-menu-goto-previous-topic": "buka topik sebelumnya (di hasil sidebar)",
+  "app-menu-goto-next-pane": "pergi ke panel berikutnya",
+  "app-menu-goto-previous-pane": "pergi ke panel sebelumnya",
+  "app-menu-new-search": "pencarian baru",
+  "app-menu-structured-search": "pencarian terstruktur",
+  "app-menu-geo-search": "pencarian geografis",
+  "app-section-main": "utama",
+  "app-section-info": "info",
+  "app-section-library": "perpustakaan",
+  "app-section-web": "web",
+  "app-section-news": "berita",
+  "app-section-news-general": "umum",
+  "app-section-social": "sosial",
+  "app-section-news-tech": "teknologi",
+  "app-section-society-jobs": "pekerjaan",
+  "app-section-location": "lokasi",
+  "app-section-location-geography": "geografi",
+  "app-section-location-demography": "demografi",
+  "app-section-location-ecology": "ekologi",
+  "app-section-location-travel": "bepergian",
+  "app-section-location-weather": "cuaca",
+  "app-section-location-real-estate": "perumahan",
   "app-section-business": "bisnis",
   "app-section-government": "pemerintah",
   "app-section-government-general": "umum",
@@ -132,6 +132,7 @@
   "app-section-library-general": "umum",
   "app-section-library-manuscripts": "manuskrip",
   "app-section-library-history": "sejarah",
+  "app-section-library-philosophy": "filsafat",
   "app-section-library-genealogy": "silsilah",
   "app-section-library-legal": "hukum",
   "app-section-library-products": "produk",
@@ -144,19 +145,31 @@
   "app-section-society": "masyarakat",
   "app-section-society-sports": "olahraga",
   "app-section-society-food": "makanan",
-  "app-section-library-philosophy": "filsafat",
   "app-section-library-religion": "agama",
   "app-section-library-poetry": "puisi",
   "app-section-library-identity": "identitas",
   "app-section-society-events": "acara",
-  "app-guide-welcome-text": "Conzept merupakan upaya untuk membuat ensiklopedia untuk abad ke-21.  <br><br> Nikmati penjelajahan Anda! ",
   "app-section-society-shopping": "belanja",
-  "app-notification-too-few-compare-topics": "Pertama, tambahkan dua topik atau lebih ke perbandingan, menggunakan tombol (terletak di bagian atas artikel Wikipedia dan di bagian meta topik)",
-  "app-menu-goto-next-topic": "lanjutkan ke topik berikutnya (di hasil sidebar)",
-  "app-menu-goto-previous-topic": "buka topik sebelumnya (di hasil sidebar)",
-  "app-menu-goto-next-pane": "pergi ke panel berikutnya",
-  "app-menu-goto-previous-pane": "pergi ke panel sebelumnya",
-  "app-menu-new-search": "pencarian baru",
+  "app-guide-bookmarks-selected": "terpilih",
+  "app-guide-bookmarks-deselect-all": "batalkan pilihan semua",
+  "app-guide-bookmark-teach-topics": "ajari aku",
+  "app-guide-bookmark-quiz-topics": "kuis aku",
+  "app-guide-bookmark-related-topics": "topik-topik terkait",
+  "app-guide-bookmark-topic-differences": "perbedaan",
+  "app-guide-bookmark-commonalities": "kesamaan",
+  "app-guide-bookmark-similarities": "kesamaan",
+  "app-guide-bookmark-implications": "implikasi",
+  "app-guide-bookmark-history": "sejarah",
+  "app-guide-bookmark-gapminder-country-trend": "tren negara",
+  "app-guide-see-more": "lihat lebih banyak",
+  "app-guide-page": "halaman",
+  "app-guide-current-events": "Peristiwa saat ini",
+  "app-guide-topic": "tema",
+  "app-guide-artwork": "lukisan",
+  "app-guide-organism": "organisme",
+  "app-guide-music": "musik",
+  "app-guide-science": "sains",
+  "app-guide-welcome-text": "Conzept merupakan upaya untuk membuat ensiklopedia untuk abad ke-21.  <br><br> Nikmati penjelajahan Anda! ",
   "app-guide-documentary": "dokumenter",
   "app-guide-country": "negara",
   "app-guide-string-search": "pencarian string",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bakteri",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "artikel unggulan",
-  "app-menu-cover-topic": "topik sampul",
-  "app-menu-news": "berita",
-  "app-menu-culture": "budaya",
-  "app-menu-nature": "alam",
-  "app-menu-license": "lisensi",
   "app-guide-help": "membantu",
   "app-guide-sea": "laut",
   "app-guide-continent": "benua",
@@ -192,7 +200,7 @@
   "app-guide-atom": "atom",
   "app-guide-protist": "protista",
   "app-guide-country-map": "peta negara",
-  "app-guide-capital": "gedung DPR",
+  "app-guide-capital": "modal",
   "app-guide-form-of-government": "bentuk pemerintahan.",
   "app-guide-religion": "agama",
   "app-guide-period": "periode",
@@ -215,25 +223,20 @@
   "app-guide-dish": "piring",
   "app-guide-cell-type": "jenis sel",
   "app-guide-archae": "kuno",
-  "app-menu-persona": "kepribadian",
   "app-guide-featured-portal": "portal unggulan",
   "app-guide-musical-instrument": "instrumen",
   "app-guide-technology": "teknologi",
   "app-guide-near-me": "dekat saya",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "surat kabar",
+  "app-guide-radio-map": "peta radio",
   "app-guide-news-radio": "radio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "siaran langsung",
   "app-guide-news-tv": "televisi",
   "app-guide-news-economic-indicators": "indikator ekonomi",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "tren pembangunan",
+  "app-guide-conflict-map": "peta konflik",
   "app-guide-ongoing-conflicts": "konflik",
   "app-guide-radio": "radio",
-  "app-menu-country-select": "negara",
-  "app-menu-interests": "minat",
-  "app-menu-command-editor": "editor perintah",
-  "app-menu-presentation": "presentasi",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "berlari",
-  "app-menu-clear-editor": "jernih",
   "app-foo": "foo bar baz"
 }
