--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "設定",
   "app-tab-help-title": "ヘルプ",
   "app-tab-audio-chat-title": "音声チャット",
+  "app-notification-too-few-compare-topics": "まず、ボタン (Wikipedia 記事の上部とトピックのメタ セクションにあります) を使用して、2 つ以上のトピックを比較に追加します。",
   "app-search-placeholder": "検索",
-  "app-structured-search-title": "構造化された検索",
+  "app-topics-found": "トピックが見つかりました",
   "app-title-occurence": "発生マップ",
   "app-title-super": "素晴らしい",
   "app-title-sub": "サブ",
   "app-title-pages": "ページ",
   "app-title-citations": "引用",
-  "app-guide-see-more": "続きを見る",
-  "app-guide-page": "ページ",
-  "app-guide-current-events": "時事問題",
-  "app-guide-topic": "トピック",
-  "app-guide-artwork": "絵画",
-  "app-guide-organism": "生命体",
-  "app-guide-music": "音楽",
-  "app-guide-science": "科学",
-  "app-topics-found": "トピックが見つかりました",
-  "app-section-main": "主要",
-  "app-section-info": "情報",
-  "app-section-library": "図書館",
-  "app-section-web": "ウェブ",
-  "app-section-news": "ニュース",
-  "app-section-news-general": "一般的な",
-  "app-section-social": "社交",
-  "app-section-news-tech": "技術",
-  "app-section-society-jobs": "仕事",
-  "app-section-location": "位置",
-  "app-section-location-geography": "地理",
-  "app-section-location-demography": "人口統計",
-  "app-section-location-ecology": "生態学",
-  "app-section-location-travel": "旅行",
-  "app-section-location-weather": "天気",
-  "app-section-location-real-estate": "不動産",
   "app-menu-actions": "行動",
   "app-menu-background-audio": "オーディオ",
   "app-menu-background-midi": "ミディ",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "フルスクリーン切り替え",
   "app-menu-bookmark-actions": "ブックマーク選択アクション",
   "app-menu-bookmark-actions-reasoning": "推論",
-  "app-guide-bookmark-teach-topics": "教えて",
-  "app-guide-bookmark-quiz-topics": "クイズしてください",
-  "app-guide-bookmark-related-topics": "関連トピック",
-  "app-guide-bookmark-topic-differences": "違い",
-  "app-guide-bookmark-commonalities": "共通点",
-  "app-guide-bookmark-similarities": "類似点",
-  "app-guide-bookmark-implications": "影響",
-  "app-guide-bookmark-history": "歴史",
   "app-menu-import-as": "ブックマークをインポートする",
   "app-menu-export-as": "ブックマークをエクスポートする",
   "app-menu-bookmark-actions-media": "メディア",
-  "app-menu-visual-search": "ビジュアル検索",
+  "app-menu-upload-json": "アップロード",
+  "app-menu-bookmark-current-view": "現在のビューをブックマークする",
+  "app-menu-visual-search": "視覚的な検索",
   "app-menu-reading-assistance": "読書補助",
   "app-menu-bread": "単語の先頭を太字にする",
   "app-menu-ai-tutor": "AI家庭教師",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "現在のビューをブックマークする",
+  "app-menu-datasources": "データソース",
   "app-menu-clone-tab": "クローンタブ",
   "app-menu-plant-identification": "植物の同定",
   "app-menu-text-identification": "テキストの識別",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "サイドバーを切り替えます",
   "app-menu-add-bookmark": "ブックマークを追加する",
   "app-menu-note-1": "注 1: フォーカスがサイドバーまたは Wikipedia 記事ペインにある場合にのみ使用できます。",
+  "app-menu-features": "特徴",
+  "app-menu-persona": "ペルソナ",
+  "app-menu-country-select": "国",
+  "app-menu-interests": "興味のあること",
+  "app-menu-nature-location-quiz": "自然の場所クイズ",
+  "app-menu-command-editor": "コマンドエディタ",
+  "app-menu-presentation": "プレゼンテーション",
+  "app-menu-editor": "編集者",
+  "app-menu-run-code": "走る",
+  "app-menu-clear-editor": "クリア",
+  "app-menu-cover-topic": "表紙のトピック",
+  "app-menu-news": "ニュース",
+  "app-menu-culture": "文化",
+  "app-menu-nature": "自然",
+  "app-menu-license": "ライセンス",
+  "app-menu-goto-next-topic": "次のトピックに移動します (サイドバーの結果内)",
+  "app-menu-goto-previous-topic": "前のトピックに移動します (サイドバーの結果内)",
+  "app-menu-goto-next-pane": "次のペインに移動",
+  "app-menu-goto-previous-pane": "前のペインに移動",
+  "app-menu-new-search": "新しい検索",
+  "app-menu-structured-search": "構造化された検索",
+  "app-menu-geo-search": "地理検索",
+  "app-section-main": "主要",
+  "app-section-info": "情報",
+  "app-section-library": "図書館",
+  "app-section-web": "ウェブ",
+  "app-section-news": "ニュース",
+  "app-section-news-general": "一般的な",
+  "app-section-social": "社交",
+  "app-section-news-tech": "技術",
+  "app-section-society-jobs": "仕事",
+  "app-section-location": "位置",
+  "app-section-location-geography": "地理",
+  "app-section-location-demography": "人口統計",
+  "app-section-location-ecology": "生態学",
+  "app-section-location-travel": "旅行",
+  "app-section-location-weather": "天気",
+  "app-section-location-real-estate": "不動産",
   "app-section-business": "仕事",
   "app-section-government": "政府",
   "app-section-government-general": "一般的な",
@@ -132,6 +132,7 @@
   "app-section-library-general": "一般的な",
   "app-section-library-manuscripts": "原稿",
   "app-section-library-history": "歴史",
+  "app-section-library-philosophy": "哲学",
   "app-section-library-genealogy": "系譜",
   "app-section-library-legal": "法律上の",
   "app-section-library-products": "製品",
@@ -144,19 +145,31 @@
   "app-section-society": "社会",
   "app-section-society-sports": "スポーツ",
   "app-section-society-food": "食べ物",
-  "app-section-library-philosophy": "哲学",
   "app-section-library-religion": "宗教",
   "app-section-library-poetry": "詩",
   "app-section-library-identity": "身元",
   "app-section-society-events": "イベント",
-  "app-guide-welcome-text": "Conzept は 21 世紀の百科事典を作成する試みです。  <br><br> 探検をお楽しみください!",
   "app-section-society-shopping": "買い物",
-  "app-notification-too-few-compare-topics": "まず、ボタン (Wikipedia 記事の上部とトピックのメタ セクションにあります) を使用して、2 つ以上のトピックを比較に追加します。",
-  "app-menu-goto-next-topic": "次のトピックに移動します (サイドバーの結果内)",
-  "app-menu-goto-previous-topic": "前のトピックに移動します (サイドバーの結果内)",
-  "app-menu-goto-next-pane": "次のペインに移動",
-  "app-menu-goto-previous-pane": "前のペインに移動",
-  "app-menu-new-search": "新しい検索",
+  "app-guide-bookmarks-selected": "選択された",
+  "app-guide-bookmarks-deselect-all": "すべての選択を解除",
+  "app-guide-bookmark-teach-topics": "教えて",
+  "app-guide-bookmark-quiz-topics": "クイズしてください",
+  "app-guide-bookmark-related-topics": "関連トピック",
+  "app-guide-bookmark-topic-differences": "違い",
+  "app-guide-bookmark-commonalities": "共通点",
+  "app-guide-bookmark-similarities": "類似点",
+  "app-guide-bookmark-implications": "影響",
+  "app-guide-bookmark-history": "歴史",
+  "app-guide-bookmark-gapminder-country-trend": "国の動向",
+  "app-guide-see-more": "続きを見る",
+  "app-guide-page": "ページ",
+  "app-guide-current-events": "時事問題",
+  "app-guide-topic": "トピック",
+  "app-guide-artwork": "絵画",
+  "app-guide-organism": "生命体",
+  "app-guide-music": "音楽",
+  "app-guide-science": "科学",
+  "app-guide-welcome-text": "Conzept は 21 世紀の百科事典を作成する試みです。  <br><br> 探検をお楽しみください!",
   "app-guide-documentary": "ドキュメンタリー",
   "app-guide-country": "国",
   "app-guide-string-search": "文字列検索",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "細菌",
   "app-guide-virus": "ウイルス",
   "app-guide-featured-article": "おすすめの記事",
-  "app-menu-cover-topic": "表紙のトピック",
-  "app-menu-news": "ニュース",
-  "app-menu-culture": "文化",
-  "app-menu-nature": "自然",
-  "app-menu-license": "ライセンス",
   "app-guide-help": "ヘルプ",
   "app-guide-sea": "海",
   "app-guide-continent": "大陸",
@@ -192,7 +200,7 @@
   "app-guide-atom": "原子",
   "app-guide-protist": "原生生物",
   "app-guide-country-map": "国の地図",
-  "app-guide-capital": "国会議事堂",
+  "app-guide-capital": "資本",
   "app-guide-form-of-government": "政府の形式",
   "app-guide-religion": "宗教",
   "app-guide-period": "期間",
@@ -215,25 +223,20 @@
   "app-guide-dish": "皿",
   "app-guide-cell-type": "細胞の種類",
   "app-guide-archae": "古細菌",
-  "app-menu-persona": "ペルソナ",
   "app-guide-featured-portal": "注目のポータル",
   "app-guide-musical-instrument": "楽器",
   "app-guide-technology": "テクノロジー",
   "app-guide-near-me": "私の近く",
+  "app-guide-news-gdelt": "グデルト",
   "app-guide-newspapers": "新聞",
+  "app-guide-radio-map": "ラジオマップ",
   "app-guide-news-radio": "無線",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "生放送",
   "app-guide-news-tv": "テレビ",
   "app-guide-news-economic-indicators": "経済指標",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "開発動向",
+  "app-guide-conflict-map": "紛争マップ",
   "app-guide-ongoing-conflicts": "衝突",
   "app-guide-radio": "無線",
-  "app-menu-country-select": "国",
-  "app-menu-interests": "興味のあること",
-  "app-menu-command-editor": "コマンドエディタ",
-  "app-menu-presentation": "プレゼンテーション",
-  "app-menu-editor": "編集者",
-  "app-menu-run-code": "走る",
-  "app-menu-clear-editor": "クリア",
   "app-foo": "フーバーバズ"
 }
