--- a/app/explore2/assets/i18n/ui/conzept-no.json
+++ b/app/explore2/assets/i18n/ui/conzept-no.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "innstillinger",
   "app-tab-help-title": "hjelp",
   "app-tab-audio-chat-title": "lydchat",
+  "app-notification-too-few-compare-topics": "Legg først til to eller flere emner til sammenligningen ved å bruke knappen (plassert øverst i Wikipedia-artikkelen og i meta-delen av emnet)",
   "app-search-placeholder": "Søk",
-  "app-structured-search-title": "strukturert søk",
+  "app-topics-found": "emner funnet",
   "app-title-occurence": "Forekomst kart",
   "app-title-super": "super",
   "app-title-sub": "under",
   "app-title-pages": "sider",
   "app-title-citations": "Sitater",
-  "app-guide-see-more": "se mer",
-  "app-guide-page": "side",
-  "app-guide-current-events": "aktuelle hendelser",
-  "app-guide-topic": "emne",
-  "app-guide-artwork": "maleri",
-  "app-guide-organism": "organisme",
-  "app-guide-music": "musikk",
-  "app-guide-science": "vitenskap",
-  "app-topics-found": "emner funnet",
-  "app-section-main": "hoved-",
-  "app-section-info": "info",
-  "app-section-library": "bibliotek",
-  "app-section-web": "web",
-  "app-section-news": "nyheter",
-  "app-section-news-general": "generell",
-  "app-section-social": "sosial",
-  "app-section-news-tech": "tech",
-  "app-section-society-jobs": "arbeidsplasser",
-  "app-section-location": "plassering",
-  "app-section-location-geography": "geografi",
-  "app-section-location-demography": "demografi",
-  "app-section-location-ecology": "økologi",
-  "app-section-location-travel": "reise",
-  "app-section-location-weather": "vær",
-  "app-section-location-real-estate": "eiendom",
   "app-menu-actions": "handlinger",
   "app-menu-background-audio": "lyd",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "veksle mellom fullskjerm",
   "app-menu-bookmark-actions": "handlinger for bokmerkevalg",
   "app-menu-bookmark-actions-reasoning": "argumentasjon",
-  "app-guide-bookmark-teach-topics": "Lær meg",
-  "app-guide-bookmark-quiz-topics": "spør meg",
-  "app-guide-bookmark-related-topics": "relaterte temaer",
-  "app-guide-bookmark-topic-differences": "forskjeller",
-  "app-guide-bookmark-commonalities": "fellestrekk",
-  "app-guide-bookmark-similarities": "likheter",
-  "app-guide-bookmark-implications": "implikasjoner",
-  "app-guide-bookmark-history": "historie",
   "app-menu-import-as": "importere bokmerker",
   "app-menu-export-as": "eksportere bokmerker",
   "app-menu-bookmark-actions-media": "media",
+  "app-menu-upload-json": "laste opp",
+  "app-menu-bookmark-current-view": "bokmerke gjeldende visning",
   "app-menu-visual-search": "visuelt søk",
   "app-menu-reading-assistance": "lesehjelp",
   "app-menu-bread": "ord-start fet skrift",
   "app-menu-ai-tutor": "AI-lærer",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "bokmerke gjeldende visning",
+  "app-menu-datasources": "datakilder",
   "app-menu-clone-tab": "klone-fanen",
   "app-menu-plant-identification": "planteidentifikasjon",
   "app-menu-text-identification": "tekstidentifikasjon",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "slå på sidefeltet",
   "app-menu-add-bookmark": "Legg til bokmerke",
   "app-menu-note-1": "merknad 1: bare tilgjengelig når fokus er på sidefeltet eller en Wikipedia-artikkelrute.",
+  "app-menu-features": "egenskaper",
+  "app-menu-persona": "persona",
+  "app-menu-country-select": "land",
+  "app-menu-interests": "interesser",
+  "app-menu-nature-location-quiz": "naturplasseringsquiz",
+  "app-menu-command-editor": "kommando editor",
+  "app-menu-presentation": "presentasjon",
+  "app-menu-editor": "redaktør",
+  "app-menu-run-code": "løpe",
+  "app-menu-clear-editor": "klar",
+  "app-menu-cover-topic": "dekke emnet",
+  "app-menu-news": "nyheter",
+  "app-menu-culture": "kultur",
+  "app-menu-nature": "natur",
+  "app-menu-license": "tillatelse",
+  "app-menu-goto-next-topic": "gå til neste emne (i sidefeltets resultater)",
+  "app-menu-goto-previous-topic": "gå til forrige emne (i sidefeltets resultater)",
+  "app-menu-goto-next-pane": "gå til neste rute",
+  "app-menu-goto-previous-pane": "gå til forrige rute",
+  "app-menu-new-search": "nytt søk",
+  "app-menu-structured-search": "strukturert søk",
+  "app-menu-geo-search": "geo søk",
+  "app-section-main": "hoved-",
+  "app-section-info": "info",
+  "app-section-library": "bibliotek",
+  "app-section-web": "web",
+  "app-section-news": "nyheter",
+  "app-section-news-general": "generell",
+  "app-section-social": "sosial",
+  "app-section-news-tech": "tech",
+  "app-section-society-jobs": "arbeidsplasser",
+  "app-section-location": "plassering",
+  "app-section-location-geography": "geografi",
+  "app-section-location-demography": "demografi",
+  "app-section-location-ecology": "økologi",
+  "app-section-location-travel": "reise",
+  "app-section-location-weather": "vær",
+  "app-section-location-real-estate": "eiendom",
   "app-section-business": "virksomhet",
   "app-section-government": "Myndighetene",
   "app-section-government-general": "generell",
@@ -132,6 +132,7 @@
   "app-section-library-general": "generell",
   "app-section-library-manuscripts": "manuskripter",
   "app-section-library-history": "historie",
+  "app-section-library-philosophy": "filosofi",
   "app-section-library-genealogy": "slektsforskning",
   "app-section-library-legal": "lovlig",
   "app-section-library-products": "Produkter",
@@ -144,19 +145,31 @@
   "app-section-society": "samfunn",
   "app-section-society-sports": "sport",
   "app-section-society-food": "mat",
-  "app-section-library-philosophy": "filosofi",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "poesi",
   "app-section-library-identity": "identitet",
   "app-section-society-events": "arrangementer",
-  "app-guide-welcome-text": "Conzept er et forsøk på å lage et leksikon for det 21. århundre.  <br><br> Nyt undersøkelsene dine! ",
   "app-section-society-shopping": "shopping",
-  "app-notification-too-few-compare-topics": "Legg først til to eller flere emner til sammenligningen ved å bruke knappen (plassert øverst i Wikipedia-artikkelen og i meta-delen av emnet)",
-  "app-menu-goto-next-topic": "gå til neste emne (i sidefeltets resultater)",
-  "app-menu-goto-previous-topic": "gå til forrige emne (i sidefeltets resultater)",
-  "app-menu-goto-next-pane": "gå til neste rute",
-  "app-menu-goto-previous-pane": "gå til forrige rute",
-  "app-menu-new-search": "nytt søk",
+  "app-guide-bookmarks-selected": "valgt",
+  "app-guide-bookmarks-deselect-all": "Opphev alle",
+  "app-guide-bookmark-teach-topics": "Lær meg",
+  "app-guide-bookmark-quiz-topics": "spør meg",
+  "app-guide-bookmark-related-topics": "relaterte temaer",
+  "app-guide-bookmark-topic-differences": "forskjeller",
+  "app-guide-bookmark-commonalities": "fellestrekk",
+  "app-guide-bookmark-similarities": "likheter",
+  "app-guide-bookmark-implications": "implikasjoner",
+  "app-guide-bookmark-history": "historie",
+  "app-guide-bookmark-gapminder-country-trend": "land trend",
+  "app-guide-see-more": "se mer",
+  "app-guide-page": "side",
+  "app-guide-current-events": "aktuelle hendelser",
+  "app-guide-topic": "emne",
+  "app-guide-artwork": "maleri",
+  "app-guide-organism": "organisme",
+  "app-guide-music": "musikk",
+  "app-guide-science": "vitenskap",
+  "app-guide-welcome-text": "Conzept er et forsøk på å lage et leksikon for det 21. århundre.  <br><br> Nyt undersøkelsene dine! ",
   "app-guide-documentary": "dokumentar",
   "app-guide-country": "land",
   "app-guide-string-search": "strengsøk",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bakterie",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "omtalt artikkel",
-  "app-menu-cover-topic": "dekke emnet",
-  "app-menu-news": "nyheter",
-  "app-menu-culture": "kultur",
-  "app-menu-nature": "natur",
-  "app-menu-license": "tillatelse",
   "app-guide-help": "hjelp",
   "app-guide-sea": "hav",
   "app-guide-continent": "kontinent",
@@ -215,25 +223,20 @@
   "app-guide-dish": "rett",
   "app-guide-cell-type": "celletype",
   "app-guide-archae": "arkae",
-  "app-menu-persona": "persona",
   "app-guide-featured-portal": "omtalt portal",
   "app-guide-musical-instrument": "instrument",
   "app-guide-technology": "teknologi",
   "app-guide-near-me": "nær meg",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "aviser",
+  "app-guide-radio-map": "radio kart",
   "app-guide-news-radio": "radio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "direktesendt TV",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "økonomiske indikatorer",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "utviklingstrender",
+  "app-guide-conflict-map": "konfliktkart",
   "app-guide-ongoing-conflicts": "konflikter",
   "app-guide-radio": "radio",
-  "app-menu-country-select": "land",
-  "app-menu-interests": "interesser",
-  "app-menu-command-editor": "kommando editor",
-  "app-menu-presentation": "presentasjon",
-  "app-menu-editor": "redaktør",
-  "app-menu-run-code": "løpe",
-  "app-menu-clear-editor": "klar",
   "app-foo": "foo bar baz"
 }
