--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "configurações",
   "app-tab-help-title": "ajuda",
   "app-tab-audio-chat-title": "bate-papo de áudio",
+  "app-notification-too-few-compare-topics": "Primeiro adicione dois ou mais tópicos à comparação, usando o botão (localizado no topo do artigo da Wikipedia e na metaseção do tópico)",
   "app-search-placeholder": "procurar",
-  "app-structured-search-title": "pesquisa estruturada",
+  "app-topics-found": "tópicos encontrados",
   "app-title-occurence": "Mapa de ocorrência",
   "app-title-super": "super",
   "app-title-sub": "sub",
   "app-title-pages": "Páginas",
   "app-title-citations": "Citações",
-  "app-guide-see-more": "ver mais",
-  "app-guide-page": "página",
-  "app-guide-current-events": "eventos atuais",
-  "app-guide-topic": "tema",
-  "app-guide-artwork": "pintura",
-  "app-guide-organism": "organismo",
-  "app-guide-music": "música",
-  "app-guide-science": "Ciência",
-  "app-topics-found": "tópicos encontrados",
-  "app-section-main": "principal",
-  "app-section-info": "informações",
-  "app-section-library": "biblioteca",
-  "app-section-web": "rede",
-  "app-section-news": "notícias",
-  "app-section-news-general": "em geral",
-  "app-section-social": "social",
-  "app-section-news-tech": "tecnologia",
-  "app-section-society-jobs": "empregos",
-  "app-section-location": "localização",
-  "app-section-location-geography": "geografia",
-  "app-section-location-demography": "demografia",
-  "app-section-location-ecology": "ecologia",
-  "app-section-location-travel": "viagem",
-  "app-section-location-weather": "clima",
-  "app-section-location-real-estate": "imobiliária",
   "app-menu-actions": "ações",
   "app-menu-background-audio": "áudio",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "alternar para o modo tela cheia",
   "app-menu-bookmark-actions": "ações de seleção de favoritos",
   "app-menu-bookmark-actions-reasoning": "raciocínio",
-  "app-guide-bookmark-teach-topics": "ensine-me",
-  "app-guide-bookmark-quiz-topics": "me questione",
-  "app-guide-bookmark-related-topics": "tópicos relacionados",
-  "app-guide-bookmark-topic-differences": "diferenças",
-  "app-guide-bookmark-commonalities": "pontos em comum",
-  "app-guide-bookmark-similarities": "semelhanças",
-  "app-guide-bookmark-implications": "implicações",
-  "app-guide-bookmark-history": "história",
   "app-menu-import-as": "importar favoritos",
   "app-menu-export-as": "exportar favoritos",
   "app-menu-bookmark-actions-media": "meios de comunicação",
+  "app-menu-upload-json": "carregar",
+  "app-menu-bookmark-current-view": "marcar a visualização atual",
   "app-menu-visual-search": "pesquisa visual",
   "app-menu-reading-assistance": "assistência de leitura",
   "app-menu-bread": "negrito no início da palavra",
   "app-menu-ai-tutor": "Tutor de IA",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "marcar a visualização atual",
+  "app-menu-datasources": "fontes de dados",
   "app-menu-clone-tab": "guia clonar",
   "app-menu-plant-identification": "identificação de plantas",
   "app-menu-text-identification": "identificação de texto",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "alternar a barra lateral",
   "app-menu-add-bookmark": "adicionar marcador",
   "app-menu-note-1": "nota 1: disponível apenas quando o foco está na barra lateral ou no painel de artigos da Wikipedia.",
+  "app-menu-features": "características",
+  "app-menu-persona": "pessoa",
+  "app-menu-country-select": "país",
+  "app-menu-interests": "interesses",
+  "app-menu-nature-location-quiz": "teste de localização da natureza",
+  "app-menu-command-editor": "editor de comandos",
+  "app-menu-presentation": "apresentação",
+  "app-menu-editor": "editor",
+  "app-menu-run-code": "correr",
+  "app-menu-clear-editor": "claro",
+  "app-menu-cover-topic": "tópico de capa",
+  "app-menu-news": "notícias",
+  "app-menu-culture": "cultura",
+  "app-menu-nature": "natureza",
+  "app-menu-license": "licença",
+  "app-menu-goto-next-topic": "vá para o próximo tópico (nos resultados da barra lateral)",
+  "app-menu-goto-previous-topic": "vá para o tópico anterior (nos resultados da barra lateral)",
+  "app-menu-goto-next-pane": "ir para o próximo painel",
+  "app-menu-goto-previous-pane": "ir para o painel anterior",
+  "app-menu-new-search": "nova pesquisa",
+  "app-menu-structured-search": "pesquisa estruturada",
+  "app-menu-geo-search": "pesquisa geográfica",
+  "app-section-main": "principal",
+  "app-section-info": "informações",
+  "app-section-library": "biblioteca",
+  "app-section-web": "rede",
+  "app-section-news": "notícias",
+  "app-section-news-general": "em geral",
+  "app-section-social": "social",
+  "app-section-news-tech": "tecnologia",
+  "app-section-society-jobs": "empregos",
+  "app-section-location": "localização",
+  "app-section-location-geography": "geografia",
+  "app-section-location-demography": "demografia",
+  "app-section-location-ecology": "ecologia",
+  "app-section-location-travel": "viagem",
+  "app-section-location-weather": "clima",
+  "app-section-location-real-estate": "imobiliária",
   "app-section-business": "negócios",
   "app-section-government": "governo",
   "app-section-government-general": "em geral",
@@ -132,6 +132,7 @@
   "app-section-library-general": "em geral",
   "app-section-library-manuscripts": "manuscritos",
   "app-section-library-history": "história",
+  "app-section-library-philosophy": "filosofia",
   "app-section-library-genealogy": "Genealogia",
   "app-section-library-legal": "jurídico",
   "app-section-library-products": "produtos",
@@ -144,19 +145,31 @@
   "app-section-society": "sociedade",
   "app-section-society-sports": "Esportes",
   "app-section-society-food": "comida",
-  "app-section-library-philosophy": "filosofia",
   "app-section-library-religion": "religião",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identidade",
   "app-section-society-events": "eventos",
-  "app-guide-welcome-text": "Conzept é uma tentativa de criar uma enciclopédia para o século XXI.  <br><br> Aproveite suas explorações! ",
   "app-section-society-shopping": "compras",
-  "app-notification-too-few-compare-topics": "Primeiro adicione dois ou mais tópicos à comparação, usando o botão (localizado no topo do artigo da Wikipedia e na metaseção do tópico)",
-  "app-menu-goto-next-topic": "vá para o próximo tópico (nos resultados da barra lateral)",
-  "app-menu-goto-previous-topic": "vá para o tópico anterior (nos resultados da barra lateral)",
-  "app-menu-goto-next-pane": "ir para o próximo painel",
-  "app-menu-goto-previous-pane": "ir para o painel anterior",
-  "app-menu-new-search": "nova pesquisa",
+  "app-guide-bookmarks-selected": "selecionado",
+  "app-guide-bookmarks-deselect-all": "desmarcar todos",
+  "app-guide-bookmark-teach-topics": "ensine-me",
+  "app-guide-bookmark-quiz-topics": "me questione",
+  "app-guide-bookmark-related-topics": "tópicos relacionados",
+  "app-guide-bookmark-topic-differences": "diferenças",
+  "app-guide-bookmark-commonalities": "pontos em comum",
+  "app-guide-bookmark-similarities": "semelhanças",
+  "app-guide-bookmark-implications": "implicações",
+  "app-guide-bookmark-history": "história",
+  "app-guide-bookmark-gapminder-country-trend": "tendência do país",
+  "app-guide-see-more": "ver mais",
+  "app-guide-page": "página",
+  "app-guide-current-events": "eventos atuais",
+  "app-guide-topic": "tema",
+  "app-guide-artwork": "pintura",
+  "app-guide-organism": "organismo",
+  "app-guide-music": "música",
+  "app-guide-science": "Ciência",
+  "app-guide-welcome-text": "Conzept é uma tentativa de criar uma enciclopédia para o século XXI.  <br><br> Aproveite suas explorações! ",
   "app-guide-documentary": "documentário",
   "app-guide-country": "país",
   "app-guide-string-search": "pesquisa de strings",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bactéria",
   "app-guide-virus": "vírus",
   "app-guide-featured-article": "Artigo de destaque",
-  "app-menu-cover-topic": "tópico de capa",
-  "app-menu-news": "notícias",
-  "app-menu-culture": "cultura",
-  "app-menu-nature": "natureza",
-  "app-menu-license": "licença",
   "app-guide-help": "ajuda",
   "app-guide-sea": "mar",
   "app-guide-continent": "continente",
@@ -192,7 +200,7 @@
   "app-guide-atom": "átomo",
   "app-guide-protist": "protista",
   "app-guide-country-map": "mapa do país",
-  "app-guide-capital": "Capitólio",
+  "app-guide-capital": "capital",
   "app-guide-form-of-government": "forma de governo",
   "app-guide-religion": "religião",
   "app-guide-period": "período",
@@ -215,25 +223,20 @@
   "app-guide-dish": "prato",
   "app-guide-cell-type": "tipo de célula",
   "app-guide-archae": "arquéias",
-  "app-menu-persona": "personalidade",
   "app-guide-featured-portal": "portal em destaque",
   "app-guide-musical-instrument": "instrumento",
   "app-guide-technology": "tecnologia",
   "app-guide-near-me": "perto de mim",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "jornais",
+  "app-guide-radio-map": "mapa de rádio",
   "app-guide-news-radio": "rádio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "TV ao vivo",
   "app-guide-news-tv": "televisão",
   "app-guide-news-economic-indicators": "indicadores econômicos",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "tendências de desenvolvimento",
+  "app-guide-conflict-map": "mapa de conflito",
   "app-guide-ongoing-conflicts": "conflitos",
   "app-guide-radio": "rádio",
-  "app-menu-country-select": "país",
-  "app-menu-interests": "interesses",
-  "app-menu-command-editor": "editor de comando",
-  "app-menu-presentation": "apresentação",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "correr",
-  "app-menu-clear-editor": "claro",
   "app-foo": "foo bar baz"
 }
