--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "настройки",
   "app-tab-help-title": "помощь",
   "app-tab-audio-chat-title": "аудиочат",
+  "app-notification-too-few-compare-topics": "Сначала добавьте в сравнение две или более темы, используя кнопку (находится вверху статьи Википедии и в метаразделе темы)",
   "app-search-placeholder": "поиск",
-  "app-structured-search-title": "структурированный поиск",
+  "app-topics-found": "темы найдены",
   "app-title-occurence": "Карта встречаемости",
   "app-title-super": "супер",
   "app-title-sub": "суб",
   "app-title-pages": "страницы",
   "app-title-citations": "Цитаты",
-  "app-guide-see-more": "узнать больше",
-  "app-guide-page": "страница",
-  "app-guide-current-events": "текущие события",
-  "app-guide-topic": "тема",
-  "app-guide-artwork": "рисование",
-  "app-guide-organism": "организм",
-  "app-guide-music": "музыка",
-  "app-guide-science": "наука",
-  "app-topics-found": "темы найдены",
-  "app-section-main": "основной",
-  "app-section-info": "Информация",
-  "app-section-library": "библиотека",
-  "app-section-web": "сеть",
-  "app-section-news": "Новости",
-  "app-section-news-general": "общий",
-  "app-section-social": "Социальное",
-  "app-section-news-tech": "технология",
-  "app-section-society-jobs": "рабочие места",
-  "app-section-location": "расположение",
-  "app-section-location-geography": "география",
-  "app-section-location-demography": "демография",
-  "app-section-location-ecology": "экология",
-  "app-section-location-travel": "путешествовать",
-  "app-section-location-weather": "погода",
-  "app-section-location-real-estate": "недвижимость",
   "app-menu-actions": "действия",
   "app-menu-background-audio": "аудио",
   "app-menu-background-midi": "МИДИ",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "Включить полноэкранный режим",
   "app-menu-bookmark-actions": "действия по выбору закладок",
   "app-menu-bookmark-actions-reasoning": "рассуждение",
-  "app-guide-bookmark-teach-topics": "научи меня",
-  "app-guide-bookmark-quiz-topics": "опроси меня",
-  "app-guide-bookmark-related-topics": "похожие темы",
-  "app-guide-bookmark-topic-differences": "различия",
-  "app-guide-bookmark-commonalities": "сходства",
-  "app-guide-bookmark-similarities": "сходство",
-  "app-guide-bookmark-implications": "подразумеваемое",
-  "app-guide-bookmark-history": "история",
   "app-menu-import-as": "импортировать закладки",
   "app-menu-export-as": "экспортировать закладки",
   "app-menu-bookmark-actions-media": "СМИ",
+  "app-menu-upload-json": "загрузить",
+  "app-menu-bookmark-current-view": "добавить в закладки текущий вид",
   "app-menu-visual-search": "визуальный поиск",
   "app-menu-reading-assistance": "помощь в чтении",
   "app-menu-bread": "начало слова жирным шрифтом",
   "app-menu-ai-tutor": "репетитор по искусственному интеллекту",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "добавить в закладки текущий вид",
+  "app-menu-datasources": "источники данных",
   "app-menu-clone-tab": "клонировать вкладку",
   "app-menu-plant-identification": "идентификация растений",
   "app-menu-text-identification": "текстовая идентификация",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "переключить боковую панель",
   "app-menu-add-bookmark": "добавить закладку",
   "app-menu-note-1": "примечание 1: доступно только в том случае, если фокус находится на боковой панели или на панели статей Википедии.",
+  "app-menu-features": "функции",
+  "app-menu-persona": "личность",
+  "app-menu-country-select": "страна",
+  "app-menu-interests": "интересы",
+  "app-menu-nature-location-quiz": "викторина о местонахождении природы",
+  "app-menu-command-editor": "редактор команд",
+  "app-menu-presentation": "презентация",
+  "app-menu-editor": "редактор",
+  "app-menu-run-code": "бегать",
+  "app-menu-clear-editor": "прозрачный",
+  "app-menu-cover-topic": "обложка темы",
+  "app-menu-news": "Новости",
+  "app-menu-culture": "культура",
+  "app-menu-nature": "природа",
+  "app-menu-license": "лицензия",
+  "app-menu-goto-next-topic": "перейти к следующей теме (в боковой панели результатов)",
+  "app-menu-goto-previous-topic": "перейти к предыдущей теме (в боковой панели результатов)",
+  "app-menu-goto-next-pane": "перейти к следующей панели",
+  "app-menu-goto-previous-pane": "перейти на предыдущую панель",
+  "app-menu-new-search": "новый поиск",
+  "app-menu-structured-search": "структурированный поиск",
+  "app-menu-geo-search": "географический поиск",
+  "app-section-main": "основной",
+  "app-section-info": "Информация",
+  "app-section-library": "библиотека",
+  "app-section-web": "сеть",
+  "app-section-news": "Новости",
+  "app-section-news-general": "общий",
+  "app-section-social": "Социальное",
+  "app-section-news-tech": "технология",
+  "app-section-society-jobs": "рабочие места",
+  "app-section-location": "расположение",
+  "app-section-location-geography": "география",
+  "app-section-location-demography": "демография",
+  "app-section-location-ecology": "экология",
+  "app-section-location-travel": "путешествовать",
+  "app-section-location-weather": "погода",
+  "app-section-location-real-estate": "недвижимость",
   "app-section-business": "бизнес",
   "app-section-government": "правительство",
   "app-section-government-general": "общий",
@@ -132,6 +132,7 @@
   "app-section-library-general": "общий",
   "app-section-library-manuscripts": "рукописи",
   "app-section-library-history": "история",
+  "app-section-library-philosophy": "философия",
   "app-section-library-genealogy": "генеалогия",
   "app-section-library-legal": "юридический",
   "app-section-library-products": "продукты",
@@ -144,19 +145,31 @@
   "app-section-society": "общество",
   "app-section-society-sports": "виды спорта",
   "app-section-society-food": "еда",
-  "app-section-library-philosophy": "философия",
   "app-section-library-religion": "религия",
   "app-section-library-poetry": "поэзия",
   "app-section-library-identity": "личность",
   "app-section-society-events": "события",
-  "app-guide-welcome-text": "Conzept — это попытка создать энциклопедию XXI века.  <br><br> Наслаждайтесь исследованиями! ",
   "app-section-society-shopping": "Покупка",
-  "app-notification-too-few-compare-topics": "Сначала добавьте в сравнение две или более темы, используя кнопку (находится вверху статьи Википедии и в метаразделе темы)",
-  "app-menu-goto-next-topic": "перейти к следующей теме (в боковой панели результатов)",
-  "app-menu-goto-previous-topic": "перейти к предыдущей теме (в боковой панели результатов)",
-  "app-menu-goto-next-pane": "перейти к следующей панели",
-  "app-menu-goto-previous-pane": "перейти на предыдущую панель",
-  "app-menu-new-search": "новый поиск",
+  "app-guide-bookmarks-selected": "выбрано",
+  "app-guide-bookmarks-deselect-all": "убрать выделение со всего",
+  "app-guide-bookmark-teach-topics": "научи меня",
+  "app-guide-bookmark-quiz-topics": "опроси меня",
+  "app-guide-bookmark-related-topics": "похожие темы",
+  "app-guide-bookmark-topic-differences": "различия",
+  "app-guide-bookmark-commonalities": "сходства",
+  "app-guide-bookmark-similarities": "сходство",
+  "app-guide-bookmark-implications": "подразумеваемое",
+  "app-guide-bookmark-history": "история",
+  "app-guide-bookmark-gapminder-country-trend": "тренд страны",
+  "app-guide-see-more": "узнать больше",
+  "app-guide-page": "страница",
+  "app-guide-current-events": "текущие события",
+  "app-guide-topic": "тема",
+  "app-guide-artwork": "рисование",
+  "app-guide-organism": "организм",
+  "app-guide-music": "музыка",
+  "app-guide-science": "наука",
+  "app-guide-welcome-text": "Conzept — это попытка создать энциклопедию XXI века.  <br><br> Наслаждайтесь исследованиями! ",
   "app-guide-documentary": "документальный",
   "app-guide-country": "страна",
   "app-guide-string-search": "строковый поиск",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "бактерия",
   "app-guide-virus": "вирус",
   "app-guide-featured-article": "избранная статья",
-  "app-menu-cover-topic": "обложка темы",
-  "app-menu-news": "Новости",
-  "app-menu-culture": "культура",
-  "app-menu-nature": "природа",
-  "app-menu-license": "лицензия",
   "app-guide-help": "помощь",
   "app-guide-sea": "море",
   "app-guide-continent": "континент",
@@ -192,7 +200,7 @@
   "app-guide-atom": "атом",
   "app-guide-protist": "протист",
   "app-guide-country-map": "карта страны",
-  "app-guide-capital": "Капитолий",
+  "app-guide-capital": "капитал",
   "app-guide-form-of-government": "форма гос.",
   "app-guide-religion": "религия",
   "app-guide-period": "период",
@@ -215,25 +223,20 @@
   "app-guide-dish": "блюдо",
   "app-guide-cell-type": "тип ячейки",
   "app-guide-archae": "археи",
-  "app-menu-persona": "личность",
   "app-guide-featured-portal": "избранный портал",
   "app-guide-musical-instrument": "инструмент",
   "app-guide-technology": "технологии",
   "app-guide-near-me": "около меня",
+  "app-guide-news-gdelt": "ГДЕЛТ",
   "app-guide-newspapers": "газеты",
+  "app-guide-radio-map": "радиокарта",
   "app-guide-news-radio": "радио",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "прямой эфир",
   "app-guide-news-tv": "ТВ",
   "app-guide-news-economic-indicators": "экономические показатели",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "тенденции развития",
+  "app-guide-conflict-map": "карта конфликта",
   "app-guide-ongoing-conflicts": "конфликты",
   "app-guide-radio": "радио",
-  "app-menu-country-select": "страна",
-  "app-menu-interests": "интересы",
-  "app-menu-command-editor": "редактор команд",
-  "app-menu-presentation": "презентация",
-  "app-menu-editor": "редактор",
-  "app-menu-run-code": "бегать",
-  "app-menu-clear-editor": "прозрачный",
   "app-foo": "Фу бар Баз"
 }
