--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "подешавања",
   "app-tab-help-title": "помоћ",
   "app-tab-audio-chat-title": "аудио ћаскање",
+  "app-notification-too-few-compare-topics": "Прво додајте две или више тема у поређење, користећи дугме (налази се на врху чланка на Википедији и у мета-одељку теме)",
   "app-search-placeholder": "Претрага",
-  "app-structured-search-title": "структурирано претраживање",
+  "app-topics-found": "пронађене теме",
   "app-title-occurence": "Мапа појављивања",
   "app-title-super": "супер",
   "app-title-sub": "суб",
   "app-title-pages": "странице",
   "app-title-citations": "Цитати",
-  "app-guide-see-more": "види више",
-  "app-guide-page": "страна",
-  "app-guide-current-events": "Актуелности",
-  "app-guide-topic": "тема",
-  "app-guide-artwork": "сликарство",
-  "app-guide-organism": "организам",
-  "app-guide-music": "музика",
-  "app-guide-science": "Наука",
-  "app-topics-found": "пронађене теме",
-  "app-section-main": "главни",
-  "app-section-info": "инфо",
-  "app-section-library": "библиотека",
-  "app-section-web": "веб",
-  "app-section-news": "вести",
-  "app-section-news-general": "Генерал",
-  "app-section-social": "друштвеним",
-  "app-section-news-tech": "тецх",
-  "app-section-society-jobs": "пословима",
-  "app-section-location": "локација",
-  "app-section-location-geography": "географија",
-  "app-section-location-demography": "демографија",
-  "app-section-location-ecology": "екологија",
-  "app-section-location-travel": "путовања",
-  "app-section-location-weather": "временске прилике",
-  "app-section-location-real-estate": "некретнина",
   "app-menu-actions": "радње",
   "app-menu-background-audio": "аудио",
   "app-menu-background-midi": "МИДИ",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "укључите цео екран",
   "app-menu-bookmark-actions": "радње избора обележивача",
   "app-menu-bookmark-actions-reasoning": "расуђивање",
-  "app-guide-bookmark-teach-topics": "научи ме",
-  "app-guide-bookmark-quiz-topics": "питај ме",
-  "app-guide-bookmark-related-topics": "Повезане теме",
-  "app-guide-bookmark-topic-differences": "Разлике",
-  "app-guide-bookmark-commonalities": "заједничкости",
-  "app-guide-bookmark-similarities": "сличности",
-  "app-guide-bookmark-implications": "последице",
-  "app-guide-bookmark-history": "историје",
   "app-menu-import-as": "увоз обележивача",
   "app-menu-export-as": "извоз обележивача",
   "app-menu-bookmark-actions-media": "медија",
+  "app-menu-upload-json": "отпремити",
+  "app-menu-bookmark-current-view": "обележи тренутни приказ",
   "app-menu-visual-search": "визуелна претрага",
   "app-menu-reading-assistance": "помоћ при читању",
   "app-menu-bread": "подебљано на почетку речи",
   "app-menu-ai-tutor": "АИ тутор",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "обележи тренутни приказ",
+  "app-menu-datasources": "извори података",
   "app-menu-clone-tab": "клон картица",
   "app-menu-plant-identification": "идентификација биљке",
   "app-menu-text-identification": "идентификација текста",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "пребаците бочну траку",
   "app-menu-add-bookmark": "додај обележивач",
   "app-menu-note-1": "Напомена 1: доступно само када је фокус на бочној траци или окну чланака на Википедији.",
+  "app-menu-features": "Карактеристике",
+  "app-menu-persona": "персона",
+  "app-menu-country-select": "земља",
+  "app-menu-interests": "интересовања",
+  "app-menu-nature-location-quiz": "квиз о локацији у природи",
+  "app-menu-command-editor": "уредник команди",
+  "app-menu-presentation": "презентација",
+  "app-menu-editor": "уредник",
+  "app-menu-run-code": "трцати",
+  "app-menu-clear-editor": "јасно",
+  "app-menu-cover-topic": "насловна тема",
+  "app-menu-news": "вести",
+  "app-menu-culture": "културе",
+  "app-menu-nature": "природа",
+  "app-menu-license": "лиценце",
+  "app-menu-goto-next-topic": "иди на следећу тему (у резултатима на бочној траци)",
+  "app-menu-goto-previous-topic": "иди на претходну тему (у резултатима на бочној траци)",
+  "app-menu-goto-next-pane": "идите на следеће окно",
+  "app-menu-goto-previous-pane": "идите на претходно окно",
+  "app-menu-new-search": "Нова претрага",
+  "app-menu-structured-search": "структурирано претраживање",
+  "app-menu-geo-search": "гео претрага",
+  "app-section-main": "главни",
+  "app-section-info": "инфо",
+  "app-section-library": "библиотека",
+  "app-section-web": "веб",
+  "app-section-news": "вести",
+  "app-section-news-general": "Генерал",
+  "app-section-social": "друштвеним",
+  "app-section-news-tech": "тецх",
+  "app-section-society-jobs": "пословима",
+  "app-section-location": "локација",
+  "app-section-location-geography": "географија",
+  "app-section-location-demography": "демографија",
+  "app-section-location-ecology": "екологија",
+  "app-section-location-travel": "путовања",
+  "app-section-location-weather": "временске прилике",
+  "app-section-location-real-estate": "некретнина",
   "app-section-business": "посао",
   "app-section-government": "влада",
   "app-section-government-general": "Генерал",
@@ -132,6 +132,7 @@
   "app-section-library-general": "Генерал",
   "app-section-library-manuscripts": "рукописима",
   "app-section-library-history": "историје",
+  "app-section-library-philosophy": "филозофија",
   "app-section-library-genealogy": "генеалогија",
   "app-section-library-legal": "правни",
   "app-section-library-products": "производи",
@@ -144,19 +145,31 @@
   "app-section-society": "друштво",
   "app-section-society-sports": "спортске",
   "app-section-society-food": "храна",
-  "app-section-library-philosophy": "филозофија",
   "app-section-library-religion": "религија",
   "app-section-library-poetry": "поезија",
   "app-section-library-identity": "идентитет",
   "app-section-society-events": "догађаји",
-  "app-guide-welcome-text": "Цонзепт је покушај стварања енциклопедије за 21. век.  <br><br> Уживајте у својим истраживањима! ",
   "app-section-society-shopping": "шопинг",
-  "app-notification-too-few-compare-topics": "Прво додајте две или више тема у поређење, користећи дугме (налази се на врху чланка на Википедији и у мета-одељку теме)",
-  "app-menu-goto-next-topic": "иди на следећу тему (у резултатима на бочној траци)",
-  "app-menu-goto-previous-topic": "иди на претходну тему (у резултатима на бочној траци)",
-  "app-menu-goto-next-pane": "идите на следеће окно",
-  "app-menu-goto-previous-pane": "идите на претходно окно",
-  "app-menu-new-search": "Нова претрага",
+  "app-guide-bookmarks-selected": "изабрани",
+  "app-guide-bookmarks-deselect-all": "поништите све",
+  "app-guide-bookmark-teach-topics": "научи ме",
+  "app-guide-bookmark-quiz-topics": "питај ме",
+  "app-guide-bookmark-related-topics": "Повезане теме",
+  "app-guide-bookmark-topic-differences": "Разлике",
+  "app-guide-bookmark-commonalities": "заједничкости",
+  "app-guide-bookmark-similarities": "сличности",
+  "app-guide-bookmark-implications": "последице",
+  "app-guide-bookmark-history": "историје",
+  "app-guide-bookmark-gapminder-country-trend": "тренд земље",
+  "app-guide-see-more": "види више",
+  "app-guide-page": "страна",
+  "app-guide-current-events": "Актуелности",
+  "app-guide-topic": "тема",
+  "app-guide-artwork": "сликарство",
+  "app-guide-organism": "организам",
+  "app-guide-music": "музика",
+  "app-guide-science": "Наука",
+  "app-guide-welcome-text": "Цонзепт је покушај стварања енциклопедије за 21. век.  <br><br> Уживајте у својим истраживањима! ",
   "app-guide-documentary": "документарни филм",
   "app-guide-country": "земља",
   "app-guide-string-search": "стринг сеарцх",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "бактерија",
   "app-guide-virus": "вирус",
   "app-guide-featured-article": "истакнут чланак",
-  "app-menu-cover-topic": "насловна тема",
-  "app-menu-news": "вести",
-  "app-menu-culture": "културе",
-  "app-menu-nature": "природа",
-  "app-menu-license": "лиценце",
   "app-guide-help": "помоћ",
   "app-guide-sea": "море",
   "app-guide-continent": "континент",
@@ -215,25 +223,20 @@
   "app-guide-dish": "јело",
   "app-guide-cell-type": "тип ћелије",
   "app-guide-archae": "арцхае",
-  "app-menu-persona": "персона",
   "app-guide-featured-portal": "истакнути портал",
   "app-guide-musical-instrument": "инструмент",
   "app-guide-technology": "технологије",
   "app-guide-near-me": "близу мене",
+  "app-guide-news-gdelt": "ГДЕЛТ",
   "app-guide-newspapers": "новине",
+  "app-guide-radio-map": "радио карта",
   "app-guide-news-radio": "радио",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "телевизија уживо",
   "app-guide-news-tv": "ТВ",
   "app-guide-news-economic-indicators": "економски показатељи",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "трендови развоја",
+  "app-guide-conflict-map": "карта сукоба",
   "app-guide-ongoing-conflicts": "сукоби",
   "app-guide-radio": "радио",
-  "app-menu-country-select": "земља",
-  "app-menu-interests": "интересовања",
-  "app-menu-command-editor": "уредник команди",
-  "app-menu-presentation": "презентација",
-  "app-menu-editor": "уредник",
-  "app-menu-run-code": "трцати",
-  "app-menu-clear-editor": "јасно",
   "app-foo": "фоо бар баз"
 }
