--- a/app/explore2/assets/i18n/ui/conzept-ta.json
+++ b/app/explore2/assets/i18n/ui/conzept-ta.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "அமைப்புகள்",
   "app-tab-help-title": "உதவி",
   "app-tab-audio-chat-title": "ஆடியோ அரட்டை",
+  "app-notification-too-few-compare-topics": "பொத்தானைப் பயன்படுத்தி முதலில் இரண்டு அல்லது அதற்கு மேற்பட்ட தலைப்புகளை ஒப்பிடுக",
   "app-search-placeholder": "தேடல்",
-  "app-structured-search-title": "கட்டமைக்கப்பட்ட தேடல்",
+  "app-topics-found": "தலைப்புகள் கண்டறியப்பட்டன",
   "app-title-occurence": "நிகழ்வு வரைபடம்",
   "app-title-super": "அருமை",
   "app-title-sub": "துணை",
   "app-title-pages": "பக்கங்கள்",
   "app-title-citations": "மேற்கோள்கள்",
-  "app-guide-see-more": "மேலும் பார்க்க",
-  "app-guide-page": "பக்கம்",
-  "app-guide-current-events": "தற்போதைய நிகழ்வுகள்",
-  "app-guide-topic": "தலைப்பு",
-  "app-guide-artwork": "ஓவியம்",
-  "app-guide-organism": "உயிரினம்",
-  "app-guide-music": "இசை",
-  "app-guide-science": "அறிவியல்",
-  "app-topics-found": "தலைப்புகள் கண்டறியப்பட்டன",
-  "app-section-main": "முக்கிய",
-  "app-section-info": "தகவல்",
-  "app-section-library": "நூலகம்",
-  "app-section-web": "வலை",
-  "app-section-news": "செய்தி",
-  "app-section-news-general": "பொது",
-  "app-section-social": "சமூக",
-  "app-section-news-tech": "தொழில்நுட்பம்",
-  "app-section-society-jobs": "வேலைகள்",
-  "app-section-location": "இடம்",
-  "app-section-location-geography": "நிலவியல்",
-  "app-section-location-demography": "மக்கள்தொகையியல்",
-  "app-section-location-ecology": "சூழலியல்",
-  "app-section-location-travel": "பயணம்",
-  "app-section-location-weather": "வானிலை",
-  "app-section-location-real-estate": "மனை",
   "app-menu-actions": "செயல்கள்",
   "app-menu-background-audio": "ஆடியோ",
   "app-menu-background-midi": "MIDI",
@@ -56,31 +32,17 @@
   "app-menu-compare-topics": "தலைப்புகளை ஒப்பிடுக",
   "app-menu-toggle-fullscreen": "மாற்று முழுத்திரை",
   "app-menu-bookmark-actions": "புக்மார்க்-தேர்வு நடவடிக்கைகள்",
-  "app-menu-bookmark-actions-reasoning": "பகுத்தறிவு",
-  "app-guide-bookmark-teach-topics": "எனக்கு கற்பி",
-  "app-guide-bookmark-quiz-topics": "என்னிடம் வினாடி வினா",
-  "app-guide-bookmark-related-topics": "தொடர்புடைய தலைப்புகள்",
-  "app-guide-bookmark-topic-differences": "வேறுபாடுகள்",
-  "app-guide-bookmark-commonalities": "பொதுவான தன்மைகள்",
-  "app-guide-bookmark-similarities": "ஒற்றுமைகள்",
-  "app-guide-bookmark-implications": "தாக்கங்கள்",
-  "app-guide-bookmark-history": "வரலாறு",
-  "app-menu-import-as": "புக்மார்க்குகளை இறக்குமதி செய்க",
+  "app-menu-bookmark-actions-reasoning": "நியாயப்படுத்துதல்",
+  "app-menu-import-as": "புக்மார்க்குகளை இறக்குமதி",
   "app-menu-export-as": "புக்மார்க்குகளை ஏற்றுமதி செய்யவும்",
   "app-menu-bookmark-actions-media": "ஊடகம்",
+  "app-menu-upload-json": "பதிவேற்றம்",
+  "app-menu-bookmark-current-view": "புக்மார்க் தற்போதைய காட்சி",
   "app-menu-visual-search": "காட்சி தேடல்",
   "app-menu-reading-assistance": "வாசிப்பு உதவி",
-  "app-menu-bread": "வார்த்தை-தொடக்கம் தடித்த",
+  "app-menu-bread": "வார்த்தை-தொடக்க தடித்த",
   "app-menu-ai-tutor": "AI ஆசிரியர்",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "புக்மார்க் தற்போதைய காட்சி",
+  "app-menu-datasources": "தரவு மூலங்கள்",
   "app-menu-clone-tab": "குளோன் தாவல்",
   "app-menu-plant-identification": "தாவர அடையாளம்",
   "app-menu-text-identification": "உரை அடையாளம்",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "பக்கப்பட்டியை மாற்றவும்",
   "app-menu-add-bookmark": "புக்மார்க் சேர்க்கவும்",
   "app-menu-note-1": "குறிப்பு 1: பக்கப்பட்டியில் அல்லது விக்கிபீடியா கட்டுரை பலகத்தில் கவனம் செலுத்தினால் மட்டுமே கிடைக்கும்.",
+  "app-menu-features": "அம்சங்கள்",
+  "app-menu-persona": "ஆளுமை",
+  "app-menu-country-select": "நாடு",
+  "app-menu-interests": "நலன்கள்",
+  "app-menu-nature-location-quiz": "இயற்கை இருப்பிட வினாடி வினா",
+  "app-menu-command-editor": "கட்டளை ஆசிரியர்",
+  "app-menu-presentation": "விளக்கக்காட்சி",
+  "app-menu-editor": "ஆசிரியர்",
+  "app-menu-run-code": "ஓடு",
+  "app-menu-clear-editor": "தெளிவானது",
+  "app-menu-cover-topic": "கவர் தலைப்பு",
+  "app-menu-news": "செய்தி",
+  "app-menu-culture": "கலாச்சாரம்",
+  "app-menu-nature": "இயற்கை",
+  "app-menu-license": "உரிமம்",
+  "app-menu-goto-next-topic": "அடுத்த தலைப்புக்குச் செல்லவும் (பக்கப்பட்டி முடிவுகளில்)",
+  "app-menu-goto-previous-topic": "முந்தைய தலைப்புக்குச் செல்லவும் (பக்கப்பட்டி முடிவுகளில்)",
+  "app-menu-goto-next-pane": "அடுத்த பலகத்திற்குச் செல்லவும்",
+  "app-menu-goto-previous-pane": "முந்தைய பலகத்திற்குச் செல்லவும்",
+  "app-menu-new-search": "புதிய தேடல்",
+  "app-menu-structured-search": "கட்டமைக்கப்பட்ட தேடல்",
+  "app-menu-geo-search": "புவி தேடல்",
+  "app-section-main": "முக்கிய",
+  "app-section-info": "தகவல்",
+  "app-section-library": "நூலகம்",
+  "app-section-web": "வலை",
+  "app-section-news": "செய்தி",
+  "app-section-news-general": "பொது",
+  "app-section-social": "சமூக",
+  "app-section-news-tech": "தொழில்நுட்பம்",
+  "app-section-society-jobs": "வேலைகள்",
+  "app-section-location": "இடம்",
+  "app-section-location-geography": "நிலவியல்",
+  "app-section-location-demography": "மக்கள்தொகையியல்",
+  "app-section-location-ecology": "சூழலியல்",
+  "app-section-location-travel": "பயணம்",
+  "app-section-location-weather": "வானிலை",
+  "app-section-location-real-estate": "மனை",
   "app-section-business": "வணிக",
   "app-section-government": "அரசாங்கம்",
   "app-section-government-general": "பொது",
@@ -132,6 +132,7 @@
   "app-section-library-general": "பொது",
   "app-section-library-manuscripts": "கையெழுத்துப் பிரதிகள்",
   "app-section-library-history": "வரலாறு",
+  "app-section-library-philosophy": "தத்துவம்",
   "app-section-library-genealogy": "பரம்பரை",
   "app-section-library-legal": "சட்டபூர்வமான",
   "app-section-library-products": "தயாரிப்புகள்",
@@ -144,19 +145,31 @@
   "app-section-society": "சமூகம்",
   "app-section-society-sports": "விளையாட்டு",
   "app-section-society-food": "உணவு",
-  "app-section-library-philosophy": "தத்துவம்",
   "app-section-library-religion": "மதம்",
   "app-section-library-poetry": "கவிதை",
   "app-section-library-identity": "அடையாளம்",
   "app-section-society-events": "நிகழ்வுகள்",
-  "app-guide-welcome-text": "கான்செப்ட் என்பது 21 ஆம் நூற்றாண்டிற்கான கலைக்களஞ்சியத்தை உருவாக்கும் முயற்சியாகும்.  <br><br> உங்கள் ஆய்வுகளை அனுபவிக்கவும்! ",
   "app-section-society-shopping": "கடையில் பொருட்கள் வாங்குதல்",
-  "app-notification-too-few-compare-topics": "பொத்தானைப் பயன்படுத்தி முதலில் இரண்டு அல்லது அதற்கு மேற்பட்ட தலைப்புகளை ஒப்பிடுக",
-  "app-menu-goto-next-topic": "அடுத்த தலைப்புக்குச் செல்லவும் (பக்கப்பட்டி முடிவுகளில்)",
-  "app-menu-goto-previous-topic": "முந்தைய தலைப்புக்குச் செல்லவும் (பக்கப்பட்டி முடிவுகளில்)",
-  "app-menu-goto-next-pane": "அடுத்த பலகத்திற்குச் செல்லவும்",
-  "app-menu-goto-previous-pane": "முந்தைய பலகத்திற்குச் செல்லவும்",
-  "app-menu-new-search": "புதிய தேடல்",
+  "app-guide-bookmarks-selected": "தேர்ந்தெடுக்கப்பட்டது",
+  "app-guide-bookmarks-deselect-all": "அனைத்து தெரிவுகளையும் நிராகரி",
+  "app-guide-bookmark-teach-topics": "எனக்கு கற்பி",
+  "app-guide-bookmark-quiz-topics": "என்னிடம் வினாடி வினா",
+  "app-guide-bookmark-related-topics": "தொடர்புடைய தலைப்புகள்",
+  "app-guide-bookmark-topic-differences": "வேறுபாடுகள்",
+  "app-guide-bookmark-commonalities": "பொதுவான தன்மைகள்",
+  "app-guide-bookmark-similarities": "ஒற்றுமைகள்",
+  "app-guide-bookmark-implications": "தாக்கங்கள்",
+  "app-guide-bookmark-history": "வரலாறு",
+  "app-guide-bookmark-gapminder-country-trend": "நாட்டின் போக்கு",
+  "app-guide-see-more": "மேலும் பார்க்க",
+  "app-guide-page": "பக்கம்",
+  "app-guide-current-events": "தற்போதைய நிகழ்வுகள்",
+  "app-guide-topic": "தலைப்பு",
+  "app-guide-artwork": "ஓவியம்",
+  "app-guide-organism": "உயிரினம்",
+  "app-guide-music": "இசை",
+  "app-guide-science": "அறிவியல்",
+  "app-guide-welcome-text": "கான்செப்ட் என்பது 21 ஆம் நூற்றாண்டிற்கான கலைக்களஞ்சியத்தை உருவாக்கும் முயற்சியாகும்.  <br><br> உங்கள் ஆய்வுகளை அனுபவிக்கவும்! ",
   "app-guide-documentary": "ஆவணப்படம்",
   "app-guide-country": "நாடு",
   "app-guide-string-search": "சரம் தேடல்",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "பாக்டீரியா",
   "app-guide-virus": "வைரஸ்",
   "app-guide-featured-article": "சிறப்புக் கட்டுரை",
-  "app-menu-cover-topic": "கவர் தலைப்பு",
-  "app-menu-news": "செய்தி",
-  "app-menu-culture": "கலாச்சாரம்",
-  "app-menu-nature": "இயற்கை",
-  "app-menu-license": "உரிமம்",
   "app-guide-help": "உதவி",
   "app-guide-sea": "கடல்",
   "app-guide-continent": "கண்டம்",
@@ -215,25 +223,20 @@
   "app-guide-dish": "சிறு தட்டு",
   "app-guide-cell-type": "செல் வகை",
   "app-guide-archae": "வளைவு",
-  "app-menu-persona": "ஆளுமை",
   "app-guide-featured-portal": "சிறப்பு போர்டல்",
   "app-guide-musical-instrument": "கருவி",
   "app-guide-technology": "தொழில்நுட்பம்",
   "app-guide-near-me": "என் அருகில்",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "செய்தித்தாள்கள்",
+  "app-guide-radio-map": "வானொலி வரைபடம்",
   "app-guide-news-radio": "வானொலி",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "நேரடி தொலைக்காட்சி",
   "app-guide-news-tv": "டி.வி",
   "app-guide-news-economic-indicators": "பொருளாதார குறிகாட்டிகள்",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "வளர்ச்சி போக்குகள்",
+  "app-guide-conflict-map": "மோதல் வரைபடம்",
   "app-guide-ongoing-conflicts": "மோதல்கள்",
   "app-guide-radio": "வானொலி",
-  "app-menu-country-select": "நாடு",
-  "app-menu-interests": "நலன்கள்",
-  "app-menu-command-editor": "கட்டளை ஆசிரியர்",
-  "app-menu-presentation": "விளக்கக்காட்சி",
-  "app-menu-editor": "ஆசிரியர்",
-  "app-menu-run-code": "ஓடு",
-  "app-menu-clear-editor": "தெளிவானது",
   "app-foo": "foo bar baz"
 }
