--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "ayarlar",
   "app-tab-help-title": "yardım",
   "app-tab-audio-chat-title": "sesli sohbet",
+  "app-notification-too-few-compare-topics": "Öncelikle düğmeyi kullanarak (Wikipedia makalesinin üst kısmında ve konunun meta bölümünde bulunur) iki veya daha fazla konuyu karşılaştırmaya ekleyin.",
   "app-search-placeholder": "aramak",
-  "app-structured-search-title": "yapılandırılmış arama",
+  "app-topics-found": "bulunan konular",
   "app-title-occurence": "Oluşum haritası",
   "app-title-super": "Süper",
   "app-title-sub": "alt",
   "app-title-pages": "sayfalar",
   "app-title-citations": "Alıntılar",
-  "app-guide-see-more": "daha fazla gör",
-  "app-guide-page": "sayfa",
-  "app-guide-current-events": "güncel olaylar",
-  "app-guide-topic": "başlık",
-  "app-guide-artwork": "tablo",
-  "app-guide-organism": "organizma",
-  "app-guide-music": "müzik",
-  "app-guide-science": "bilim",
-  "app-topics-found": "bulunan konular",
-  "app-section-main": "ana",
-  "app-section-info": "bilgi",
-  "app-section-library": "kütüphane",
-  "app-section-web": "ağ",
-  "app-section-news": "haberler",
-  "app-section-news-general": "genel",
-  "app-section-social": "sosyal",
-  "app-section-news-tech": "teknoloji",
-  "app-section-society-jobs": "Meslekler",
-  "app-section-location": "konum",
-  "app-section-location-geography": "coğrafya",
-  "app-section-location-demography": "demografi",
-  "app-section-location-ecology": "ekoloji",
-  "app-section-location-travel": "seyahat",
-  "app-section-location-weather": "hava durumu",
-  "app-section-location-real-estate": "Emlak",
   "app-menu-actions": "hareketler",
   "app-menu-background-audio": "ses",
   "app-menu-background-midi": "MİDİ",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "tam ekrana geç",
   "app-menu-bookmark-actions": "yer imi seçimi eylemleri",
   "app-menu-bookmark-actions-reasoning": "muhakeme",
-  "app-guide-bookmark-teach-topics": "bana öğret",
-  "app-guide-bookmark-quiz-topics": "beni test et",
-  "app-guide-bookmark-related-topics": "İlgili konular",
-  "app-guide-bookmark-topic-differences": "farklılıklar",
-  "app-guide-bookmark-commonalities": "ortak noktalar",
-  "app-guide-bookmark-similarities": "benzerlikler",
-  "app-guide-bookmark-implications": "çıkarımlar",
-  "app-guide-bookmark-history": "tarih",
   "app-menu-import-as": "yer işaretlerini içe aktar",
   "app-menu-export-as": "yer işaretlerini dışa aktar",
   "app-menu-bookmark-actions-media": "medya",
+  "app-menu-upload-json": "yüklemek",
+  "app-menu-bookmark-current-view": "geçerli görünüme yer işareti koy",
   "app-menu-visual-search": "görsel arama",
   "app-menu-reading-assistance": "okuma yardımı",
   "app-menu-bread": "kelime başlangıcı kalınlaştırma",
   "app-menu-ai-tutor": "Yapay zeka öğretmeni",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "geçerli görünüme yer işareti koy",
+  "app-menu-datasources": "veri kaynakları",
   "app-menu-clone-tab": "klon sekmesi",
   "app-menu-plant-identification": "bitki tanımlama",
   "app-menu-text-identification": "metin tanımlama",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "kenar çubuğunu değiştir",
   "app-menu-add-bookmark": "imi eklemek",
   "app-menu-note-1": "not 1: yalnızca odak kenar çubuğunda veya Vikipedi makale bölmesinde olduğunda kullanılabilir.",
+  "app-menu-features": "özellikler",
+  "app-menu-persona": "kişilik",
+  "app-menu-country-select": "ülke",
+  "app-menu-interests": "ilgi alanları",
+  "app-menu-nature-location-quiz": "doğa konumu yarışması",
+  "app-menu-command-editor": "komut düzenleyici",
+  "app-menu-presentation": "sunum",
+  "app-menu-editor": "editör",
+  "app-menu-run-code": "koşmak",
+  "app-menu-clear-editor": "temizlemek",
+  "app-menu-cover-topic": "kapak konusu",
+  "app-menu-news": "haberler",
+  "app-menu-culture": "kültür",
+  "app-menu-nature": "doğa",
+  "app-menu-license": "lisans",
+  "app-menu-goto-next-topic": "sonraki konuya git (kenar çubuğu sonuçlarında)",
+  "app-menu-goto-previous-topic": "önceki konuya git (kenar çubuğu sonuçlarında)",
+  "app-menu-goto-next-pane": "sonraki bölmeye git",
+  "app-menu-goto-previous-pane": "önceki bölmeye git",
+  "app-menu-new-search": "yeni arama",
+  "app-menu-structured-search": "yapılandırılmış arama",
+  "app-menu-geo-search": "coğrafi arama",
+  "app-section-main": "ana",
+  "app-section-info": "bilgi",
+  "app-section-library": "kütüphane",
+  "app-section-web": "ağ",
+  "app-section-news": "haberler",
+  "app-section-news-general": "genel",
+  "app-section-social": "sosyal",
+  "app-section-news-tech": "teknoloji",
+  "app-section-society-jobs": "Meslekler",
+  "app-section-location": "konum",
+  "app-section-location-geography": "coğrafya",
+  "app-section-location-demography": "demografi",
+  "app-section-location-ecology": "ekoloji",
+  "app-section-location-travel": "seyahat",
+  "app-section-location-weather": "hava durumu",
+  "app-section-location-real-estate": "Emlak",
   "app-section-business": "işletme",
   "app-section-government": "devlet",
   "app-section-government-general": "genel",
@@ -132,6 +132,7 @@
   "app-section-library-general": "genel",
   "app-section-library-manuscripts": "el yazmaları",
   "app-section-library-history": "tarih",
+  "app-section-library-philosophy": "Felsefe",
   "app-section-library-genealogy": "şecere",
   "app-section-library-legal": "yasal",
   "app-section-library-products": "ürünler",
@@ -144,19 +145,31 @@
   "app-section-society": "toplum",
   "app-section-society-sports": "Spor Dalları",
   "app-section-society-food": "yiyecek",
-  "app-section-library-philosophy": "Felsefe",
   "app-section-library-religion": "din",
   "app-section-library-poetry": "şiir",
   "app-section-library-identity": "kimlik",
   "app-section-society-events": "olaylar",
-  "app-guide-welcome-text": "Conzept, 21. yüzyıl için bir ansiklopedi yaratma girişimidir.  <br><br> Keşiflerinizin tadını çıkarın! ",
   "app-section-society-shopping": "alışveriş",
-  "app-notification-too-few-compare-topics": "Öncelikle düğmeyi kullanarak (Wikipedia makalesinin üst kısmında ve konunun meta bölümünde bulunur) iki veya daha fazla konuyu karşılaştırmaya ekleyin.",
-  "app-menu-goto-next-topic": "sonraki konuya git (kenar çubuğu sonuçlarında)",
-  "app-menu-goto-previous-topic": "önceki konuya git (kenar çubuğu sonuçlarında)",
-  "app-menu-goto-next-pane": "sonraki bölmeye git",
-  "app-menu-goto-previous-pane": "önceki bölmeye git",
-  "app-menu-new-search": "yeni arama",
+  "app-guide-bookmarks-selected": "seçilmiş",
+  "app-guide-bookmarks-deselect-all": "Hiçbirini seçme",
+  "app-guide-bookmark-teach-topics": "bana öğret",
+  "app-guide-bookmark-quiz-topics": "beni test et",
+  "app-guide-bookmark-related-topics": "İlgili konular",
+  "app-guide-bookmark-topic-differences": "farklılıklar",
+  "app-guide-bookmark-commonalities": "ortak noktalar",
+  "app-guide-bookmark-similarities": "benzerlikler",
+  "app-guide-bookmark-implications": "çıkarımlar",
+  "app-guide-bookmark-history": "tarih",
+  "app-guide-bookmark-gapminder-country-trend": "ülke trendi",
+  "app-guide-see-more": "daha fazla gör",
+  "app-guide-page": "sayfa",
+  "app-guide-current-events": "güncel olaylar",
+  "app-guide-topic": "başlık",
+  "app-guide-artwork": "tablo",
+  "app-guide-organism": "organizma",
+  "app-guide-music": "müzik",
+  "app-guide-science": "bilim",
+  "app-guide-welcome-text": "Conzept, 21. yüzyıl için bir ansiklopedi yaratma girişimidir.  <br><br> Keşiflerinizin tadını çıkarın! ",
   "app-guide-documentary": "belgesel",
   "app-guide-country": "ülke",
   "app-guide-string-search": "dize arama",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bakteri",
   "app-guide-virus": "virüs",
   "app-guide-featured-article": "öne çıkan makale",
-  "app-menu-cover-topic": "kapak konusu",
-  "app-menu-news": "haberler",
-  "app-menu-culture": "kültür",
-  "app-menu-nature": "doğa",
-  "app-menu-license": "lisans",
   "app-guide-help": "yardım",
   "app-guide-sea": "deniz",
   "app-guide-continent": "kıta",
@@ -215,25 +223,20 @@
   "app-guide-dish": "tabak",
   "app-guide-cell-type": "hücre tipi",
   "app-guide-archae": "arke",
-  "app-menu-persona": "kişilik",
   "app-guide-featured-portal": "öne çıkan portal",
   "app-guide-musical-instrument": "enstrüman",
   "app-guide-technology": "teknoloji",
   "app-guide-near-me": "bana yakın",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "gazeteler",
+  "app-guide-radio-map": "radyo haritası",
   "app-guide-news-radio": "radyo",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "canlı tv",
   "app-guide-news-tv": "televizyon",
   "app-guide-news-economic-indicators": "ekonomik göstergeler",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "gelişme eğilimleri",
+  "app-guide-conflict-map": "çatışma haritası",
   "app-guide-ongoing-conflicts": "çatışmalar",
   "app-guide-radio": "radyo",
-  "app-menu-country-select": "ülke",
-  "app-menu-interests": "ilgi alanları",
-  "app-menu-command-editor": "komut düzenleyici",
-  "app-menu-presentation": "sunum",
-  "app-menu-editor": "editör",
-  "app-menu-run-code": "koşmak",
-  "app-menu-clear-editor": "temizlemek",
   "app-foo": "foo bar baz"
 }
