--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -6,42 +6,18 @@
   "app-tab-settings-title": "ترتیبات",
   "app-tab-help-title": "مدد",
   "app-tab-audio-chat-title": "آڈیو چیٹ",
+  "app-notification-too-few-compare-topics": "پہلے بٹن کا استعمال کرتے ہوئے موازنہ میں دو یا زیادہ عنوانات شامل کریں (ویکیپیڈیا-مضمون کے اوپری حصے میں اور موضوع کے میٹا سیکشن میں واقع)",
   "app-search-placeholder": "تلاش کریں",
-  "app-structured-search-title": "ساختی تلاش",
+  "app-topics-found": "موضوعات مل گئے",
   "app-title-occurence": "واقعہ کا نقشہ",
   "app-title-super": "سپر",
   "app-title-sub": "ذیلی",
   "app-title-pages": "صفحات",
   "app-title-citations": "حوالہ جات",
-  "app-guide-see-more": "دیکھیں مزید",
-  "app-guide-page": "صفحہ",
-  "app-guide-current-events": "موجودہ واقعات",
-  "app-guide-topic": "موضوع",
-  "app-guide-artwork": "پینٹنگ",
-  "app-guide-organism": "حیاتیات",
-  "app-guide-music": "موسیقی",
-  "app-guide-science": "سائنس",
-  "app-topics-found": "موضوعات مل گئے",
-  "app-section-main": "مرکزی",
-  "app-section-info": "معلومات",
-  "app-section-library": "کتب خانہ",
-  "app-section-web": "ویب",
-  "app-section-news": "خبریں",
-  "app-section-news-general": "جنرل",
-  "app-section-social": "سماجی",
-  "app-section-news-tech": "ٹیکنالوجی",
-  "app-section-society-jobs": "نوکریاں",
-  "app-section-location": "مقام",
-  "app-section-location-geography": "جغرافیہ",
-  "app-section-location-demography": "ڈیموگرافی",
-  "app-section-location-ecology": "ماحولیات",
-  "app-section-location-travel": "سفر",
-  "app-section-location-weather": "موسم",
-  "app-section-location-real-estate": "ریل اسٹیٹ کی",
   "app-menu-actions": "اعمال",
   "app-menu-background-audio": "آڈیو",
   "app-menu-background-midi": "MIDI",
-  "app-menu-topic-lists": "عنوانات کی فہرستیں",
+  "app-menu-topic-lists": "موضوع کی فہرستیں",
   "app-menu-various-links": "مختلف لنکس",
   "app-menu-font": "فونٹ",
   "app-menu-theme": "خیالیہ",
@@ -57,32 +33,18 @@
   "app-menu-toggle-fullscreen": "پوری اسکرین کو ٹوگل کریں۔",
   "app-menu-bookmark-actions": "بک مارک کے انتخاب کے اعمال",
   "app-menu-bookmark-actions-reasoning": "استدلال",
-  "app-guide-bookmark-teach-topics": "مجھے سکھاؤ",
-  "app-guide-bookmark-quiz-topics": "مجھ سے سوال کرو",
-  "app-guide-bookmark-related-topics": "متعلقہ موضوعات",
-  "app-guide-bookmark-topic-differences": "اختلافات",
-  "app-guide-bookmark-commonalities": "مشترکات",
-  "app-guide-bookmark-similarities": "مماثلت",
-  "app-guide-bookmark-implications": "مضمرات",
-  "app-guide-bookmark-history": "تاریخ",
   "app-menu-import-as": "بُک مارکس درآمد کریں۔",
   "app-menu-export-as": "بک مارکس برآمد کریں۔",
   "app-menu-bookmark-actions-media": "میڈیا",
+  "app-menu-upload-json": "اپ لوڈ کریں",
+  "app-menu-bookmark-current-view": "موجودہ منظر کو بُک مارک کریں۔",
   "app-menu-visual-search": "بصری تلاش",
   "app-menu-reading-assistance": "پڑھنے کی مدد",
   "app-menu-bread": "لفظ بولڈ شروع کریں",
   "app-menu-ai-tutor": "اے آئی ٹیوٹر",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "موجودہ منظر کو بُک مارک کریں۔",
+  "app-menu-datasources": "اعداد و شمار ذرائع",
   "app-menu-clone-tab": "کلون ٹیب",
-  "app-menu-plant-identification": "پلانٹ کی شناخت",
+  "app-menu-plant-identification": "پودوں کی شناخت",
   "app-menu-text-identification": "متن کی شناخت",
   "app-menu-digital-libraries": "ڈیجیٹل لائبریریاں",
   "app-menu-geography": "جغرافیہ",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "سائڈبار کو ٹوگل کریں۔",
   "app-menu-add-bookmark": "بک مارک شامل کریں",
   "app-menu-note-1": "نوٹ 1: صرف اس وقت دستیاب ہے جب فوکس سائڈبار یا ویکیپیڈیا آرٹیکل پین پر ہو۔",
+  "app-menu-features": "خصوصیات",
+  "app-menu-persona": "شخصیت",
+  "app-menu-country-select": "ملک",
+  "app-menu-interests": "مفادات",
+  "app-menu-nature-location-quiz": "فطرت کے مقام کا کوئز",
+  "app-menu-command-editor": "کمانڈ ایڈیٹر",
+  "app-menu-presentation": "پیشکش",
+  "app-menu-editor": "ایڈیٹر",
+  "app-menu-run-code": "رن",
+  "app-menu-clear-editor": "صاف",
+  "app-menu-cover-topic": "کور موضوع",
+  "app-menu-news": "خبریں",
+  "app-menu-culture": "ثقافت",
+  "app-menu-nature": "فطرت",
+  "app-menu-license": "لائسنس",
+  "app-menu-goto-next-topic": "اگلے موضوع پر جائیں (سائیڈ بار کے نتائج میں)",
+  "app-menu-goto-previous-topic": "پچھلے موضوع پر جائیں (سائیڈبار کے نتائج میں)",
+  "app-menu-goto-next-pane": "اگلے پین پر جائیں",
+  "app-menu-goto-previous-pane": "پچھلے پین پر جائیں",
+  "app-menu-new-search": "نئی تلاش",
+  "app-menu-structured-search": "ساختی تلاش",
+  "app-menu-geo-search": "جیو تلاش",
+  "app-section-main": "مرکزی",
+  "app-section-info": "معلومات",
+  "app-section-library": "کتب خانہ",
+  "app-section-web": "ویب",
+  "app-section-news": "خبریں",
+  "app-section-news-general": "جنرل",
+  "app-section-social": "سماجی",
+  "app-section-news-tech": "ٹیکنالوجی",
+  "app-section-society-jobs": "نوکریاں",
+  "app-section-location": "مقام",
+  "app-section-location-geography": "جغرافیہ",
+  "app-section-location-demography": "ڈیموگرافی",
+  "app-section-location-ecology": "ماحولیات",
+  "app-section-location-travel": "سفر",
+  "app-section-location-weather": "موسم",
+  "app-section-location-real-estate": "ریل اسٹیٹ کی",
   "app-section-business": "کاروبار",
   "app-section-government": "حکومت",
   "app-section-government-general": "جنرل",
@@ -132,6 +132,7 @@
   "app-section-library-general": "جنرل",
   "app-section-library-manuscripts": "مخطوطات",
   "app-section-library-history": "تاریخ",
+  "app-section-library-philosophy": "فلسفہ",
   "app-section-library-genealogy": "نسب نامہ",
   "app-section-library-legal": "قانونی",
   "app-section-library-products": "مصنوعات",
@@ -144,19 +145,31 @@
   "app-section-society": "معاشرہ",
   "app-section-society-sports": "کھیل",
   "app-section-society-food": "کھانا",
-  "app-section-library-philosophy": "فلسفہ",
   "app-section-library-religion": "مذہب",
   "app-section-library-poetry": "شاعری",
   "app-section-library-identity": "شناخت",
   "app-section-society-events": "تقریبات",
-  "app-guide-welcome-text": "Conzept اکیسویں صدی کے لیے ایک انسائیکلوپیڈیا بنانے کی کوشش ہے۔  <br><br> اپنی دریافتوں کا لطف اٹھائیں! ",
   "app-section-society-shopping": "خریداری",
-  "app-notification-too-few-compare-topics": "پہلے بٹن کا استعمال کرتے ہوئے مقابلے میں دو یا زیادہ عنوانات شامل کریں (ویکیپیڈیا-مضمون کے اوپری حصے میں اور موضوع کے میٹا سیکشن میں واقع)",
-  "app-menu-goto-next-topic": "اگلے موضوع پر جائیں (سائیڈ بار کے نتائج میں)",
-  "app-menu-goto-previous-topic": "پچھلے موضوع پر جائیں (سائیڈبار کے نتائج میں)",
-  "app-menu-goto-next-pane": "اگلے پین پر جائیں",
-  "app-menu-goto-previous-pane": "پچھلے پین پر جائیں",
-  "app-menu-new-search": "نئی تلاش",
+  "app-guide-bookmarks-selected": "منتخب شدہ",
+  "app-guide-bookmarks-deselect-all": "سب کو غیر منتخب کریں۔",
+  "app-guide-bookmark-teach-topics": "مجھے سکھاؤ",
+  "app-guide-bookmark-quiz-topics": "مجھ سے سوال کرو",
+  "app-guide-bookmark-related-topics": "متعلقہ موضوعات",
+  "app-guide-bookmark-topic-differences": "اختلافات",
+  "app-guide-bookmark-commonalities": "مشترکات",
+  "app-guide-bookmark-similarities": "مماثلت",
+  "app-guide-bookmark-implications": "مضمرات",
+  "app-guide-bookmark-history": "تاریخ",
+  "app-guide-bookmark-gapminder-country-trend": "ملک کا رجحان",
+  "app-guide-see-more": "دیکھیں مزید",
+  "app-guide-page": "صفحہ",
+  "app-guide-current-events": "موجودہ واقعات",
+  "app-guide-topic": "موضوع",
+  "app-guide-artwork": "پینٹنگ",
+  "app-guide-organism": "حیاتیات",
+  "app-guide-music": "موسیقی",
+  "app-guide-science": "سائنس",
+  "app-guide-welcome-text": "Conzept اکیسویں صدی کے لیے ایک انسائیکلوپیڈیا بنانے کی کوشش ہے۔  <br><br> اپنی دریافتوں کا لطف اٹھائیں! ",
   "app-guide-documentary": "دستاویزی فلم",
   "app-guide-country": "ملک",
   "app-guide-string-search": "تار کی تلاش",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "بیکٹیریم",
   "app-guide-virus": "وائرس",
   "app-guide-featured-article": "نمایاں مضمون",
-  "app-menu-cover-topic": "کور موضوع",
-  "app-menu-news": "خبریں",
-  "app-menu-culture": "ثقافت",
-  "app-menu-nature": "فطرت",
-  "app-menu-license": "لائسنس",
   "app-guide-help": "مدد",
   "app-guide-sea": "سمندر",
   "app-guide-continent": "براعظم",
@@ -192,7 +200,7 @@
   "app-guide-atom": "ایٹم",
   "app-guide-protist": "پروٹسٹ",
   "app-guide-country-map": "ملک کا نقشہ",
-  "app-guide-capital": "کیپٹل",
+  "app-guide-capital": "سرمایہ",
   "app-guide-form-of-government": "حکومت کی شکل",
   "app-guide-religion": "مذہب",
   "app-guide-period": "مدت",
@@ -215,25 +223,20 @@
   "app-guide-dish": "ڈش",
   "app-guide-cell-type": "سیل کی قسم",
   "app-guide-archae": "آثار قدیمہ",
-  "app-menu-persona": "شخصیت",
   "app-guide-featured-portal": "نمایاں پورٹل",
   "app-guide-musical-instrument": "آلہ",
   "app-guide-technology": "ٹیکنالوجی",
   "app-guide-near-me": "میرے قریب",
+  "app-guide-news-gdelt": "جی ڈی ای ایل ٹی",
   "app-guide-newspapers": "اخبارات",
+  "app-guide-radio-map": "ریڈیو کا نقشہ",
   "app-guide-news-radio": "ریڈیو",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "لائیو ٹی وی",
   "app-guide-news-tv": "ٹی وی",
   "app-guide-news-economic-indicators": "اقتصادی اشارے",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "ترقی کے رجحانات",
+  "app-guide-conflict-map": "تنازعات کا نقشہ",
   "app-guide-ongoing-conflicts": "تنازعات",
   "app-guide-radio": "ریڈیو",
-  "app-menu-country-select": "ملک",
-  "app-menu-interests": "مفادات",
-  "app-menu-command-editor": "کمانڈ ایڈیٹر",
-  "app-menu-presentation": "پیشکش",
-  "app-menu-editor": "ایڈیٹر",
-  "app-menu-run-code": "رن",
-  "app-menu-clear-editor": "صاف",
   "app-foo": "foo بار باز"
 }
