--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "সেটিংস",
   "app-tab-help-title": "সাহায্য",
   "app-tab-audio-chat-title": "অডিও চ্যাট",
+  "app-notification-too-few-compare-topics": "বোতামটি ব্যবহার করে তুলনা করার জন্য প্রথমে দুই বা ততোধিক বিষয় যোগ করুন (উইকিপিডিয়া-নিবন্ধের শীর্ষে এবং বিষয়ের মেটা-সেকশনে অবস্থিত)",
   "app-search-placeholder": "অনুসন্ধান",
-  "app-structured-search-title": "কাঠামোগত অনুসন্ধান",
+  "app-topics-found": "বিষয় পাওয়া গেছে",
   "app-title-occurence": "ঘটনার মানচিত্র",
   "app-title-super": "সুপার",
   "app-title-sub": "উপ",
   "app-title-pages": "পৃষ্ঠাগুলি",
   "app-title-citations": "উদ্ধৃতি",
-  "app-guide-see-more": "আরো দেখুন",
-  "app-guide-page": "পৃষ্ঠা",
-  "app-guide-current-events": "বর্তমান ঘটনা",
-  "app-guide-topic": "বিষয়",
-  "app-guide-artwork": "পেইন্টিং",
-  "app-guide-organism": "জীব",
-  "app-guide-music": "সঙ্গীত",
-  "app-guide-science": "বিজ্ঞান",
-  "app-topics-found": "বিষয় পাওয়া গেছে",
-  "app-section-main": "প্রধান",
-  "app-section-info": "তথ্য",
-  "app-section-library": "লাইব্রেরি",
-  "app-section-web": "ওয়েব",
-  "app-section-news": "খবর",
-  "app-section-news-general": "সাধারণ",
-  "app-section-social": "সামাজিক",
-  "app-section-news-tech": "প্রযুক্তি",
-  "app-section-society-jobs": "চাকরি",
-  "app-section-location": "অবস্থান",
-  "app-section-location-geography": "ভূগোল",
-  "app-section-location-demography": "জনসংখ্যা",
-  "app-section-location-ecology": "বাস্তুশাস্ত্র",
-  "app-section-location-travel": "ভ্রমণ",
-  "app-section-location-weather": "আবহাওয়া",
-  "app-section-location-real-estate": "আবাসন",
   "app-menu-actions": "কর্ম",
   "app-menu-background-audio": "শ্রুতি",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "টগল পর্দা জুড়ে প্রদর্শন",
   "app-menu-bookmark-actions": "বুকমার্ক-নির্বাচন কর্ম",
   "app-menu-bookmark-actions-reasoning": "যুক্তি",
-  "app-guide-bookmark-teach-topics": "আমাকে শেখাও",
-  "app-guide-bookmark-quiz-topics": "আমাকে প্রশ্ন করুন",
-  "app-guide-bookmark-related-topics": "সম্পর্কিত বিষয়",
-  "app-guide-bookmark-topic-differences": "পার্থক্য",
-  "app-guide-bookmark-commonalities": "সাধারণতা",
-  "app-guide-bookmark-similarities": "মিল",
-  "app-guide-bookmark-implications": "প্রভাব",
-  "app-guide-bookmark-history": "ইতিহাস",
   "app-menu-import-as": "বুকমার্ক আমদানি করুন",
   "app-menu-export-as": "বুকমার্ক রপ্তানি করুন",
   "app-menu-bookmark-actions-media": "মিডিয়া",
+  "app-menu-upload-json": "আপলোড",
+  "app-menu-bookmark-current-view": "বুকমার্ক বর্তমান দৃশ্য",
   "app-menu-visual-search": "চাক্ষুষ অনুসন্ধান",
   "app-menu-reading-assistance": "পড়ার সহায়তা",
   "app-menu-bread": "শব্দ শুরু বোল্ডিং",
-  "app-menu-ai-tutor": "এআই টিউটর",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "বুকমার্ক বর্তমান দৃশ্য",
+  "app-menu-ai-tutor": "এআই শিক্ষক",
+  "app-menu-datasources": "তথ্য সূত্র",
   "app-menu-clone-tab": "ক্লোন ট্যাব",
   "app-menu-plant-identification": "উদ্ভিদ সনাক্তকরণ",
   "app-menu-text-identification": "পাঠ্য সনাক্তকরণ",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "সাইডবার টগল করুন",
   "app-menu-add-bookmark": "বুকমার্কে সংযুক্তকরন",
   "app-menu-note-1": "নোট 1: শুধুমাত্র তখনই উপলভ্য যখন ফোকাস সাইডবারে বা উইকিপিডিয়া আর্টিকেল প্যানে থাকে।",
+  "app-menu-features": "বৈশিষ্ট্য",
+  "app-menu-persona": "ব্যক্তিত্ব",
+  "app-menu-country-select": "দেশ",
+  "app-menu-interests": "স্বার্থ",
+  "app-menu-nature-location-quiz": "প্রকৃতি অবস্থান কুইজ",
+  "app-menu-command-editor": "কমান্ড সম্পাদক",
+  "app-menu-presentation": "উপস্থাপনা",
+  "app-menu-editor": "সম্পাদক",
+  "app-menu-run-code": "চালান",
+  "app-menu-clear-editor": "পরিষ্কার",
+  "app-menu-cover-topic": "কভার বিষয়",
+  "app-menu-news": "খবর",
+  "app-menu-culture": "সংস্কৃতি",
+  "app-menu-nature": "প্রকৃতি",
+  "app-menu-license": "লাইসেন্স",
+  "app-menu-goto-next-topic": "পরবর্তী বিষয়ে যান (সাইডবার ফলাফলে)",
+  "app-menu-goto-previous-topic": "পূর্ববর্তী বিষয়ে যান (সাইডবার ফলাফলে)",
+  "app-menu-goto-next-pane": "পরবর্তী প্যানে যান",
+  "app-menu-goto-previous-pane": "আগের প্যানে যান",
+  "app-menu-new-search": "নতুন অনুসন্ধান",
+  "app-menu-structured-search": "কাঠামোগত অনুসন্ধান",
+  "app-menu-geo-search": "জিও অনুসন্ধান",
+  "app-section-main": "প্রধান",
+  "app-section-info": "তথ্য",
+  "app-section-library": "লাইব্রেরি",
+  "app-section-web": "ওয়েব",
+  "app-section-news": "খবর",
+  "app-section-news-general": "সাধারণ",
+  "app-section-social": "সামাজিক",
+  "app-section-news-tech": "প্রযুক্তি",
+  "app-section-society-jobs": "চাকরি",
+  "app-section-location": "অবস্থান",
+  "app-section-location-geography": "ভূগোল",
+  "app-section-location-demography": "জনসংখ্যা",
+  "app-section-location-ecology": "বাস্তুশাস্ত্র",
+  "app-section-location-travel": "ভ্রমণ",
+  "app-section-location-weather": "আবহাওয়া",
+  "app-section-location-real-estate": "আবাসন",
   "app-section-business": "ব্যবসা",
   "app-section-government": "সরকার",
   "app-section-government-general": "সাধারণ",
@@ -132,6 +132,7 @@
   "app-section-library-general": "সাধারণ",
   "app-section-library-manuscripts": "পাণ্ডুলিপি",
   "app-section-library-history": "ইতিহাস",
+  "app-section-library-philosophy": "দর্শন",
   "app-section-library-genealogy": "বংশতালিকা",
   "app-section-library-legal": "আইনি",
   "app-section-library-products": "পণ্য",
@@ -144,19 +145,31 @@
   "app-section-society": "সমাজ",
   "app-section-society-sports": "খেলাধুলা",
   "app-section-society-food": "খাদ্য",
-  "app-section-library-philosophy": "দর্শন",
   "app-section-library-religion": "ধর্ম",
   "app-section-library-poetry": "কবিতা",
   "app-section-library-identity": "পরিচয়",
   "app-section-society-events": "ঘটনা",
-  "app-guide-welcome-text": "কনজেপ্ট হল একবিংশ শতাব্দীর জন্য একটি বিশ্বকোষ তৈরির প্রচেষ্টা।  <br><br> আপনার অন্বেষণ উপভোগ করুন! ",
   "app-section-society-shopping": "কেনাকাটা",
-  "app-notification-too-few-compare-topics": "বোতামটি ব্যবহার করে তুলনা করার জন্য প্রথমে দুই বা ততোধিক বিষয় যোগ করুন (উইকিপিডিয়া-নিবন্ধের শীর্ষে এবং বিষয়ের মেটা-সেকশনে অবস্থিত)",
-  "app-menu-goto-next-topic": "পরবর্তী বিষয়ে যান (সাইডবার ফলাফলে)",
-  "app-menu-goto-previous-topic": "পূর্ববর্তী বিষয়ে যান (সাইডবার ফলাফলে)",
-  "app-menu-goto-next-pane": "পরবর্তী প্যানে যান",
-  "app-menu-goto-previous-pane": "আগের প্যানে যান",
-  "app-menu-new-search": "নতুন অনুসন্ধান",
+  "app-guide-bookmarks-selected": "নির্বাচিত",
+  "app-guide-bookmarks-deselect-all": "সব গুলো অনির্বাচিত কর",
+  "app-guide-bookmark-teach-topics": "আমাকে শেখাও",
+  "app-guide-bookmark-quiz-topics": "আমাকে প্রশ্ন করুন",
+  "app-guide-bookmark-related-topics": "সম্পর্কিত বিষয়",
+  "app-guide-bookmark-topic-differences": "পার্থক্য",
+  "app-guide-bookmark-commonalities": "সাধারণতা",
+  "app-guide-bookmark-similarities": "মিল",
+  "app-guide-bookmark-implications": "প্রভাব",
+  "app-guide-bookmark-history": "ইতিহাস",
+  "app-guide-bookmark-gapminder-country-trend": "দেশের প্রবণতা",
+  "app-guide-see-more": "আরো দেখুন",
+  "app-guide-page": "পৃষ্ঠা",
+  "app-guide-current-events": "বর্তমান ঘটনা",
+  "app-guide-topic": "বিষয়",
+  "app-guide-artwork": "পেইন্টিং",
+  "app-guide-organism": "জীব",
+  "app-guide-music": "সঙ্গীত",
+  "app-guide-science": "বিজ্ঞান",
+  "app-guide-welcome-text": "কনজেপ্ট হল একবিংশ শতাব্দীর জন্য একটি বিশ্বকোষ তৈরির প্রচেষ্টা।  <br><br> আপনার অন্বেষণ উপভোগ করুন! ",
   "app-guide-documentary": "তথ্যচিত্র",
   "app-guide-country": "দেশ",
   "app-guide-string-search": "স্ট্রিং অনুসন্ধান",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "ব্যাকটেরিয়া",
   "app-guide-virus": "ভাইরাস",
   "app-guide-featured-article": "বৈশিষ্ট্যযুক্ত নিবন্ধ",
-  "app-menu-cover-topic": "কভার বিষয়",
-  "app-menu-news": "খবর",
-  "app-menu-culture": "সংস্কৃতি",
-  "app-menu-nature": "প্রকৃতি",
-  "app-menu-license": "লাইসেন্স",
   "app-guide-help": "সাহায্য",
   "app-guide-sea": "সমুদ্র",
   "app-guide-continent": "মহাদেশ",
@@ -192,7 +200,7 @@
   "app-guide-atom": "পরমাণু",
   "app-guide-protist": "প্রতিবাদী",
   "app-guide-country-map": "দেশের মানচিত্র",
-  "app-guide-capital": "ক্যাপিটল",
+  "app-guide-capital": "মূলধন",
   "app-guide-form-of-government": "gov এর ফর্ম",
   "app-guide-religion": "ধর্ম",
   "app-guide-period": "সময়কাল",
@@ -215,25 +223,20 @@
   "app-guide-dish": "থালা",
   "app-guide-cell-type": "কোষের ধরন",
   "app-guide-archae": "archae",
-  "app-menu-persona": "ব্যক্তিত্ব",
   "app-guide-featured-portal": "বৈশিষ্ট্যযুক্ত পোর্টাল",
   "app-guide-musical-instrument": "যন্ত্র",
   "app-guide-technology": "প্রযুক্তি",
   "app-guide-near-me": "আমার কাছে",
+  "app-guide-news-gdelt": "জিডিএলটি",
   "app-guide-newspapers": "সংবাদপত্র",
+  "app-guide-radio-map": "রেডিও মানচিত্র",
   "app-guide-news-radio": "রেডিও",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "সরাসরি সম্প্রচার",
   "app-guide-news-tv": "টেলিভিশন",
   "app-guide-news-economic-indicators": "অর্থনৈতিক সূচক",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "উন্নয়ন প্রবণতা",
+  "app-guide-conflict-map": "দ্বন্দ্ব মানচিত্র",
   "app-guide-ongoing-conflicts": "দ্বন্দ্ব",
   "app-guide-radio": "রেডিও",
-  "app-menu-country-select": "দেশ",
-  "app-menu-interests": "স্বার্থ",
-  "app-menu-command-editor": "কমান্ড সম্পাদক",
-  "app-menu-presentation": "উপস্থাপনা",
-  "app-menu-editor": "সম্পাদক",
-  "app-menu-run-code": "চালানো",
-  "app-menu-clear-editor": "পরিষ্কার",
   "app-foo": "foo বার baz"
 }
