--- a/app/explore2/assets/i18n/ui/conzept-da.json
+++ b/app/explore2/assets/i18n/ui/conzept-da.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "indstillinger",
   "app-tab-help-title": "Hjælp",
   "app-tab-audio-chat-title": "lydchat",
+  "app-notification-too-few-compare-topics": "Tilføj først to eller flere emner til sammenligningen ved at bruge knappen (placeret øverst i Wikipedia-artiklen og i emnets meta-sektion)",
   "app-search-placeholder": "Søg",
-  "app-structured-search-title": "struktureret søgning",
+  "app-topics-found": "emner fundet",
   "app-title-occurence": "Forekomst kort",
   "app-title-super": "super",
   "app-title-sub": "sub",
   "app-title-pages": "sider",
   "app-title-citations": "Citater",
-  "app-guide-see-more": "se mere",
-  "app-guide-page": "side",
-  "app-guide-current-events": "aktuelle begivenheder",
-  "app-guide-topic": "emne",
-  "app-guide-artwork": "maleri",
-  "app-guide-organism": "organisme",
-  "app-guide-music": "musik",
-  "app-guide-science": "videnskab",
-  "app-topics-found": "emner fundet",
-  "app-section-main": "vigtigste",
-  "app-section-info": "info",
-  "app-section-library": "bibliotek",
-  "app-section-web": "web",
-  "app-section-news": "nyheder",
-  "app-section-news-general": "generel",
-  "app-section-social": "social",
-  "app-section-news-tech": "tech",
-  "app-section-society-jobs": "job",
-  "app-section-location": "Beliggenhed",
-  "app-section-location-geography": "geografi",
-  "app-section-location-demography": "demografi",
-  "app-section-location-ecology": "økologi",
-  "app-section-location-travel": "rejse",
-  "app-section-location-weather": "vejr",
-  "app-section-location-real-estate": "ejendom",
   "app-menu-actions": "handlinger",
   "app-menu-background-audio": "lyd",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "skifte fuldskærm",
   "app-menu-bookmark-actions": "bogmærkevalgshandlinger",
   "app-menu-bookmark-actions-reasoning": "ræsonnement",
-  "app-guide-bookmark-teach-topics": "Lær mig",
-  "app-guide-bookmark-quiz-topics": "quiz mig",
-  "app-guide-bookmark-related-topics": "relaterede emner",
-  "app-guide-bookmark-topic-differences": "forskelle",
-  "app-guide-bookmark-commonalities": "fællestræk",
-  "app-guide-bookmark-similarities": "ligheder",
-  "app-guide-bookmark-implications": "implikationer",
-  "app-guide-bookmark-history": "historie",
   "app-menu-import-as": "importere bogmærker",
   "app-menu-export-as": "eksportere bogmærker",
   "app-menu-bookmark-actions-media": "medier",
+  "app-menu-upload-json": "upload",
+  "app-menu-bookmark-current-view": "bogmærke den aktuelle visning",
   "app-menu-visual-search": "visuel søgning",
   "app-menu-reading-assistance": "læsehjælp",
-  "app-menu-bread": "ord-start fed",
+  "app-menu-bread": "ord-start fed skrift",
   "app-menu-ai-tutor": "AI underviser",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "bogmærke den aktuelle visning",
+  "app-menu-datasources": "data kilder",
   "app-menu-clone-tab": "klon fane",
   "app-menu-plant-identification": "planteidentifikation",
   "app-menu-text-identification": "tekst identifikation",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "skift sidebjælken",
   "app-menu-add-bookmark": "Tilføj bogmærke",
   "app-menu-note-1": "note 1: kun tilgængelig, når fokus er på sidebjælken eller en Wikipedia-artikelrude.",
+  "app-menu-features": "funktioner",
+  "app-menu-persona": "persona",
+  "app-menu-country-select": "Land",
+  "app-menu-interests": "interesser",
+  "app-menu-nature-location-quiz": "naturplaceringsquiz",
+  "app-menu-command-editor": "kommando editor",
+  "app-menu-presentation": "præsentation",
+  "app-menu-editor": "redaktør",
+  "app-menu-run-code": "løb",
+  "app-menu-clear-editor": "klar",
+  "app-menu-cover-topic": "dække emne",
+  "app-menu-news": "nyheder",
+  "app-menu-culture": "kultur",
+  "app-menu-nature": "natur",
+  "app-menu-license": "licens",
+  "app-menu-goto-next-topic": "gå til næste emne (i sidebjælkens resultater)",
+  "app-menu-goto-previous-topic": "gå til forrige emne (i sidebjælkens resultater)",
+  "app-menu-goto-next-pane": "gå til næste rude",
+  "app-menu-goto-previous-pane": "gå til forrige rude",
+  "app-menu-new-search": "ny søgning",
+  "app-menu-structured-search": "struktureret søgning",
+  "app-menu-geo-search": "geo søgning",
+  "app-section-main": "vigtigste",
+  "app-section-info": "info",
+  "app-section-library": "bibliotek",
+  "app-section-web": "web",
+  "app-section-news": "nyheder",
+  "app-section-news-general": "generel",
+  "app-section-social": "social",
+  "app-section-news-tech": "tech",
+  "app-section-society-jobs": "job",
+  "app-section-location": "Beliggenhed",
+  "app-section-location-geography": "geografi",
+  "app-section-location-demography": "demografi",
+  "app-section-location-ecology": "økologi",
+  "app-section-location-travel": "rejse",
+  "app-section-location-weather": "vejr",
+  "app-section-location-real-estate": "ejendom",
   "app-section-business": "forretning",
   "app-section-government": "regering",
   "app-section-government-general": "generel",
@@ -132,6 +132,7 @@
   "app-section-library-general": "generel",
   "app-section-library-manuscripts": "manuskripter",
   "app-section-library-history": "historie",
+  "app-section-library-philosophy": "filosofi",
   "app-section-library-genealogy": "genealogi",
   "app-section-library-legal": "gyldige",
   "app-section-library-products": "Produkter",
@@ -144,19 +145,31 @@
   "app-section-society": "samfund",
   "app-section-society-sports": "sport",
   "app-section-society-food": "mad",
-  "app-section-library-philosophy": "filosofi",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poesi",
   "app-section-library-identity": "identitet",
   "app-section-society-events": "begivenheder",
-  "app-guide-welcome-text": "Conzept er et forsøg på at skabe en encyklopædi for det 21. århundrede.  <br><br> Nyd dine udforskninger! ",
   "app-section-society-shopping": "handle ind",
-  "app-notification-too-few-compare-topics": "Tilføj først to eller flere emner til sammenligningen ved hjælp af knappen (placeret øverst i Wikipedia-artiklen og i meta-sektionen af ​​emnet)",
-  "app-menu-goto-next-topic": "gå til næste emne (i sidebjælkens resultater)",
-  "app-menu-goto-previous-topic": "gå til forrige emne (i sidebjælkens resultater)",
-  "app-menu-goto-next-pane": "gå til næste rude",
-  "app-menu-goto-previous-pane": "gå til forrige rude",
-  "app-menu-new-search": "ny søgning",
+  "app-guide-bookmarks-selected": "valgte",
+  "app-guide-bookmarks-deselect-all": "Fravælg alle",
+  "app-guide-bookmark-teach-topics": "Lær mig",
+  "app-guide-bookmark-quiz-topics": "quiz mig",
+  "app-guide-bookmark-related-topics": "relaterede emner",
+  "app-guide-bookmark-topic-differences": "forskelle",
+  "app-guide-bookmark-commonalities": "fællestræk",
+  "app-guide-bookmark-similarities": "ligheder",
+  "app-guide-bookmark-implications": "implikationer",
+  "app-guide-bookmark-history": "historie",
+  "app-guide-bookmark-gapminder-country-trend": "lande trend",
+  "app-guide-see-more": "se mere",
+  "app-guide-page": "side",
+  "app-guide-current-events": "aktuelle begivenheder",
+  "app-guide-topic": "emne",
+  "app-guide-artwork": "maleri",
+  "app-guide-organism": "organisme",
+  "app-guide-music": "musik",
+  "app-guide-science": "videnskab",
+  "app-guide-welcome-text": "Conzept er et forsøg på at skabe en encyklopædi for det 21. århundrede.  <br><br> Nyd dine udforskninger! ",
   "app-guide-documentary": "dokumentar",
   "app-guide-country": "Land",
   "app-guide-string-search": "strengsøgning",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bakterie",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "fremhævet artikel",
-  "app-menu-cover-topic": "dække emne",
-  "app-menu-news": "nyheder",
-  "app-menu-culture": "kultur",
-  "app-menu-nature": "natur",
-  "app-menu-license": "licens",
   "app-guide-help": "Hjælp",
   "app-guide-sea": "hav",
   "app-guide-continent": "kontinent",
@@ -192,7 +200,7 @@
   "app-guide-atom": "atom",
   "app-guide-protist": "protist",
   "app-guide-country-map": "landkort",
-  "app-guide-capital": "hovedstad",
+  "app-guide-capital": "kapital",
   "app-guide-form-of-government": "form for regering.",
   "app-guide-religion": "religion",
   "app-guide-period": "periode",
@@ -215,25 +223,20 @@
   "app-guide-dish": "fad",
   "app-guide-cell-type": "celletype",
   "app-guide-archae": "archae",
-  "app-menu-persona": "persona",
   "app-guide-featured-portal": "fremhævet portal",
   "app-guide-musical-instrument": "instrument",
   "app-guide-technology": "teknologi",
   "app-guide-near-me": "tæt på mig",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "aviser",
+  "app-guide-radio-map": "radio kort",
   "app-guide-news-radio": "radio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "direkte tv",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "økonomiske indikatorer",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "udviklingstendenser",
+  "app-guide-conflict-map": "konfliktkort",
   "app-guide-ongoing-conflicts": "konflikter",
   "app-guide-radio": "radio",
-  "app-menu-country-select": "Land",
-  "app-menu-interests": "interesser",
-  "app-menu-command-editor": "kommando editor",
-  "app-menu-presentation": "præsentation",
-  "app-menu-editor": "redaktør",
-  "app-menu-run-code": "løb",
-  "app-menu-clear-editor": "klar",
   "app-foo": "foo bar baz"
 }
