--- a/app/explore2/assets/i18n/ui/conzept-it.json
+++ b/app/explore2/assets/i18n/ui/conzept-it.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "impostazioni",
   "app-tab-help-title": "aiuto",
   "app-tab-audio-chat-title": "chat audio",
+  "app-notification-too-few-compare-topics": "Per prima cosa aggiungi due o più argomenti al confronto, utilizzando il pulsante (situato nella parte superiore dell'articolo di Wikipedia e nella meta-sezione dell'argomento)",
   "app-search-placeholder": "ricerca",
-  "app-structured-search-title": "ricerca strutturata",
+  "app-topics-found": "argomenti trovati",
   "app-title-occurence": "Mappa degli eventi",
   "app-title-super": "super",
   "app-title-sub": "sub",
   "app-title-pages": "pagine",
   "app-title-citations": "Citazioni",
-  "app-guide-see-more": "Vedi altro",
-  "app-guide-page": "pagina",
-  "app-guide-current-events": "eventi attuali",
-  "app-guide-topic": "argomento",
-  "app-guide-artwork": "pittura",
-  "app-guide-organism": "organismo",
-  "app-guide-music": "musica",
-  "app-guide-science": "scienza",
-  "app-topics-found": "argomenti trovati",
-  "app-section-main": "principale",
-  "app-section-info": "informazioni",
-  "app-section-library": "biblioteca",
-  "app-section-web": "ragnatela",
-  "app-section-news": "notizia",
-  "app-section-news-general": "generale",
-  "app-section-social": "sociale",
-  "app-section-news-tech": "tecnologia",
-  "app-section-society-jobs": "lavori",
-  "app-section-location": "posizione",
-  "app-section-location-geography": "geografia",
-  "app-section-location-demography": "demografia",
-  "app-section-location-ecology": "ecologia",
-  "app-section-location-travel": "viaggio",
-  "app-section-location-weather": "tempo atmosferico",
-  "app-section-location-real-estate": "immobiliare",
   "app-menu-actions": "Azioni",
   "app-menu-background-audio": "Audio",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "passare a schermo intero",
   "app-menu-bookmark-actions": "azioni di selezione dei segnalibri",
   "app-menu-bookmark-actions-reasoning": "ragionamento",
-  "app-guide-bookmark-teach-topics": "insegnami",
-  "app-guide-bookmark-quiz-topics": "interrogami",
-  "app-guide-bookmark-related-topics": "argomenti correlati",
-  "app-guide-bookmark-topic-differences": "differenze",
-  "app-guide-bookmark-commonalities": "punti in comune",
-  "app-guide-bookmark-similarities": "analogie",
-  "app-guide-bookmark-implications": "implicazioni",
-  "app-guide-bookmark-history": "storia",
   "app-menu-import-as": "importare segnalibri",
   "app-menu-export-as": "esportare segnalibri",
   "app-menu-bookmark-actions-media": "media",
+  "app-menu-upload-json": "caricamento",
+  "app-menu-bookmark-current-view": "aggiungere la vista corrente ai segnalibri",
   "app-menu-visual-search": "ricerca visiva",
   "app-menu-reading-assistance": "assistenza alla lettura",
   "app-menu-bread": "inizio parola in grassetto",
   "app-menu-ai-tutor": "Tutor dell'intelligenza artificiale",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "aggiungere la vista corrente ai segnalibri",
+  "app-menu-datasources": "Origine dei dati",
   "app-menu-clone-tab": "scheda clone",
   "app-menu-plant-identification": "identificazione delle piante",
   "app-menu-text-identification": "identificazione del testo",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "attiva/disattiva la barra laterale",
   "app-menu-add-bookmark": "Aggiungi segnalibro",
   "app-menu-note-1": "nota 1: disponibile solo quando lo stato attivo è sulla barra laterale o sul riquadro di un articolo di Wikipedia.",
+  "app-menu-features": "caratteristiche",
+  "app-menu-persona": "persona",
+  "app-menu-country-select": "Paese",
+  "app-menu-interests": "interessi",
+  "app-menu-nature-location-quiz": "quiz sulla posizione della natura",
+  "app-menu-command-editor": "editore dei comandi",
+  "app-menu-presentation": "presentazione",
+  "app-menu-editor": "editore",
+  "app-menu-run-code": "correre",
+  "app-menu-clear-editor": "chiaro",
+  "app-menu-cover-topic": "argomento di copertina",
+  "app-menu-news": "notizia",
+  "app-menu-culture": "cultura",
+  "app-menu-nature": "natura",
+  "app-menu-license": "licenza",
+  "app-menu-goto-next-topic": "vai all'argomento successivo (nei risultati della barra laterale)",
+  "app-menu-goto-previous-topic": "vai all'argomento precedente (nei risultati della barra laterale)",
+  "app-menu-goto-next-pane": "vai al riquadro successivo",
+  "app-menu-goto-previous-pane": "vai al riquadro precedente",
+  "app-menu-new-search": "nuova ricerca",
+  "app-menu-structured-search": "ricerca strutturata",
+  "app-menu-geo-search": "ricerca geografica",
+  "app-section-main": "principale",
+  "app-section-info": "informazioni",
+  "app-section-library": "biblioteca",
+  "app-section-web": "ragnatela",
+  "app-section-news": "notizia",
+  "app-section-news-general": "generale",
+  "app-section-social": "sociale",
+  "app-section-news-tech": "tecnologia",
+  "app-section-society-jobs": "lavori",
+  "app-section-location": "posizione",
+  "app-section-location-geography": "geografia",
+  "app-section-location-demography": "demografia",
+  "app-section-location-ecology": "ecologia",
+  "app-section-location-travel": "viaggio",
+  "app-section-location-weather": "tempo atmosferico",
+  "app-section-location-real-estate": "immobiliare",
   "app-section-business": "Attività commerciale",
   "app-section-government": "governo",
   "app-section-government-general": "generale",
@@ -132,6 +132,7 @@
   "app-section-library-general": "generale",
   "app-section-library-manuscripts": "manoscritti",
   "app-section-library-history": "storia",
+  "app-section-library-philosophy": "filosofia",
   "app-section-library-genealogy": "genealogia",
   "app-section-library-legal": "legale",
   "app-section-library-products": "prodotti",
@@ -144,19 +145,31 @@
   "app-section-society": "società",
   "app-section-society-sports": "gli sport",
   "app-section-society-food": "cibo",
-  "app-section-library-philosophy": "filosofia",
   "app-section-library-religion": "religione",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identità",
   "app-section-society-events": "eventi",
-  "app-guide-welcome-text": "Conzept è un tentativo di creare un'enciclopedia per il 21° secolo.  <br><br> Goditi le tue esplorazioni! ",
   "app-section-society-shopping": "shopping",
-  "app-notification-too-few-compare-topics": "Per prima cosa aggiungi due o più argomenti al confronto, utilizzando il pulsante (situato nella parte superiore dell'articolo di Wikipedia e nella meta-sezione dell'argomento)",
-  "app-menu-goto-next-topic": "vai all'argomento successivo (nei risultati della barra laterale)",
-  "app-menu-goto-previous-topic": "vai all'argomento precedente (nei risultati della barra laterale)",
-  "app-menu-goto-next-pane": "vai al riquadro successivo",
-  "app-menu-goto-previous-pane": "vai al riquadro precedente",
-  "app-menu-new-search": "nuova ricerca",
+  "app-guide-bookmarks-selected": "selezionato",
+  "app-guide-bookmarks-deselect-all": "deselezionare tutto",
+  "app-guide-bookmark-teach-topics": "insegnami",
+  "app-guide-bookmark-quiz-topics": "interrogami",
+  "app-guide-bookmark-related-topics": "argomenti correlati",
+  "app-guide-bookmark-topic-differences": "differenze",
+  "app-guide-bookmark-commonalities": "punti in comune",
+  "app-guide-bookmark-similarities": "analogie",
+  "app-guide-bookmark-implications": "implicazioni",
+  "app-guide-bookmark-history": "storia",
+  "app-guide-bookmark-gapminder-country-trend": "tendenza del paese",
+  "app-guide-see-more": "Vedi altro",
+  "app-guide-page": "pagina",
+  "app-guide-current-events": "eventi attuali",
+  "app-guide-topic": "argomento",
+  "app-guide-artwork": "pittura",
+  "app-guide-organism": "organismo",
+  "app-guide-music": "musica",
+  "app-guide-science": "scienza",
+  "app-guide-welcome-text": "Conzept è un tentativo di creare un'enciclopedia per il 21° secolo.  <br><br> Goditi le tue esplorazioni! ",
   "app-guide-documentary": "documentario",
   "app-guide-country": "Paese",
   "app-guide-string-search": "ricerca di stringhe",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "batterio",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "articolo in primo piano",
-  "app-menu-cover-topic": "argomento di copertina",
-  "app-menu-news": "notizia",
-  "app-menu-culture": "cultura",
-  "app-menu-nature": "natura",
-  "app-menu-license": "licenza",
   "app-guide-help": "aiuto",
   "app-guide-sea": "mare",
   "app-guide-continent": "continente",
@@ -192,7 +200,7 @@
   "app-guide-atom": "atomo",
   "app-guide-protist": "protista",
   "app-guide-country-map": "mappa del paese",
-  "app-guide-capital": "Campidoglio",
+  "app-guide-capital": "capitale",
   "app-guide-form-of-government": "forma di governo",
   "app-guide-religion": "religione",
   "app-guide-period": "periodo",
@@ -215,25 +223,20 @@
   "app-guide-dish": "piatto",
   "app-guide-cell-type": "tipo di cellula",
   "app-guide-archae": "archae",
-  "app-menu-persona": "persona",
   "app-guide-featured-portal": "portale in primo piano",
   "app-guide-musical-instrument": "strumento",
   "app-guide-technology": "tecnologia",
   "app-guide-near-me": "vicino a me",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "giornali",
+  "app-guide-radio-map": "mappa radiofonica",
   "app-guide-news-radio": "Radio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "tv dal vivo",
   "app-guide-news-tv": "tv",
   "app-guide-news-economic-indicators": "indicatori economici",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "tendenze di sviluppo",
+  "app-guide-conflict-map": "mappa dei conflitti",
   "app-guide-ongoing-conflicts": "conflitti",
   "app-guide-radio": "Radio",
-  "app-menu-country-select": "Paese",
-  "app-menu-interests": "interessi",
-  "app-menu-command-editor": "editore dei comandi",
-  "app-menu-presentation": "presentazione",
-  "app-menu-editor": "editore",
-  "app-menu-run-code": "correre",
-  "app-menu-clear-editor": "chiaro",
   "app-foo": "foo bar baz"
 }
