--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "설정",
   "app-tab-help-title": "돕다",
   "app-tab-audio-chat-title": "오디오 채팅",
+  "app-notification-too-few-compare-topics": "먼저 버튼(Wikipedia 문서 상단과 주제의 메타 섹션에 있음)을 사용하여 비교에 두 개 이상의 주제를 추가합니다.",
   "app-search-placeholder": "찾다",
-  "app-structured-search-title": "구조화된 검색",
+  "app-topics-found": "찾은 주제",
   "app-title-occurence": "발생지도",
   "app-title-super": "감독자",
   "app-title-sub": "보결",
   "app-title-pages": "페이지",
   "app-title-citations": "인용",
-  "app-guide-see-more": "더보기",
-  "app-guide-page": "페이지",
-  "app-guide-current-events": "현재 이벤트",
-  "app-guide-topic": "주제",
-  "app-guide-artwork": "그림",
-  "app-guide-organism": "유기체",
-  "app-guide-music": "음악",
-  "app-guide-science": "과학",
-  "app-topics-found": "찾은 주제",
-  "app-section-main": "기본",
-  "app-section-info": "정보",
-  "app-section-library": "도서관",
-  "app-section-web": "편물",
-  "app-section-news": "소식",
-  "app-section-news-general": "일반적인",
-  "app-section-social": "사회의",
-  "app-section-news-tech": "기술",
-  "app-section-society-jobs": "직업",
-  "app-section-location": "위치",
-  "app-section-location-geography": "지리학",
-  "app-section-location-demography": "인구 통계학",
-  "app-section-location-ecology": "생태학",
-  "app-section-location-travel": "여행하다",
-  "app-section-location-weather": "날씨",
-  "app-section-location-real-estate": "부동산",
   "app-menu-actions": "행위",
   "app-menu-background-audio": "오디오",
   "app-menu-background-midi": "미디",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "전체 화면 전환",
   "app-menu-bookmark-actions": "북마크 선택 작업",
   "app-menu-bookmark-actions-reasoning": "추리",
-  "app-guide-bookmark-teach-topics": "가르쳐 줘",
-  "app-guide-bookmark-quiz-topics": "나에게 퀴즈를 줘",
-  "app-guide-bookmark-related-topics": "관련 주제",
-  "app-guide-bookmark-topic-differences": "차이점",
-  "app-guide-bookmark-commonalities": "공통점",
-  "app-guide-bookmark-similarities": "유사점",
-  "app-guide-bookmark-implications": "의미",
-  "app-guide-bookmark-history": "역사",
   "app-menu-import-as": "북마크 가져오기",
   "app-menu-export-as": "북마크 내보내기",
   "app-menu-bookmark-actions-media": "미디어",
+  "app-menu-upload-json": "업로드",
+  "app-menu-bookmark-current-view": "현재 보기를 북마크에 추가",
   "app-menu-visual-search": "시각적 검색",
   "app-menu-reading-assistance": "독서 보조",
   "app-menu-bread": "단어 시작 볼드체",
   "app-menu-ai-tutor": "AI 튜터",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "현재 보기를 북마크에 추가",
+  "app-menu-datasources": "데이터 소스",
   "app-menu-clone-tab": "복제 탭",
   "app-menu-plant-identification": "식물 식별",
   "app-menu-text-identification": "텍스트 식별",
@@ -98,10 +60,48 @@
   "app-menu-style": "스타일",
   "app-menu-speed": "속도",
   "app-menu-pitch": "정점",
-  "app-menu-fullscreen-active-pane": "활성 창 전체 화면",
+  "app-menu-fullscreen-active-pane": "활성 창을 전체 화면으로 표시",
   "app-menu-toggle-sidebar": "사이드바 전환",
   "app-menu-add-bookmark": "북마크에 추가하다",
   "app-menu-note-1": "참고 1: 포커스가 사이드바 또는 Wikipedia 문서 창에 있는 경우에만 사용할 수 있습니다.",
+  "app-menu-features": "특징",
+  "app-menu-persona": "페르소나",
+  "app-menu-country-select": "국가",
+  "app-menu-interests": "이해",
+  "app-menu-nature-location-quiz": "자연 위치 퀴즈",
+  "app-menu-command-editor": "명령 편집기",
+  "app-menu-presentation": "프레젠테이션",
+  "app-menu-editor": "편집자",
+  "app-menu-run-code": "달리다",
+  "app-menu-clear-editor": "분명한",
+  "app-menu-cover-topic": "표지 주제",
+  "app-menu-news": "소식",
+  "app-menu-culture": "문화",
+  "app-menu-nature": "자연",
+  "app-menu-license": "특허",
+  "app-menu-goto-next-topic": "다음 주제로 이동(사이드바 결과에서)",
+  "app-menu-goto-previous-topic": "이전 주제로 이동(사이드바 결과에서)",
+  "app-menu-goto-next-pane": "다음 창으로 이동",
+  "app-menu-goto-previous-pane": "이전 창으로 이동",
+  "app-menu-new-search": "새로운 검색",
+  "app-menu-structured-search": "구조화된 검색",
+  "app-menu-geo-search": "지역 검색",
+  "app-section-main": "기본",
+  "app-section-info": "정보",
+  "app-section-library": "도서관",
+  "app-section-web": "편물",
+  "app-section-news": "소식",
+  "app-section-news-general": "일반적인",
+  "app-section-social": "사회의",
+  "app-section-news-tech": "기술",
+  "app-section-society-jobs": "직업",
+  "app-section-location": "위치",
+  "app-section-location-geography": "지리학",
+  "app-section-location-demography": "인구 통계학",
+  "app-section-location-ecology": "생태학",
+  "app-section-location-travel": "여행하다",
+  "app-section-location-weather": "날씨",
+  "app-section-location-real-estate": "부동산",
   "app-section-business": "사업",
   "app-section-government": "정부",
   "app-section-government-general": "일반적인",
@@ -132,6 +132,7 @@
   "app-section-library-general": "일반적인",
   "app-section-library-manuscripts": "원고",
   "app-section-library-history": "역사",
+  "app-section-library-philosophy": "철학",
   "app-section-library-genealogy": "가계",
   "app-section-library-legal": "합법적인",
   "app-section-library-products": "제품",
@@ -144,19 +145,31 @@
   "app-section-society": "사회",
   "app-section-society-sports": "스포츠",
   "app-section-society-food": "음식",
-  "app-section-library-philosophy": "철학",
   "app-section-library-religion": "종교",
   "app-section-library-poetry": "시",
   "app-section-library-identity": "신원",
   "app-section-society-events": "이벤트",
-  "app-guide-welcome-text": "컨셉트는 21세기에 맞는 백과사전을 만들려는 시도입니다.  <br><br> 탐험을 즐겨보세요! ",
   "app-section-society-shopping": "쇼핑",
-  "app-notification-too-few-compare-topics": "먼저 버튼(Wikipedia 문서 상단과 주제의 메타 섹션에 있음)을 사용하여 비교에 두 개 이상의 주제를 추가합니다.",
-  "app-menu-goto-next-topic": "다음 주제로 이동(사이드바 결과에서)",
-  "app-menu-goto-previous-topic": "이전 주제로 이동(사이드바 결과에서)",
-  "app-menu-goto-next-pane": "다음 창으로 이동",
-  "app-menu-goto-previous-pane": "이전 창으로 이동",
-  "app-menu-new-search": "새로운 검색",
+  "app-guide-bookmarks-selected": "선택된",
+  "app-guide-bookmarks-deselect-all": "모두 선택 취소",
+  "app-guide-bookmark-teach-topics": "가르쳐 줘",
+  "app-guide-bookmark-quiz-topics": "나에게 퀴즈를 줘",
+  "app-guide-bookmark-related-topics": "관련 주제",
+  "app-guide-bookmark-topic-differences": "차이점",
+  "app-guide-bookmark-commonalities": "공통점",
+  "app-guide-bookmark-similarities": "유사점",
+  "app-guide-bookmark-implications": "의미",
+  "app-guide-bookmark-history": "역사",
+  "app-guide-bookmark-gapminder-country-trend": "국가 동향",
+  "app-guide-see-more": "더보기",
+  "app-guide-page": "페이지",
+  "app-guide-current-events": "현재 이벤트",
+  "app-guide-topic": "주제",
+  "app-guide-artwork": "그림",
+  "app-guide-organism": "유기체",
+  "app-guide-music": "음악",
+  "app-guide-science": "과학",
+  "app-guide-welcome-text": "컨셉트는 21세기에 맞는 백과사전을 만들려는 시도입니다.  <br><br> 탐험을 즐겨보세요! ",
   "app-guide-documentary": "기록한 것",
   "app-guide-country": "국가",
   "app-guide-string-search": "문자열 검색",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "박테리아",
   "app-guide-virus": "바이러스",
   "app-guide-featured-article": "특집 기사",
-  "app-menu-cover-topic": "표지 주제",
-  "app-menu-news": "소식",
-  "app-menu-culture": "문화",
-  "app-menu-nature": "자연",
-  "app-menu-license": "특허",
   "app-guide-help": "돕다",
   "app-guide-sea": "바다",
   "app-guide-continent": "대륙",
@@ -192,7 +200,7 @@
   "app-guide-atom": "원자",
   "app-guide-protist": "원생생물",
   "app-guide-country-map": "국가 지도",
-  "app-guide-capital": "국회 의사당",
+  "app-guide-capital": "수도",
   "app-guide-form-of-government": "정부의 형태",
   "app-guide-religion": "종교",
   "app-guide-period": "기간",
@@ -215,25 +223,20 @@
   "app-guide-dish": "접시",
   "app-guide-cell-type": "세포 유형",
   "app-guide-archae": "고세",
-  "app-menu-persona": "페르소나",
   "app-guide-featured-portal": "추천 포털",
   "app-guide-musical-instrument": "기구",
   "app-guide-technology": "기술",
   "app-guide-near-me": "내 근처에",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "신문",
+  "app-guide-radio-map": "라디오 지도",
   "app-guide-news-radio": "라디오",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "생방송",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "경제 지표",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "개발 동향",
+  "app-guide-conflict-map": "갈등 지도",
   "app-guide-ongoing-conflicts": "갈등",
   "app-guide-radio": "라디오",
-  "app-menu-country-select": "국가",
-  "app-menu-interests": "이해",
-  "app-menu-command-editor": "명령 편집기",
-  "app-menu-presentation": "프레젠테이션",
-  "app-menu-editor": "편집자",
-  "app-menu-run-code": "달리다",
-  "app-menu-clear-editor": "분명한",
   "app-foo": "푸 바 바즈"
 }
