--- a/app/explore2/assets/i18n/ui/conzept-mr.json
+++ b/app/explore2/assets/i18n/ui/conzept-mr.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "सेटिंग्ज",
   "app-tab-help-title": "मदत",
   "app-tab-audio-chat-title": "ऑडिओ गप्पा",
+  "app-notification-too-few-compare-topics": "प्रथम बटण वापरून तुलना करण्यासाठी दोन किंवा अधिक विषय जोडा (विकिपीडिया-लेखाच्या शीर्षस्थानी आणि विषयाच्या मेटा-विभागात)",
   "app-search-placeholder": "शोध",
-  "app-structured-search-title": "संरचित शोध",
+  "app-topics-found": "विषय सापडले",
   "app-title-occurence": "घटना नकाशा",
   "app-title-super": "उत्कृष्ट",
   "app-title-sub": "उप",
   "app-title-pages": "पृष्ठे",
   "app-title-citations": "उद्धरण",
-  "app-guide-see-more": "अजून पहा",
-  "app-guide-page": "पृष्ठ",
-  "app-guide-current-events": "सद्य घटना",
-  "app-guide-topic": "विषय",
-  "app-guide-artwork": "चित्रकला",
-  "app-guide-organism": "जीव",
-  "app-guide-music": "संगीत",
-  "app-guide-science": "विज्ञान",
-  "app-topics-found": "विषय सापडले",
-  "app-section-main": "मुख्य",
-  "app-section-info": "माहिती",
-  "app-section-library": "लायब्ररी",
-  "app-section-web": "वेब",
-  "app-section-news": "बातम्या",
-  "app-section-news-general": "सामान्य",
-  "app-section-social": "सामाजिक",
-  "app-section-news-tech": "तंत्रज्ञान",
-  "app-section-society-jobs": "नोकऱ्या",
-  "app-section-location": "स्थान",
-  "app-section-location-geography": "भूगोल",
-  "app-section-location-demography": "लोकसंख्या",
-  "app-section-location-ecology": "पर्यावरणशास्त्र",
-  "app-section-location-travel": "प्रवास",
-  "app-section-location-weather": "हवामान",
-  "app-section-location-real-estate": "रिअल इस्टेट",
   "app-menu-actions": "क्रिया",
   "app-menu-background-audio": "ऑडिओ",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "फुलस्क्रीन टॉगल करा",
   "app-menu-bookmark-actions": "बुकमार्क-निवड क्रिया",
   "app-menu-bookmark-actions-reasoning": "तर्क",
-  "app-guide-bookmark-teach-topics": "मला शिकवा",
-  "app-guide-bookmark-quiz-topics": "मला प्रश्नोत्तर करा",
-  "app-guide-bookmark-related-topics": "संबंधित विषय",
-  "app-guide-bookmark-topic-differences": "फरक",
-  "app-guide-bookmark-commonalities": "समानता",
-  "app-guide-bookmark-similarities": "समानता",
-  "app-guide-bookmark-implications": "परिणाम",
-  "app-guide-bookmark-history": "इतिहास",
   "app-menu-import-as": "बुकमार्क आयात करा",
   "app-menu-export-as": "बुकमार्क निर्यात करा",
   "app-menu-bookmark-actions-media": "मीडिया",
+  "app-menu-upload-json": "अपलोड करा",
+  "app-menu-bookmark-current-view": "बुकमार्क वर्तमान दृश्य",
   "app-menu-visual-search": "व्हिज्युअल शोध",
   "app-menu-reading-assistance": "वाचन सहाय्य",
   "app-menu-bread": "शब्द-प्रारंभ ठळक",
   "app-menu-ai-tutor": "एआय ट्यूटर",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "बुकमार्क वर्तमान दृश्य",
+  "app-menu-datasources": "डेटास्रोत",
   "app-menu-clone-tab": "क्लोन टॅब",
   "app-menu-plant-identification": "वनस्पती ओळख",
   "app-menu-text-identification": "मजकूर ओळख",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "साइडबार टॉगल करा",
   "app-menu-add-bookmark": "बुकमार्क जोडा",
   "app-menu-note-1": "टीप 1: जेव्हा फोकस साइडबारवर किंवा विकिपीडिया लेख उपखंडावर असेल तेव्हाच उपलब्ध.",
+  "app-menu-features": "वैशिष्ट्ये",
+  "app-menu-persona": "व्यक्तिमत्व",
+  "app-menu-country-select": "देश",
+  "app-menu-interests": "स्वारस्ये",
+  "app-menu-nature-location-quiz": "निसर्ग स्थान क्विझ",
+  "app-menu-command-editor": "कमांड एडिटर",
+  "app-menu-presentation": "सादरीकरण",
+  "app-menu-editor": "संपादक",
+  "app-menu-run-code": "धावणे",
+  "app-menu-clear-editor": "स्पष्ट",
+  "app-menu-cover-topic": "कव्हर विषय",
+  "app-menu-news": "बातम्या",
+  "app-menu-culture": "संस्कृती",
+  "app-menu-nature": "निसर्ग",
+  "app-menu-license": "परवाना",
+  "app-menu-goto-next-topic": "पुढील विषयावर जा (साइडबार निकालांमध्ये)",
+  "app-menu-goto-previous-topic": "मागील विषयावर जा (साइडबार निकालांमध्ये)",
+  "app-menu-goto-next-pane": "पुढील उपखंडावर जा",
+  "app-menu-goto-previous-pane": "मागील उपखंडावर जा",
+  "app-menu-new-search": "नवीन शोध",
+  "app-menu-structured-search": "संरचित शोध",
+  "app-menu-geo-search": "भौगोलिक शोध",
+  "app-section-main": "मुख्य",
+  "app-section-info": "माहिती",
+  "app-section-library": "लायब्ररी",
+  "app-section-web": "वेब",
+  "app-section-news": "बातम्या",
+  "app-section-news-general": "सामान्य",
+  "app-section-social": "सामाजिक",
+  "app-section-news-tech": "तंत्रज्ञान",
+  "app-section-society-jobs": "नोकऱ्या",
+  "app-section-location": "स्थान",
+  "app-section-location-geography": "भूगोल",
+  "app-section-location-demography": "लोकसंख्या",
+  "app-section-location-ecology": "पर्यावरणशास्त्र",
+  "app-section-location-travel": "प्रवास",
+  "app-section-location-weather": "हवामान",
+  "app-section-location-real-estate": "रिअल इस्टेट",
   "app-section-business": "व्यवसाय",
   "app-section-government": "सरकार",
   "app-section-government-general": "सामान्य",
@@ -132,6 +132,7 @@
   "app-section-library-general": "सामान्य",
   "app-section-library-manuscripts": "हस्तलिखिते",
   "app-section-library-history": "इतिहास",
+  "app-section-library-philosophy": "तत्वज्ञान",
   "app-section-library-genealogy": "वंशावळी",
   "app-section-library-legal": "कायदेशीर",
   "app-section-library-products": "उत्पादने",
@@ -144,19 +145,31 @@
   "app-section-society": "समाज",
   "app-section-society-sports": "खेळ",
   "app-section-society-food": "अन्न",
-  "app-section-library-philosophy": "तत्वज्ञान",
   "app-section-library-religion": "धर्म",
   "app-section-library-poetry": "कविता",
   "app-section-library-identity": "ओळख",
   "app-section-society-events": "घटना",
-  "app-guide-welcome-text": "कॉन्झेप्ट हा एकविसाव्या शतकासाठी ज्ञानकोश तयार करण्याचा प्रयत्न आहे.  <br><br> तुमच्या शोधांचा आनंद घ्या! ",
   "app-section-society-shopping": "खरेदी",
-  "app-notification-too-few-compare-topics": "प्रथम बटण वापरून तुलना करण्यासाठी दोन किंवा अधिक विषय जोडा (विकिपीडिया-लेखाच्या शीर्षस्थानी आणि विषयाच्या मेटा-विभागात)",
-  "app-menu-goto-next-topic": "पुढील विषयावर जा (साइडबार निकालांमध्ये)",
-  "app-menu-goto-previous-topic": "मागील विषयावर जा (साइडबार निकालांमध्ये)",
-  "app-menu-goto-next-pane": "पुढील उपखंडावर जा",
-  "app-menu-goto-previous-pane": "मागील उपखंडावर जा",
-  "app-menu-new-search": "नवीन शोध",
+  "app-guide-bookmarks-selected": "निवडले",
+  "app-guide-bookmarks-deselect-all": "सर्व निवड रद्द करा",
+  "app-guide-bookmark-teach-topics": "मला शिकवा",
+  "app-guide-bookmark-quiz-topics": "मला प्रश्नोत्तर करा",
+  "app-guide-bookmark-related-topics": "संबंधित विषय",
+  "app-guide-bookmark-topic-differences": "फरक",
+  "app-guide-bookmark-commonalities": "समानता",
+  "app-guide-bookmark-similarities": "समानता",
+  "app-guide-bookmark-implications": "परिणाम",
+  "app-guide-bookmark-history": "इतिहास",
+  "app-guide-bookmark-gapminder-country-trend": "देशाचा कल",
+  "app-guide-see-more": "अजून पहा",
+  "app-guide-page": "पृष्ठ",
+  "app-guide-current-events": "सद्य घटना",
+  "app-guide-topic": "विषय",
+  "app-guide-artwork": "चित्रकला",
+  "app-guide-organism": "जीव",
+  "app-guide-music": "संगीत",
+  "app-guide-science": "विज्ञान",
+  "app-guide-welcome-text": "कॉन्झेप्ट हा एकविसाव्या शतकासाठी विश्वकोश तयार करण्याचा प्रयत्न आहे.  <br><br> तुमच्या शोधांचा आनंद घ्या! ",
   "app-guide-documentary": "माहितीपट",
   "app-guide-country": "देश",
   "app-guide-string-search": "स्ट्रिंग शोध",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "जीवाणू",
   "app-guide-virus": "विषाणू",
   "app-guide-featured-article": "वैशिष्ट्यीकृत लेख",
-  "app-menu-cover-topic": "कव्हर विषय",
-  "app-menu-news": "बातम्या",
-  "app-menu-culture": "संस्कृती",
-  "app-menu-nature": "निसर्ग",
-  "app-menu-license": "परवाना",
   "app-guide-help": "मदत",
   "app-guide-sea": "समुद्र",
   "app-guide-continent": "खंड",
@@ -192,7 +200,7 @@
   "app-guide-atom": "अणू",
   "app-guide-protist": "विरोधक",
   "app-guide-country-map": "देशाचा नकाशा",
-  "app-guide-capital": "कॅपिटल",
+  "app-guide-capital": "भांडवल",
   "app-guide-form-of-government": "शासनाचे स्वरूप.",
   "app-guide-religion": "धर्म",
   "app-guide-period": "कालावधी",
@@ -215,25 +223,20 @@
   "app-guide-dish": "ताटली",
   "app-guide-cell-type": "सेल प्रकार",
   "app-guide-archae": "आर्के",
-  "app-menu-persona": "व्यक्तिमत्व",
   "app-guide-featured-portal": "वैशिष्ट्यीकृत पोर्टल",
   "app-guide-musical-instrument": "साधन",
   "app-guide-technology": "तंत्रज्ञान",
   "app-guide-near-me": "माझ्या जवळ",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "वर्तमानपत्र",
+  "app-guide-radio-map": "रेडिओ नकाशा",
   "app-guide-news-radio": "रेडिओ",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "थेट टीव्ही",
   "app-guide-news-tv": "टीव्ही",
   "app-guide-news-economic-indicators": "आर्थिक निर्देशक",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "विकास ट्रेंड",
+  "app-guide-conflict-map": "संघर्ष नकाशा",
   "app-guide-ongoing-conflicts": "संघर्ष",
   "app-guide-radio": "रेडिओ",
-  "app-menu-country-select": "देश",
-  "app-menu-interests": "स्वारस्ये",
-  "app-menu-command-editor": "कमांड एडिटर",
-  "app-menu-presentation": "सादरीकरण",
-  "app-menu-editor": "संपादक",
-  "app-menu-run-code": "धावणे",
-  "app-menu-clear-editor": "स्पष्ट",
   "app-foo": "foo बार बाज"
 }
