--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -6,81 +6,43 @@
   "app-tab-settings-title": "instellingen",
   "app-tab-help-title": "hulp",
   "app-tab-audio-chat-title": "audiochat",
-  "app-search-placeholder": "zoeken",
-  "app-structured-search-title": "gestructureerd zoeken",
-  "app-title-occurence": "Voorkomen kaart",
+  "app-notification-too-few-compare-topics": "Voeg eerst twee of meer onderwerpen toe aan de vergelijking, met behulp van de knop (bevindt zich bovenaan het Wikipedia-artikel en in de meta-sectie van het onderwerp)",
+  "app-search-placeholder": "zoekopdracht",
+  "app-topics-found": "onderwerpen gevonden",
+  "app-title-occurence": "Voorval kaart",
   "app-title-super": "super",
   "app-title-sub": "sub",
-  "app-title-pages": "pagina's",
-  "app-title-citations": "citaten",
-  "app-guide-see-more": "bekijk meer",
-  "app-guide-page": "bladzijde",
-  "app-guide-current-events": "nieuws",
-  "app-guide-topic": "onderwerp",
-  "app-guide-artwork": "schilderen",
-  "app-guide-organism": "organisme",
-  "app-guide-music": "muziek",
-  "app-guide-science": "wetenschap",
-  "app-topics-found": "gevonden onderwerpen",
-  "app-section-main": "hoofd",
-  "app-section-info": "info",
-  "app-section-library": "bibliotheek",
-  "app-section-web": "web",
-  "app-section-news": "nieuws",
-  "app-section-news-general": "algemeen",
-  "app-section-social": "sociaal",
-  "app-section-news-tech": "technisch",
-  "app-section-society-jobs": "banen",
-  "app-section-location": "plaats",
-  "app-section-location-geography": "geografie",
-  "app-section-location-demography": "demografie",
-  "app-section-location-ecology": "ecologie",
-  "app-section-location-travel": "reis",
-  "app-section-location-weather": "weather",
-  "app-section-location-real-estate": "onroerend goed",
+  "app-title-pages": "Pagina's",
+  "app-title-citations": "Citaties",
   "app-menu-actions": "acties",
-  "app-menu-background-audio": "audio",
+  "app-menu-background-audio": "geluid",
   "app-menu-background-midi": "MIDI",
   "app-menu-topic-lists": "onderwerpenlijsten",
-  "app-menu-various-links": "verschillende links",
+  "app-menu-various-links": "diverse koppelingen",
   "app-menu-font": "lettertype",
   "app-menu-theme": "thema",
   "app-menu-interface-language": "interfacetaal",
   "app-menu-voice": "stem",
   "app-menu-user-manual": "handleiding",
-  "app-menu-keyboard-shortcuts": "sneltoetsen",
+  "app-menu-keyboard-shortcuts": "Toetsenbord sneltoetsen",
   "app-menu-credits": "tegoeden",
   "app-menu-about": "over",
   "app-menu-random-topic": "willekeurig onderwerp",
   "app-menu-random-topic-key": "willekeurig onderwerp",
-  "app-menu-compare-topics": "onderwerpen vergelijken",
+  "app-menu-compare-topics": "vergelijk onderwerpen",
   "app-menu-toggle-fullscreen": "volledig scherm activeren",
-  "app-menu-bookmark-actions": "bladwijzer-selectie acties",
-  "app-menu-bookmark-actions-reasoning": "redenatie",
-  "app-guide-bookmark-teach-topics": "educatie",
-  "app-guide-bookmark-quiz-topics": "quiz mij",
-  "app-guide-bookmark-related-topics": "gerelateerde onderwerpen",
-  "app-guide-bookmark-topic-differences": "differences",
-  "app-guide-bookmark-commonalities": "gemeenschappelijkheden",
-  "app-guide-bookmark-similarities": "overeenkomsten",
-  "app-guide-bookmark-implications": "implicaties",
-  "app-guide-bookmark-history": "geschiedenis",
-  "app-menu-import-as": "importeer bladwijzers",
-  "app-menu-export-as": "exporteer bladwijzers",
+  "app-menu-bookmark-actions": "bladwijzerselectieacties",
+  "app-menu-bookmark-actions-reasoning": "redenering",
+  "app-menu-import-as": "bladwijzers importeren",
+  "app-menu-export-as": "bladwijzers exporteren",
   "app-menu-bookmark-actions-media": "media",
+  "app-menu-upload-json": "uploaden",
+  "app-menu-bookmark-current-view": "bladwijzer voor de huidige weergave",
   "app-menu-visual-search": "visueel zoeken",
-  "app-menu-reading-assistance": "leeshulp",
-  "app-menu-bread": "begin-woord nadruk",
-  "app-menu-ai-tutor": "AI hulp",
+  "app-menu-reading-assistance": "hulp bij het lezen",
+  "app-menu-bread": "vetgedrukte woordbegin",
+  "app-menu-ai-tutor": "AI-docent",
   "app-menu-datasources": "data bronnen",
-  "app-guide-bookmarks-selected": "geselecteerd",
-  "app-guide-bookmarks-deselect-all": "deselecteer alles",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "land trend",
-  "app-menu-bookmark-current-view": "bladwijzer huidige URL",
   "app-menu-clone-tab": "tabblad kloon",
   "app-menu-plant-identification": "identificatie van planten",
   "app-menu-text-identification": "tekst identificatie",
@@ -94,33 +56,71 @@
   "app-menu-darkmode": "donkere modus",
   "app-menu-link-preview": "linkvoorbeeld",
   "app-menu-color-filter": "kleurenfilter",
-  "app-menu-locale": "locale",
+  "app-menu-locale": "plaats",
   "app-menu-style": "stijl",
   "app-menu-speed": "snelheid",
   "app-menu-pitch": "toonhoogte",
-  "app-menu-fullscreen-active-pane": "volledig scherm het actieve paneel",
-  "app-menu-toggle-sidebar": "schakel de zijbalk",
+  "app-menu-fullscreen-active-pane": "het actieve venster op volledig scherm weergeven",
+  "app-menu-toggle-sidebar": "schakel de zijbalk in",
   "app-menu-add-bookmark": "Voeg bladwijzer toe",
-  "app-menu-note-1": "opmerking 1: alleen beschikbaar wanneer de focus op de zijbalk of een Wikipedia-artikelvenster ligt.",
+  "app-menu-note-1": "opmerking 1: alleen beschikbaar als de focus op de zijbalk of een Wikipedia-artikelvenster ligt.",
+  "app-menu-features": "functies",
+  "app-menu-persona": "persona",
+  "app-menu-country-select": "land",
+  "app-menu-interests": "belangen",
+  "app-menu-nature-location-quiz": "quiz over natuurlocaties",
+  "app-menu-command-editor": "commando-editor",
+  "app-menu-presentation": "presentatie",
+  "app-menu-editor": "editor",
+  "app-menu-run-code": "loop",
+  "app-menu-clear-editor": "duidelijk",
+  "app-menu-cover-topic": "omslag onderwerp",
+  "app-menu-news": "nieuws",
+  "app-menu-culture": "cultuur",
+  "app-menu-nature": "natuur",
+  "app-menu-license": "licentie",
+  "app-menu-goto-next-topic": "ga naar het volgende onderwerp (in de zijbalkresultaten)",
+  "app-menu-goto-previous-topic": "ga naar het vorige onderwerp (in de zijbalkresultaten)",
+  "app-menu-goto-next-pane": "ga naar het volgende venster",
+  "app-menu-goto-previous-pane": "ga naar het vorige venster",
+  "app-menu-new-search": "nieuwe zoekopdracht",
+  "app-menu-structured-search": "gestructureerd zoeken",
+  "app-menu-geo-search": "geo zoeken",
+  "app-section-main": "voornaamst",
+  "app-section-info": "informatie",
+  "app-section-library": "bibliotheek",
+  "app-section-web": "web",
+  "app-section-news": "nieuws",
+  "app-section-news-general": "algemeen",
+  "app-section-social": "sociaal",
+  "app-section-news-tech": "technologie",
+  "app-section-society-jobs": "banen",
+  "app-section-location": "plaats",
+  "app-section-location-geography": "geografie",
+  "app-section-location-demography": "demografie",
+  "app-section-location-ecology": "ecologie",
+  "app-section-location-travel": "reis",
+  "app-section-location-weather": "weer",
+  "app-section-location-real-estate": "vastgoed",
   "app-section-business": "bedrijf",
   "app-section-government": "regering",
   "app-section-government-general": "algemeen",
   "app-section-government-legislature": "wetgevende macht",
   "app-section-government-executive": "leidinggevend",
   "app-section-government-judicial": "gerechtelijk",
-  "app-section-education": "educatie",
-  "app-section-education-assistance": "hulp",
+  "app-section-education": "onderwijs",
+  "app-section-education-assistance": "bijstand",
   "app-section-education-courses": "cursussen",
   "app-section-education-quizzes": "quizzen",
   "app-section-science": "wetenschap",
   "app-section-science-search-tools": "zoekhulpmiddelen",
-  "app-section-science-open-journals": "open tijdschriften",
+  "app-section-science-open-journals": "geopende tijdschriften",
   "app-section-science-closed-journals": "gesloten tijdschriften",
   "app-section-science-news": "nieuws",
   "app-section-science-language": "taal",
   "app-section-science-biology": "biologie",
   "app-section-science-medical": "medisch",
-  "app-section-science-chemistry": "chemie",
+  "app-section-science-chemistry": "scheikunde",
   "app-section-science-minerology": "mineralogie",
   "app-section-science-archeology": "archeologie",
   "app-section-science-mathematics": "wiskunde",
@@ -132,34 +132,47 @@
   "app-section-library-general": "algemeen",
   "app-section-library-manuscripts": "manuscripten",
   "app-section-library-history": "geschiedenis",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-philosophy": "filosofie",
+  "app-section-library-genealogy": "genealogie",
   "app-section-library-legal": "legaal",
   "app-section-library-products": "producten",
   "app-section-media": "media",
   "app-section-media-video": "video",
   "app-section-media-image": "afbeelding",
-  "app-section-media-audio": "audio",
+  "app-section-media-audio": "geluid",
   "app-section-media-software": "software",
   "app-section-meta": "meta",
-  "app-section-society": "samenleving",
+  "app-section-society": "maatschappij",
   "app-section-society-sports": "sport-",
   "app-section-society-food": "voedsel",
-  "app-section-library-philosophy": "philosophy",
-  "app-section-library-religion": "geloof",
+  "app-section-library-religion": "religie",
   "app-section-library-poetry": "poëzie",
   "app-section-library-identity": "identiteit",
   "app-section-society-events": "evenementen",
-  "app-guide-welcome-text": "Conzept is een poging om een ​​encyclopedie voor de 21e eeuw te creëren.  <br><br> Veel plezier met je verkenningen! ",
   "app-section-society-shopping": "winkelen",
-  "app-notification-too-few-compare-topics": "Voeg eerst twee of meer onderwerpen toe aan de vergelijking, met behulp van de knop (bovenaan het Wikipedia-artikel en in de meta-sectie van het onderwerp)",
-  "app-menu-goto-next-topic": "ga naar het volgende onderwerp (in de zijbalkresultaten)",
-  "app-menu-goto-previous-topic": "ga naar vorig onderwerp (in de zijbalk resultaten)",
-  "app-menu-goto-next-pane": "ga naar het volgende paneel",
-  "app-menu-goto-previous-pane": "ga naar het vorige paneel",
-  "app-menu-new-search": "nieuwe zoekopdracht",
+  "app-guide-bookmarks-selected": "geselecteerd",
+  "app-guide-bookmarks-deselect-all": "Deselecteer alles",
+  "app-guide-bookmark-teach-topics": "leer het me",
+  "app-guide-bookmark-quiz-topics": "ondervraag mij",
+  "app-guide-bookmark-related-topics": "gerelateerde onderwerpen",
+  "app-guide-bookmark-topic-differences": "verschillen",
+  "app-guide-bookmark-commonalities": "gemeenschappelijkheden",
+  "app-guide-bookmark-similarities": "overeenkomsten",
+  "app-guide-bookmark-implications": "implicaties",
+  "app-guide-bookmark-history": "geschiedenis",
+  "app-guide-bookmark-gapminder-country-trend": "landentrend",
+  "app-guide-see-more": "Bekijk meer",
+  "app-guide-page": "bladzijde",
+  "app-guide-current-events": "huidige gebeurtenissen",
+  "app-guide-topic": "onderwerp",
+  "app-guide-artwork": "schilderen",
+  "app-guide-organism": "organisme",
+  "app-guide-music": "muziek",
+  "app-guide-science": "wetenschap",
+  "app-guide-welcome-text": "Conzept is een poging om een ​​encyclopedie voor de 21e eeuw te creëren.  <br><br> Geniet van je verkenningen! ",
   "app-guide-documentary": "documentaire",
   "app-guide-country": "land",
-  "app-guide-string-search": "string zoeken",
+  "app-guide-string-search": "tekenreeks zoeken",
   "app-guide-historical-country": "historisch land",
   "app-guide-ethnic-group": "etnische groep",
   "app-guide-language": "taal",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bacterie",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "aanbevolen artikel",
-  "app-menu-cover-topic": "omslagonderwerp",
-  "app-menu-news": "nieuws",
-  "app-menu-culture": "cultuur",
-  "app-menu-nature": "natuur",
-  "app-menu-license": "licentie",
   "app-guide-help": "hulp",
   "app-guide-sea": "zee",
   "app-guide-continent": "continent",
@@ -191,12 +199,12 @@
   "app-guide-protein": "eiwit",
   "app-guide-atom": "atoom",
   "app-guide-protist": "protist",
-  "app-guide-country-map": "landkaart",
+  "app-guide-country-map": "land kaart",
   "app-guide-capital": "hoofdstad",
-  "app-guide-form-of-government": "vorm van regering",
-  "app-guide-religion": "geloof",
+  "app-guide-form-of-government": "vorm van overheid",
+  "app-guide-religion": "religie",
   "app-guide-period": "periode",
-  "app-guide-history-aspect": "geschiedenis aspect",
+  "app-guide-history-aspect": "historisch aspect",
   "app-guide-revolution": "revolutie",
   "app-guide-war": "oorlog",
   "app-guide-battle": "strijd",
@@ -215,25 +223,20 @@
   "app-guide-dish": "gerecht",
   "app-guide-cell-type": "celtype",
   "app-guide-archae": "archae",
-  "app-menu-persona": "persona",
   "app-guide-featured-portal": "aanbevolen portaal",
   "app-guide-musical-instrument": "instrument",
   "app-guide-technology": "technologie",
-  "app-guide-near-me": "nabij",
+  "app-guide-near-me": "dicht bij mij",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "kranten",
+  "app-guide-radio-map": "radiokaart",
   "app-guide-news-radio": "radio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "live tv",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "economische indicatoren",
-  "app-guide-conflict-map": "conflict kaart",
+  "app-guide-world-statistics": "ontwikkelingstrends",
+  "app-guide-conflict-map": "conflictkaart",
   "app-guide-ongoing-conflicts": "conflicten",
   "app-guide-radio": "radio",
-  "app-menu-country-select": "land",
-  "app-menu-interests": "interesses",
-  "app-menu-command-editor": "commando-editor",
-  "app-menu-presentation": "presentatie",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "uitvoeren",
-  "app-menu-clear-editor": "wissen",
   "app-foo": "foo bar baz"
 }
