--- a/app/explore2/assets/i18n/ui/conzept-sv.json
+++ b/app/explore2/assets/i18n/ui/conzept-sv.json
@@ -6,39 +6,15 @@
   "app-tab-settings-title": "inställningar",
   "app-tab-help-title": "hjälp",
   "app-tab-audio-chat-title": "ljudchatt",
+  "app-notification-too-few-compare-topics": "Lägg först till två eller flera ämnen till jämförelsen med knappen (högst upp i Wikipedia-artikeln och i ämnets metasektion)",
   "app-search-placeholder": "Sök",
-  "app-structured-search-title": "strukturerad sökning",
+  "app-topics-found": "ämnen hittade",
   "app-title-occurence": "Förekomstkarta",
   "app-title-super": "super",
   "app-title-sub": "sub",
   "app-title-pages": "sidor",
   "app-title-citations": "Citat",
-  "app-guide-see-more": "se mer",
-  "app-guide-page": "sida",
-  "app-guide-current-events": "Nyheter",
-  "app-guide-topic": "ämne",
-  "app-guide-artwork": "målning",
-  "app-guide-organism": "organism",
-  "app-guide-music": "musik",
-  "app-guide-science": "vetenskap",
-  "app-topics-found": "ämnen hittade",
-  "app-section-main": "huvud",
-  "app-section-info": "info",
-  "app-section-library": "bibliotek",
-  "app-section-web": "webb",
-  "app-section-news": "Nyheter",
-  "app-section-news-general": "allmän",
-  "app-section-social": "social",
-  "app-section-news-tech": "tech",
-  "app-section-society-jobs": "jobb",
-  "app-section-location": "plats",
-  "app-section-location-geography": "geografi",
-  "app-section-location-demography": "demografi",
-  "app-section-location-ecology": "ekologi",
-  "app-section-location-travel": "resa",
-  "app-section-location-weather": "weather",
-  "app-section-location-real-estate": "fastighet",
-  "app-menu-actions": "åtgärder",
+  "app-menu-actions": "handlingar",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
   "app-menu-topic-lists": "ämneslistor",
@@ -55,32 +31,18 @@
   "app-menu-random-topic-key": "slumpmässigt ämne",
   "app-menu-compare-topics": "jämföra ämnen",
   "app-menu-toggle-fullscreen": "växla helskärm",
-  "app-menu-bookmark-actions": "bookmark-selection actions",
-  "app-menu-bookmark-actions-reasoning": "reasoning",
-  "app-guide-bookmark-teach-topics": "teach me",
-  "app-guide-bookmark-quiz-topics": "quiz me",
-  "app-guide-bookmark-related-topics": "related topics",
-  "app-guide-bookmark-topic-differences": "differences",
-  "app-guide-bookmark-commonalities": "commonalities",
-  "app-guide-bookmark-similarities": "similarities",
-  "app-guide-bookmark-implications": "implications",
-  "app-guide-bookmark-history": "history",
-  "app-menu-import-as": "import bookmarks",
-  "app-menu-export-as": "export bookmarks",
+  "app-menu-bookmark-actions": "bokmärkesvalsåtgärder",
+  "app-menu-bookmark-actions-reasoning": "resonemang",
+  "app-menu-import-as": "importera bokmärken",
+  "app-menu-export-as": "exportera bokmärken",
   "app-menu-bookmark-actions-media": "media",
-  "app-menu-visual-search": "visual search",
-  "app-menu-reading-assistance": "reading assistance",
-  "app-menu-bread": "word-start bolding",
-  "app-menu-ai-tutor": "AI tutor",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "bokmärke aktuell URL",
+  "app-menu-upload-json": "ladda upp",
+  "app-menu-bookmark-current-view": "bokmärk aktuell vy",
+  "app-menu-visual-search": "visuell sökning",
+  "app-menu-reading-assistance": "läshjälp",
+  "app-menu-bread": "ord-börja fetstil",
+  "app-menu-ai-tutor": "AI-lärare",
+  "app-menu-datasources": "datakällor",
   "app-menu-clone-tab": "klonfliken",
   "app-menu-plant-identification": "anläggningsidentifiering",
   "app-menu-text-identification": "textidentifiering",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "växla sidofältet",
   "app-menu-add-bookmark": "Lägg till bokmärke",
   "app-menu-note-1": "not 1: endast tillgänglig när fokus är på sidofältet eller en Wikipedia-artikelruta.",
+  "app-menu-features": "Funktioner",
+  "app-menu-persona": "persona",
+  "app-menu-country-select": "Land",
+  "app-menu-interests": "intressen",
+  "app-menu-nature-location-quiz": "naturplats frågesport",
+  "app-menu-command-editor": "kommandoredigerare",
+  "app-menu-presentation": "presentation",
+  "app-menu-editor": "redaktör",
+  "app-menu-run-code": "springa",
+  "app-menu-clear-editor": "klar",
+  "app-menu-cover-topic": "omslagsämne",
+  "app-menu-news": "Nyheter",
+  "app-menu-culture": "kultur",
+  "app-menu-nature": "natur",
+  "app-menu-license": "licens",
+  "app-menu-goto-next-topic": "gå till nästa ämne (i sidofältets resultat)",
+  "app-menu-goto-previous-topic": "gå till föregående ämne (i sidofältets resultat)",
+  "app-menu-goto-next-pane": "gå till nästa ruta",
+  "app-menu-goto-previous-pane": "gå till föregående ruta",
+  "app-menu-new-search": "ny sökning",
+  "app-menu-structured-search": "strukturerad sökning",
+  "app-menu-geo-search": "geo sökning",
+  "app-section-main": "huvud",
+  "app-section-info": "info",
+  "app-section-library": "bibliotek",
+  "app-section-web": "webb",
+  "app-section-news": "Nyheter",
+  "app-section-news-general": "allmän",
+  "app-section-social": "social",
+  "app-section-news-tech": "tech",
+  "app-section-society-jobs": "jobb",
+  "app-section-location": "plats",
+  "app-section-location-geography": "geografi",
+  "app-section-location-demography": "demografi",
+  "app-section-location-ecology": "ekologi",
+  "app-section-location-travel": "resa",
+  "app-section-location-weather": "väder",
+  "app-section-location-real-estate": "fastighet",
   "app-section-business": "företag",
   "app-section-government": "regering",
   "app-section-government-general": "allmän",
@@ -132,7 +132,8 @@
   "app-section-library-general": "allmän",
   "app-section-library-manuscripts": "manuskript",
   "app-section-library-history": "historia",
-  "app-section-library-genealogy": "genealogy",
+  "app-section-library-philosophy": "filosofi",
+  "app-section-library-genealogy": "genealogi",
   "app-section-library-legal": "Rättslig",
   "app-section-library-products": "Produkter",
   "app-section-media": "media",
@@ -144,19 +145,31 @@
   "app-section-society": "samhälle",
   "app-section-society-sports": "sporter",
   "app-section-society-food": "mat",
-  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poesi",
   "app-section-library-identity": "identitet",
   "app-section-society-events": "evenemang",
-  "app-guide-welcome-text": "Conzept är ett försök att skapa ett uppslagsverk för 2000-talet.  <br><br> Njut av dina utforskningar! ",
   "app-section-society-shopping": "handla",
-  "app-notification-too-few-compare-topics": "Lägg först till två eller flera ämnen till jämförelsen med knappen (högst upp i Wikipedia-artikeln och i ämnets metasektion)",
-  "app-menu-goto-next-topic": "gå till nästa ämne (i sidofältets resultat)",
-  "app-menu-goto-previous-topic": "gå till föregående ämne (i sidofältets resultat)",
-  "app-menu-goto-next-pane": "gå till nästa ruta",
-  "app-menu-goto-previous-pane": "gå till föregående ruta",
-  "app-menu-new-search": "ny sökning",
+  "app-guide-bookmarks-selected": "vald",
+  "app-guide-bookmarks-deselect-all": "avmarkera alla",
+  "app-guide-bookmark-teach-topics": "lär mig",
+  "app-guide-bookmark-quiz-topics": "fråga mig",
+  "app-guide-bookmark-related-topics": "Relaterade ämnen",
+  "app-guide-bookmark-topic-differences": "skillnader",
+  "app-guide-bookmark-commonalities": "gemensamma drag",
+  "app-guide-bookmark-similarities": "likheter",
+  "app-guide-bookmark-implications": "implikationer",
+  "app-guide-bookmark-history": "historia",
+  "app-guide-bookmark-gapminder-country-trend": "landstrend",
+  "app-guide-see-more": "se mer",
+  "app-guide-page": "sida",
+  "app-guide-current-events": "Aktuella händelser",
+  "app-guide-topic": "ämne",
+  "app-guide-artwork": "målning",
+  "app-guide-organism": "organism",
+  "app-guide-music": "musik",
+  "app-guide-science": "vetenskap",
+  "app-guide-welcome-text": "Conzept är ett försök att skapa ett uppslagsverk för 2000-talet.  <br><br> Njut av dina utforskningar! ",
   "app-guide-documentary": "dokumentär",
   "app-guide-country": "Land",
   "app-guide-string-search": "strängsökning",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bakterie",
   "app-guide-virus": "virus",
   "app-guide-featured-article": "utvald artikel",
-  "app-menu-cover-topic": "omslagsämne",
-  "app-menu-news": "news",
-  "app-menu-culture": "kultur",
-  "app-menu-nature": "natur",
-  "app-menu-license": "licens",
   "app-guide-help": "hjälp",
   "app-guide-sea": "hav",
   "app-guide-continent": "kontinent",
@@ -215,25 +223,20 @@
   "app-guide-dish": "maträtt",
   "app-guide-cell-type": "celltyp",
   "app-guide-archae": "arkae",
-  "app-menu-persona": "persona",
   "app-guide-featured-portal": "utvald portal",
   "app-guide-musical-instrument": "instrument",
-  "app-guide-technology": "technology",
-  "app-guide-near-me": "near me",
-  "app-guide-newspapers": "newspapers",
+  "app-guide-technology": "teknologi",
+  "app-guide-near-me": "nära mig",
+  "app-guide-news-gdelt": "GDELT",
+  "app-guide-newspapers": "tidningar",
+  "app-guide-radio-map": "radiokarta",
   "app-guide-news-radio": "radio",
   "app-guide-live-tv": "live TV",
   "app-guide-news-tv": "TV",
-  "app-guide-news-economic-indicators": "economic indicators",
-  "app-guide-conflict-map": "conflict map",
-  "app-guide-ongoing-conflicts": "conflicts",
+  "app-guide-news-economic-indicators": "ekonomiska indikationer",
+  "app-guide-world-statistics": "utvecklingstrender",
+  "app-guide-conflict-map": "konfliktkarta",
+  "app-guide-ongoing-conflicts": "konflikter",
   "app-guide-radio": "radio",
-  "app-menu-country-select": "Land",
-  "app-menu-interests": "intressen",
-  "app-menu-command-editor": "kommandoredigerare",
-  "app-menu-presentation": "presentation",
-  "app-menu-editor": "editor",
-  "app-menu-run-code": "kör kod",
-  "app-menu-clear-editor": "klar",
   "app-foo": "foo bar baz"
 }
