--- a/app/explore2/assets/i18n/ui/conzept-sw.json
+++ b/app/explore2/assets/i18n/ui/conzept-sw.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "mipangilio",
   "app-tab-help-title": "msaada",
   "app-tab-audio-chat-title": "gumzo la sauti",
+  "app-notification-too-few-compare-topics": "Kwanza ongeza mada mbili au zaidi kwenye ulinganisho, kwa kutumia kitufe (kilichopo juu ya kifungu cha Wikipedia na katika sehemu ya meta ya mada)",
   "app-search-placeholder": "tafuta",
-  "app-structured-search-title": "utafutaji wa muundo",
+  "app-topics-found": "mada zilizopatikana",
   "app-title-occurence": "Ramani ya matukio",
   "app-title-super": "mkuu",
   "app-title-sub": "ndogo",
   "app-title-pages": "kurasa",
   "app-title-citations": "Manukuu",
-  "app-guide-see-more": "ona zaidi",
-  "app-guide-page": "ukurasa",
-  "app-guide-current-events": "matukio ya sasa",
-  "app-guide-topic": "mada",
-  "app-guide-artwork": "uchoraji",
-  "app-guide-organism": "viumbe",
-  "app-guide-music": "muziki",
-  "app-guide-science": "sayansi",
-  "app-topics-found": "mada zilizopatikana",
-  "app-section-main": "kuu",
-  "app-section-info": "habari",
-  "app-section-library": "maktaba",
-  "app-section-web": "mtandao",
-  "app-section-news": "habari",
-  "app-section-news-general": "jumla",
-  "app-section-social": "kijamii",
-  "app-section-news-tech": "teknolojia",
-  "app-section-society-jobs": "kazi",
-  "app-section-location": "eneo",
-  "app-section-location-geography": "jiografia",
-  "app-section-location-demography": "demografia",
-  "app-section-location-ecology": "ikolojia",
-  "app-section-location-travel": "kusafiri",
-  "app-section-location-weather": "hali ya hewa",
-  "app-section-location-real-estate": "mali isiyohamishika",
   "app-menu-actions": "Vitendo",
   "app-menu-background-audio": "sauti",
   "app-menu-background-midi": "MIDI",
@@ -45,7 +21,7 @@
   "app-menu-various-links": "viungo mbalimbali",
   "app-menu-font": "fonti",
   "app-menu-theme": "mandhari",
-  "app-menu-interface-language": "lugha ya kiolesura",
+  "app-menu-interface-language": "lugha ya interface",
   "app-menu-voice": "sauti",
   "app-menu-user-manual": "mwongozo wa mtumiaji",
   "app-menu-keyboard-shortcuts": "njia za mkato za kibodi",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "geuza skrini nzima",
   "app-menu-bookmark-actions": "vitendo vya uteuzi wa alamisho",
   "app-menu-bookmark-actions-reasoning": "hoja",
-  "app-guide-bookmark-teach-topics": "Nifunze",
-  "app-guide-bookmark-quiz-topics": "niulize maswali",
-  "app-guide-bookmark-related-topics": "mada zinazohusiana",
-  "app-guide-bookmark-topic-differences": "tofauti",
-  "app-guide-bookmark-commonalities": "mambo ya kawaida",
-  "app-guide-bookmark-similarities": "kufanana",
-  "app-guide-bookmark-implications": "athari",
-  "app-guide-bookmark-history": "historia",
   "app-menu-import-as": "ingiza alamisho",
   "app-menu-export-as": "safirisha alamisho",
   "app-menu-bookmark-actions-media": "vyombo vya habari",
+  "app-menu-upload-json": "pakia",
+  "app-menu-bookmark-current-view": "alamisho mwonekano wa sasa",
   "app-menu-visual-search": "utafutaji wa kuona",
   "app-menu-reading-assistance": "msaada wa kusoma",
   "app-menu-bread": "neno-anza kwa ujasiri",
   "app-menu-ai-tutor": "Mkufunzi wa AI",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "alamisho mwonekano wa sasa",
+  "app-menu-datasources": "vyanzo vya data",
   "app-menu-clone-tab": "kichupo cha clone",
   "app-menu-plant-identification": "kitambulisho cha mimea",
   "app-menu-text-identification": "kitambulisho cha maandishi",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "geuza utepe",
   "app-menu-add-bookmark": "ongeza alamisho",
   "app-menu-note-1": "kumbuka 1: inapatikana tu wakati lengo liko kwenye utepe au kidirisha cha makala cha Wikipedia.",
+  "app-menu-features": "vipengele",
+  "app-menu-persona": "mtu",
+  "app-menu-country-select": "nchi",
+  "app-menu-interests": "maslahi",
+  "app-menu-nature-location-quiz": "swali la eneo la asili",
+  "app-menu-command-editor": "mhariri wa amri",
+  "app-menu-presentation": "uwasilishaji",
+  "app-menu-editor": "mhariri",
+  "app-menu-run-code": "kukimbia",
+  "app-menu-clear-editor": "wazi",
+  "app-menu-cover-topic": "mada ya kufunika",
+  "app-menu-news": "habari",
+  "app-menu-culture": "utamaduni",
+  "app-menu-nature": "asili",
+  "app-menu-license": "leseni",
+  "app-menu-goto-next-topic": "nenda kwa mada inayofuata (kwenye matokeo ya upau wa kando)",
+  "app-menu-goto-previous-topic": "nenda kwa mada iliyotangulia (kwenye matokeo ya upau wa kando)",
+  "app-menu-goto-next-pane": "nenda kwenye kidirisha kinachofuata",
+  "app-menu-goto-previous-pane": "nenda kwenye kidirisha kilichopita",
+  "app-menu-new-search": "utafutaji mpya",
+  "app-menu-structured-search": "utafutaji wa muundo",
+  "app-menu-geo-search": "utafutaji wa kijiografia",
+  "app-section-main": "kuu",
+  "app-section-info": "habari",
+  "app-section-library": "maktaba",
+  "app-section-web": "mtandao",
+  "app-section-news": "habari",
+  "app-section-news-general": "jumla",
+  "app-section-social": "kijamii",
+  "app-section-news-tech": "teknolojia",
+  "app-section-society-jobs": "kazi",
+  "app-section-location": "eneo",
+  "app-section-location-geography": "jiografia",
+  "app-section-location-demography": "demografia",
+  "app-section-location-ecology": "ikolojia",
+  "app-section-location-travel": "kusafiri",
+  "app-section-location-weather": "hali ya hewa",
+  "app-section-location-real-estate": "mali isiyohamishika",
   "app-section-business": "biashara",
   "app-section-government": "serikali",
   "app-section-government-general": "jumla",
@@ -132,6 +132,7 @@
   "app-section-library-general": "jumla",
   "app-section-library-manuscripts": "maandishi",
   "app-section-library-history": "historia",
+  "app-section-library-philosophy": "falsafa",
   "app-section-library-genealogy": "nasaba",
   "app-section-library-legal": "kisheria",
   "app-section-library-products": "bidhaa",
@@ -144,19 +145,31 @@
   "app-section-society": "jamii",
   "app-section-society-sports": "michezo",
   "app-section-society-food": "chakula",
-  "app-section-library-philosophy": "falsafa",
   "app-section-library-religion": "dini",
   "app-section-library-poetry": "ushairi",
   "app-section-library-identity": "utambulisho",
   "app-section-society-events": "matukio",
-  "app-guide-welcome-text": "Conzept ni jaribio la kuunda ensaiklopidia ya karne ya 21.  <br><br> Furahia uvumbuzi wako! ",
   "app-section-society-shopping": "ununuzi",
-  "app-notification-too-few-compare-topics": "Kwanza ongeza mada mbili au zaidi kwenye ulinganisho, ukitumia kitufe (kilichopo juu ya kifungu cha Wikipedia na katika sehemu ya meta ya mada)",
-  "app-menu-goto-next-topic": "nenda kwa mada inayofuata (kwenye matokeo ya upau wa kando)",
-  "app-menu-goto-previous-topic": "nenda kwa mada iliyotangulia (kwenye matokeo ya upau wa kando)",
-  "app-menu-goto-next-pane": "nenda kwenye kidirisha kinachofuata",
-  "app-menu-goto-previous-pane": "nenda kwenye kidirisha kilichopita",
-  "app-menu-new-search": "utafutaji mpya",
+  "app-guide-bookmarks-selected": "iliyochaguliwa",
+  "app-guide-bookmarks-deselect-all": "usichague zote",
+  "app-guide-bookmark-teach-topics": "Nifunze",
+  "app-guide-bookmark-quiz-topics": "niulize maswali",
+  "app-guide-bookmark-related-topics": "mada zinazohusiana",
+  "app-guide-bookmark-topic-differences": "tofauti",
+  "app-guide-bookmark-commonalities": "mambo ya kawaida",
+  "app-guide-bookmark-similarities": "kufanana",
+  "app-guide-bookmark-implications": "athari",
+  "app-guide-bookmark-history": "historia",
+  "app-guide-bookmark-gapminder-country-trend": "mwenendo wa nchi",
+  "app-guide-see-more": "ona zaidi",
+  "app-guide-page": "ukurasa",
+  "app-guide-current-events": "matukio ya sasa",
+  "app-guide-topic": "mada",
+  "app-guide-artwork": "uchoraji",
+  "app-guide-organism": "viumbe",
+  "app-guide-music": "muziki",
+  "app-guide-science": "sayansi",
+  "app-guide-welcome-text": "Conzept ni jaribio la kuunda ensaiklopidia ya karne ya 21.  <br><br> Furahia uvumbuzi wako! ",
   "app-guide-documentary": "maandishi",
   "app-guide-country": "nchi",
   "app-guide-string-search": "utafutaji wa kamba",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "bakteria",
   "app-guide-virus": "virusi",
   "app-guide-featured-article": "makala iliyoangaziwa",
-  "app-menu-cover-topic": "mada ya kufunika",
-  "app-menu-news": "habari",
-  "app-menu-culture": "utamaduni",
-  "app-menu-nature": "asili",
-  "app-menu-license": "leseni",
   "app-guide-help": "msaada",
   "app-guide-sea": "baharini",
   "app-guide-continent": "bara",
@@ -192,7 +200,7 @@
   "app-guide-atom": "chembe",
   "app-guide-protist": "mpiga picha",
   "app-guide-country-map": "ramani ya nchi",
-  "app-guide-capital": "mji mkuu",
+  "app-guide-capital": "mtaji",
   "app-guide-form-of-government": "fomu ya gov.",
   "app-guide-religion": "dini",
   "app-guide-period": "kipindi",
@@ -215,25 +223,20 @@
   "app-guide-dish": "sahani",
   "app-guide-cell-type": "aina ya seli",
   "app-guide-archae": "Archae",
-  "app-menu-persona": "mtu",
   "app-guide-featured-portal": "lango lililoangaziwa",
   "app-guide-musical-instrument": "chombo",
   "app-guide-technology": "teknolojia",
   "app-guide-near-me": "karibu yangu",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "magazeti",
+  "app-guide-radio-map": "ramani ya redio",
   "app-guide-news-radio": "redio",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "TV ya moja kwa moja",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "viashiria vya kiuchumi",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "mwenendo wa maendeleo",
+  "app-guide-conflict-map": "ramani ya migogoro",
   "app-guide-ongoing-conflicts": "migogoro",
   "app-guide-radio": "redio",
-  "app-menu-country-select": "nchi",
-  "app-menu-interests": "maslahi",
-  "app-menu-command-editor": "mhariri wa amri",
-  "app-menu-presentation": "uwasilishaji",
-  "app-menu-editor": "mhariri",
-  "app-menu-run-code": "kukimbia",
-  "app-menu-clear-editor": "wazi",
   "app-foo": "foo bar baz"
 }
