--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "налаштування",
   "app-tab-help-title": "допомогти",
   "app-tab-audio-chat-title": "аудіо чат",
+  "app-notification-too-few-compare-topics": "Спочатку додайте дві або більше тем до порівняння за допомогою кнопки (розташованої у верхній частині статті Вікіпедії та в мета-розділі теми)",
   "app-search-placeholder": "пошук",
-  "app-structured-search-title": "структурований пошук",
+  "app-topics-found": "знайдено тем",
   "app-title-occurence": "Карта залягання",
   "app-title-super": "супер",
   "app-title-sub": "суб",
   "app-title-pages": "сторінки",
   "app-title-citations": "Цитування",
-  "app-guide-see-more": "побачити більше",
-  "app-guide-page": "сторінки",
-  "app-guide-current-events": "поточні події",
-  "app-guide-topic": "тема",
-  "app-guide-artwork": "живопис",
-  "app-guide-organism": "організм",
-  "app-guide-music": "музика",
-  "app-guide-science": "наука",
-  "app-topics-found": "знайдено тем",
-  "app-section-main": "основний",
-  "app-section-info": "інформація",
-  "app-section-library": "бібліотека",
-  "app-section-web": "Інтернет",
-  "app-section-news": "новини",
-  "app-section-news-general": "загальний",
-  "app-section-social": "соціальні",
-  "app-section-news-tech": "техн",
-  "app-section-society-jobs": "робочих місць",
-  "app-section-location": "Місцезнаходження",
-  "app-section-location-geography": "географія",
-  "app-section-location-demography": "демографія",
-  "app-section-location-ecology": "екологія",
-  "app-section-location-travel": "подорожі",
-  "app-section-location-weather": "погода",
-  "app-section-location-real-estate": "нерухомість",
   "app-menu-actions": "дії",
   "app-menu-background-audio": "аудіо",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "перемкнути повноекранний режим",
   "app-menu-bookmark-actions": "дії закладки-вибору",
   "app-menu-bookmark-actions-reasoning": "міркування",
-  "app-guide-bookmark-teach-topics": "навчи мене",
-  "app-guide-bookmark-quiz-topics": "опитуй мене",
-  "app-guide-bookmark-related-topics": "суміжні теми",
-  "app-guide-bookmark-topic-differences": "відмінності",
-  "app-guide-bookmark-commonalities": "спільні риси",
-  "app-guide-bookmark-similarities": "подібності",
-  "app-guide-bookmark-implications": "наслідки",
-  "app-guide-bookmark-history": "історії",
   "app-menu-import-as": "імпортувати закладки",
   "app-menu-export-as": "експортувати закладки",
   "app-menu-bookmark-actions-media": "ЗМІ",
+  "app-menu-upload-json": "завантажити",
+  "app-menu-bookmark-current-view": "додати закладку для поточного перегляду",
   "app-menu-visual-search": "візуальний пошук",
   "app-menu-reading-assistance": "допомога в читанні",
   "app-menu-bread": "початок слова жирним шрифтом",
   "app-menu-ai-tutor": "ШІ репетитор",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "додати закладку для поточного перегляду",
+  "app-menu-datasources": "джерела даних",
   "app-menu-clone-tab": "клонувати вкладку",
   "app-menu-plant-identification": "ідентифікація рослин",
   "app-menu-text-identification": "ідентифікація тексту",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "перемкнути бічну панель",
   "app-menu-add-bookmark": "Додати закладку",
   "app-menu-note-1": "примітка 1: доступно лише тоді, коли фокус знаходиться на бічній панелі або на панелі статей у Вікіпедії.",
+  "app-menu-features": "особливості",
+  "app-menu-persona": "персона",
+  "app-menu-country-select": "країна",
+  "app-menu-interests": "інтереси",
+  "app-menu-nature-location-quiz": "вікторина про розташування природи",
+  "app-menu-command-editor": "редактор команд",
+  "app-menu-presentation": "презентація",
+  "app-menu-editor": "редактор",
+  "app-menu-run-code": "бігати",
+  "app-menu-clear-editor": "ясно",
+  "app-menu-cover-topic": "тема покриття",
+  "app-menu-news": "новини",
+  "app-menu-culture": "культури",
+  "app-menu-nature": "природи",
+  "app-menu-license": "ліцензія",
+  "app-menu-goto-next-topic": "перейти до наступної теми (на бічній панелі результатів)",
+  "app-menu-goto-previous-topic": "перейти до попередньої теми (на бічній панелі результатів)",
+  "app-menu-goto-next-pane": "перейти до наступної панелі",
+  "app-menu-goto-previous-pane": "перейти до попередньої панелі",
+  "app-menu-new-search": "новий пошук",
+  "app-menu-structured-search": "структурований пошук",
+  "app-menu-geo-search": "гео пошук",
+  "app-section-main": "основний",
+  "app-section-info": "інформація",
+  "app-section-library": "бібліотека",
+  "app-section-web": "Інтернет",
+  "app-section-news": "новини",
+  "app-section-news-general": "загальний",
+  "app-section-social": "соціальні",
+  "app-section-news-tech": "техн",
+  "app-section-society-jobs": "робочих місць",
+  "app-section-location": "Місцезнаходження",
+  "app-section-location-geography": "географія",
+  "app-section-location-demography": "демографія",
+  "app-section-location-ecology": "екологія",
+  "app-section-location-travel": "подорожі",
+  "app-section-location-weather": "погода",
+  "app-section-location-real-estate": "нерухомість",
   "app-section-business": "бізнес",
   "app-section-government": "уряд",
   "app-section-government-general": "загальний",
@@ -132,6 +132,7 @@
   "app-section-library-general": "загальний",
   "app-section-library-manuscripts": "рукописи",
   "app-section-library-history": "історії",
+  "app-section-library-philosophy": "філософія",
   "app-section-library-genealogy": "генеалогія",
   "app-section-library-legal": "правовий",
   "app-section-library-products": "продуктів",
@@ -144,19 +145,31 @@
   "app-section-society": "суспільства",
   "app-section-society-sports": "спорт",
   "app-section-society-food": "харчування",
-  "app-section-library-philosophy": "філософія",
   "app-section-library-religion": "релігія",
   "app-section-library-poetry": "поезії",
   "app-section-library-identity": "ідентичність",
   "app-section-society-events": "події",
-  "app-guide-welcome-text": "Conzept – це спроба створити енциклопедію 21 століття.  <br><br> Приємних вам досліджень! ",
   "app-section-society-shopping": "покупки",
-  "app-notification-too-few-compare-topics": "Спочатку додайте дві або більше тем до порівняння за допомогою кнопки (розташованої у верхній частині статті Вікіпедії та в мета-розділі теми)",
-  "app-menu-goto-next-topic": "перейти до наступної теми (на бічній панелі результатів)",
-  "app-menu-goto-previous-topic": "перейти до попередньої теми (на бічній панелі результатів)",
-  "app-menu-goto-next-pane": "перейти до наступної панелі",
-  "app-menu-goto-previous-pane": "перейти до попередньої панелі",
-  "app-menu-new-search": "новий пошук",
+  "app-guide-bookmarks-selected": "вибрано",
+  "app-guide-bookmarks-deselect-all": "скасувати вибір усіх",
+  "app-guide-bookmark-teach-topics": "навчи мене",
+  "app-guide-bookmark-quiz-topics": "опитуй мене",
+  "app-guide-bookmark-related-topics": "суміжні теми",
+  "app-guide-bookmark-topic-differences": "відмінності",
+  "app-guide-bookmark-commonalities": "спільні риси",
+  "app-guide-bookmark-similarities": "подібності",
+  "app-guide-bookmark-implications": "наслідки",
+  "app-guide-bookmark-history": "історії",
+  "app-guide-bookmark-gapminder-country-trend": "тенденція країни",
+  "app-guide-see-more": "побачити більше",
+  "app-guide-page": "сторінки",
+  "app-guide-current-events": "поточні події",
+  "app-guide-topic": "тема",
+  "app-guide-artwork": "живопис",
+  "app-guide-organism": "організм",
+  "app-guide-music": "музика",
+  "app-guide-science": "наука",
+  "app-guide-welcome-text": "Conzept – це спроба створити енциклопедію 21 століття.  <br><br> Приємних вам досліджень! ",
   "app-guide-documentary": "документальний",
   "app-guide-country": "країна",
   "app-guide-string-search": "пошук рядків",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "бактерія",
   "app-guide-virus": "вірус",
   "app-guide-featured-article": "вибрана стаття",
-  "app-menu-cover-topic": "тема покриття",
-  "app-menu-news": "новини",
-  "app-menu-culture": "культури",
-  "app-menu-nature": "природи",
-  "app-menu-license": "ліцензія",
   "app-guide-help": "допомогти",
   "app-guide-sea": "море",
   "app-guide-continent": "континент",
@@ -192,7 +200,7 @@
   "app-guide-atom": "атом",
   "app-guide-protist": "протист",
   "app-guide-country-map": "карта країни",
-  "app-guide-capital": "Капітолій",
+  "app-guide-capital": "капітал",
   "app-guide-form-of-government": "форма держ.",
   "app-guide-religion": "релігія",
   "app-guide-period": "період",
@@ -215,25 +223,20 @@
   "app-guide-dish": "блюдо",
   "app-guide-cell-type": "тип клітини",
   "app-guide-archae": "археї",
-  "app-menu-persona": "персона",
   "app-guide-featured-portal": "рекомендований портал",
   "app-guide-musical-instrument": "інструмент",
   "app-guide-technology": "технології",
   "app-guide-near-me": "біля мене",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "газети",
+  "app-guide-radio-map": "радіокарта",
   "app-guide-news-radio": "радіо",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "телебачення в прямому ефірі",
   "app-guide-news-tv": "телевізор",
   "app-guide-news-economic-indicators": "економічні показники",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "тенденції розвитку",
+  "app-guide-conflict-map": "карта конфлікту",
   "app-guide-ongoing-conflicts": "конфлікти",
   "app-guide-radio": "радіо",
-  "app-menu-country-select": "країна",
-  "app-menu-interests": "інтереси",
-  "app-menu-command-editor": "редактор команд",
-  "app-menu-presentation": "презентація",
-  "app-menu-editor": "редактор",
-  "app-menu-run-code": "бігати",
-  "app-menu-clear-editor": "ясно",
   "app-foo": "foo bar baz"
 }
