--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "cài đặt",
   "app-tab-help-title": "giúp đỡ",
   "app-tab-audio-chat-title": "trò chuyện bằng âm thanh",
+  "app-notification-too-few-compare-topics": "Trước tiên, hãy thêm hai hoặc nhiều chủ đề vào so sánh bằng cách sử dụng nút (nằm ở đầu bài viết Wikipedia và trong phần meta của chủ đề)",
   "app-search-placeholder": "tìm kiếm",
-  "app-structured-search-title": "tìm kiếm có cấu trúc",
+  "app-topics-found": "chủ đề được tìm thấy",
   "app-title-occurence": "Bản đồ diễn biến",
   "app-title-super": "siêu",
   "app-title-sub": "phụ",
   "app-title-pages": "trang",
   "app-title-citations": "Trích dẫn",
-  "app-guide-see-more": "xem thêm",
-  "app-guide-page": "trang",
-  "app-guide-current-events": "sự kiện hiện tại",
-  "app-guide-topic": "đề tài",
-  "app-guide-artwork": "bức vẽ",
-  "app-guide-organism": "sinh vật",
-  "app-guide-music": "âm nhạc",
-  "app-guide-science": "khoa học",
-  "app-topics-found": "chủ đề được tìm thấy",
-  "app-section-main": "chủ yếu",
-  "app-section-info": "thông tin",
-  "app-section-library": "thư viện",
-  "app-section-web": "mạng lưới",
-  "app-section-news": "Tin tức",
-  "app-section-news-general": "tổng quan",
-  "app-section-social": "xã hội",
-  "app-section-news-tech": "công nghệ",
-  "app-section-society-jobs": "việc làm",
-  "app-section-location": "vị trí",
-  "app-section-location-geography": "địa lý",
-  "app-section-location-demography": "nhân khẩu học",
-  "app-section-location-ecology": "sinh thái",
-  "app-section-location-travel": "du lịch",
-  "app-section-location-weather": "thời tiết",
-  "app-section-location-real-estate": "địa ốc",
   "app-menu-actions": "hành động",
   "app-menu-background-audio": "âm thanh",
   "app-menu-background-midi": "MIDI",
@@ -57,30 +33,16 @@
   "app-menu-toggle-fullscreen": "bật chế độ toàn màn hình",
   "app-menu-bookmark-actions": "hành động chọn dấu trang",
   "app-menu-bookmark-actions-reasoning": "lý luận",
-  "app-guide-bookmark-teach-topics": "dạy tôi",
-  "app-guide-bookmark-quiz-topics": "đố tôi",
-  "app-guide-bookmark-related-topics": "chủ đề liên quan",
-  "app-guide-bookmark-topic-differences": "sự khác biệt",
-  "app-guide-bookmark-commonalities": "những điểm chung",
-  "app-guide-bookmark-similarities": "điểm tương đồng",
-  "app-guide-bookmark-implications": "hàm ý",
-  "app-guide-bookmark-history": "lịch sử",
   "app-menu-import-as": "nhập dấu trang",
   "app-menu-export-as": "xuất dấu trang",
   "app-menu-bookmark-actions-media": "phương tiện truyền thông",
+  "app-menu-upload-json": "tải lên",
+  "app-menu-bookmark-current-view": "đánh dấu chế độ xem hiện tại",
   "app-menu-visual-search": "tìm kiếm trực quan",
   "app-menu-reading-assistance": "hỗ trợ đọc",
   "app-menu-bread": "in đậm đầu từ",
   "app-menu-ai-tutor": "Gia sư AI",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "đánh dấu chế độ xem hiện tại",
+  "app-menu-datasources": "nguồn dữ liệu",
   "app-menu-clone-tab": "tab nhân bản",
   "app-menu-plant-identification": "nhận dạng thực vật",
   "app-menu-text-identification": "nhận dạng văn bản",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "chuyển đổi thanh bên",
   "app-menu-add-bookmark": "thêm dấu trang",
   "app-menu-note-1": "lưu ý 1: chỉ khả dụng khi tiêu điểm nằm ở thanh bên hoặc khung bài viết Wikipedia.",
+  "app-menu-features": "đặc trưng",
+  "app-menu-persona": "tính cách",
+  "app-menu-country-select": "quốc gia",
+  "app-menu-interests": "sở thích",
+  "app-menu-nature-location-quiz": "trắc nghiệm vị trí thiên nhiên",
+  "app-menu-command-editor": "soạn thảo lệnh",
+  "app-menu-presentation": "bài thuyết trình",
+  "app-menu-editor": "biên tập viên",
+  "app-menu-run-code": "chạy",
+  "app-menu-clear-editor": "thông thoáng",
+  "app-menu-cover-topic": "chủ đề bìa",
+  "app-menu-news": "Tin tức",
+  "app-menu-culture": "văn hoá",
+  "app-menu-nature": "thiên nhiên",
+  "app-menu-license": "giấy phép",
+  "app-menu-goto-next-topic": "đi tới chủ đề tiếp theo (trong kết quả thanh bên)",
+  "app-menu-goto-previous-topic": "đi đến chủ đề trước đó (trong kết quả thanh bên)",
+  "app-menu-goto-next-pane": "đi tới khung tiếp theo",
+  "app-menu-goto-previous-pane": "đi đến khung trước",
+  "app-menu-new-search": "tìm kiếm mới",
+  "app-menu-structured-search": "tìm kiếm có cấu trúc",
+  "app-menu-geo-search": "tìm kiếm địa lý",
+  "app-section-main": "chủ yếu",
+  "app-section-info": "thông tin",
+  "app-section-library": "thư viện",
+  "app-section-web": "mạng lưới",
+  "app-section-news": "Tin tức",
+  "app-section-news-general": "tổng quan",
+  "app-section-social": "xã hội",
+  "app-section-news-tech": "công nghệ",
+  "app-section-society-jobs": "việc làm",
+  "app-section-location": "vị trí",
+  "app-section-location-geography": "địa lý",
+  "app-section-location-demography": "nhân khẩu học",
+  "app-section-location-ecology": "sinh thái",
+  "app-section-location-travel": "du lịch",
+  "app-section-location-weather": "thời tiết",
+  "app-section-location-real-estate": "địa ốc",
   "app-section-business": "việc kinh doanh",
   "app-section-government": "chính phủ",
   "app-section-government-general": "tổng quan",
@@ -132,6 +132,7 @@
   "app-section-library-general": "tổng quan",
   "app-section-library-manuscripts": "bản thảo",
   "app-section-library-history": "lịch sử",
+  "app-section-library-philosophy": "triết lý",
   "app-section-library-genealogy": "phả hệ",
   "app-section-library-legal": "hợp pháp",
   "app-section-library-products": "các sản phẩm",
@@ -144,19 +145,31 @@
   "app-section-society": "xã hội",
   "app-section-society-sports": "các môn thể thao",
   "app-section-society-food": "đồ ăn",
-  "app-section-library-philosophy": "triết lý",
   "app-section-library-religion": "tôn giáo",
   "app-section-library-poetry": "thơ",
   "app-section-library-identity": "danh tính",
   "app-section-society-events": "sự kiện",
-  "app-guide-welcome-text": "Conzept là một nỗ lực nhằm tạo ra một bộ bách khoa toàn thư cho thế kỷ 21.  <br><br> Tận hưởng chuyến khám phá của bạn! ",
   "app-section-society-shopping": "mua sắm",
-  "app-notification-too-few-compare-topics": "Trước tiên, hãy thêm hai hoặc nhiều chủ đề vào so sánh bằng cách sử dụng nút (nằm ở đầu bài viết Wikipedia và trong phần meta của chủ đề)",
-  "app-menu-goto-next-topic": "đi tới chủ đề tiếp theo (trong kết quả thanh bên)",
-  "app-menu-goto-previous-topic": "đi tới chủ đề trước đó (trong kết quả thanh bên)",
-  "app-menu-goto-next-pane": "đi tới khung tiếp theo",
-  "app-menu-goto-previous-pane": "đi đến khung trước",
-  "app-menu-new-search": "tìm kiếm mới",
+  "app-guide-bookmarks-selected": "đã chọn",
+  "app-guide-bookmarks-deselect-all": "bỏ chọn tất cả",
+  "app-guide-bookmark-teach-topics": "dạy tôi",
+  "app-guide-bookmark-quiz-topics": "đố tôi",
+  "app-guide-bookmark-related-topics": "chủ đề liên quan",
+  "app-guide-bookmark-topic-differences": "sự khác biệt",
+  "app-guide-bookmark-commonalities": "những điểm chung",
+  "app-guide-bookmark-similarities": "điểm tương đồng",
+  "app-guide-bookmark-implications": "hàm ý",
+  "app-guide-bookmark-history": "lịch sử",
+  "app-guide-bookmark-gapminder-country-trend": "xu hướng đất nước",
+  "app-guide-see-more": "xem thêm",
+  "app-guide-page": "trang",
+  "app-guide-current-events": "sự kiện hiện tại",
+  "app-guide-topic": "đề tài",
+  "app-guide-artwork": "bức vẽ",
+  "app-guide-organism": "sinh vật",
+  "app-guide-music": "âm nhạc",
+  "app-guide-science": "khoa học",
+  "app-guide-welcome-text": "Conzept là một nỗ lực nhằm tạo ra một bộ bách khoa toàn thư cho thế kỷ 21.  <br><br> Tận hưởng chuyến khám phá của bạn! ",
   "app-guide-documentary": "phim tài liệu",
   "app-guide-country": "quốc gia",
   "app-guide-string-search": "tìm kiếm chuỗi",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "vi khuẩn",
   "app-guide-virus": "vi-rút",
   "app-guide-featured-article": "bài viết nổi bật",
-  "app-menu-cover-topic": "chủ đề bìa",
-  "app-menu-news": "Tin tức",
-  "app-menu-culture": "văn hoá",
-  "app-menu-nature": "thiên nhiên",
-  "app-menu-license": "giấy phép",
   "app-guide-help": "giúp đỡ",
   "app-guide-sea": "biển",
   "app-guide-continent": "lục địa",
@@ -215,25 +223,20 @@
   "app-guide-dish": "món ăn",
   "app-guide-cell-type": "loại tế bào",
   "app-guide-archae": "cổ vật",
-  "app-menu-persona": "tính cách",
   "app-guide-featured-portal": "cổng thông tin nổi bật",
   "app-guide-musical-instrument": "dụng cụ",
   "app-guide-technology": "công nghệ",
   "app-guide-near-me": "gần tôi",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "Báo",
+  "app-guide-radio-map": "bản đồ vô tuyến",
   "app-guide-news-radio": "Đài",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "truyền hình trực tiếp",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "chỉ số kinh tế",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "xu hướng phát triển",
+  "app-guide-conflict-map": "bản đồ xung đột",
   "app-guide-ongoing-conflicts": "xung đột",
   "app-guide-radio": "Đài",
-  "app-menu-country-select": "quốc gia",
-  "app-menu-interests": "sở thích",
-  "app-menu-command-editor": "soạn thảo lệnh",
-  "app-menu-presentation": "bài thuyết trình",
-  "app-menu-editor": "biên tập viên",
-  "app-menu-run-code": "chạy",
-  "app-menu-clear-editor": "thông thoáng",
   "app-foo": "quán bar foo baz"
 }
