--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -6,38 +6,14 @@
   "app-tab-settings-title": "设置",
   "app-tab-help-title": "帮助",
   "app-tab-audio-chat-title": "音频聊天",
+  "app-notification-too-few-compare-topics": "首先使用 按钮（位于维基百科文章顶部和主题的元部分）添加两个或更多主题进行比较",
   "app-search-placeholder": "搜索",
-  "app-structured-search-title": "结构化搜索",
+  "app-topics-found": "找到主题",
   "app-title-occurence": "发生图",
   "app-title-super": "极好的",
   "app-title-sub": "子",
   "app-title-pages": "页面",
   "app-title-citations": "引文",
-  "app-guide-see-more": "查看更多",
-  "app-guide-page": "页",
-  "app-guide-current-events": "现在发生的事",
-  "app-guide-topic": "话题",
-  "app-guide-artwork": "绘画",
-  "app-guide-organism": "生物",
-  "app-guide-music": "音乐",
-  "app-guide-science": "科学",
-  "app-topics-found": "找到主题",
-  "app-section-main": "主要的",
-  "app-section-info": "信息",
-  "app-section-library": "图书馆",
-  "app-section-web": "网络",
-  "app-section-news": "消息",
-  "app-section-news-general": "一般的",
-  "app-section-social": "社会的",
-  "app-section-news-tech": "科技",
-  "app-section-society-jobs": "工作",
-  "app-section-location": "地点",
-  "app-section-location-geography": "地理",
-  "app-section-location-demography": "人口统计学",
-  "app-section-location-ecology": "生态",
-  "app-section-location-travel": "旅行",
-  "app-section-location-weather": "天气",
-  "app-section-location-real-estate": "房地产",
   "app-menu-actions": "行动",
   "app-menu-background-audio": "声音的",
   "app-menu-background-midi": "MIDI",
@@ -51,36 +27,22 @@
   "app-menu-keyboard-shortcuts": "键盘快捷键",
   "app-menu-credits": "学分",
   "app-menu-about": "关于",
-  "app-menu-random-topic": "随机话题",
-  "app-menu-random-topic-key": "随机话题",
+  "app-menu-random-topic": "随机主题",
+  "app-menu-random-topic-key": "随机主题",
   "app-menu-compare-topics": "比较主题",
   "app-menu-toggle-fullscreen": "切换全屏",
   "app-menu-bookmark-actions": "书签选择操作",
   "app-menu-bookmark-actions-reasoning": "推理",
-  "app-guide-bookmark-teach-topics": "教我",
-  "app-guide-bookmark-quiz-topics": "测验我",
-  "app-guide-bookmark-related-topics": "相关话题",
-  "app-guide-bookmark-topic-differences": "差异",
-  "app-guide-bookmark-commonalities": "共同点",
-  "app-guide-bookmark-similarities": "相似之处",
-  "app-guide-bookmark-implications": "影响",
-  "app-guide-bookmark-history": "历史",
   "app-menu-import-as": "导入书签",
   "app-menu-export-as": "导出书签",
   "app-menu-bookmark-actions-media": "媒体",
+  "app-menu-upload-json": "上传",
+  "app-menu-bookmark-current-view": "为当前视图添加书签",
   "app-menu-visual-search": "视觉搜索",
   "app-menu-reading-assistance": "阅读辅助",
   "app-menu-bread": "词首加粗",
   "app-menu-ai-tutor": "人工智能导师",
-  "app-menu-datasources": "datasources",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
-  "app-guide-news-gdelt": "GDELT",
-  "app-guide-bookmark-gapminder-country-trend": "country trend",
-  "app-menu-bookmark-current-view": "为当前视图添加书签",
+  "app-menu-datasources": "数据源",
   "app-menu-clone-tab": "克隆选项卡",
   "app-menu-plant-identification": "植物鉴定",
   "app-menu-text-identification": "文字识别",
@@ -102,6 +64,44 @@
   "app-menu-toggle-sidebar": "切换侧边栏",
   "app-menu-add-bookmark": "添加书签",
   "app-menu-note-1": "注意 1：仅当焦点位于侧边栏或维基百科文章窗格时才可用。",
+  "app-menu-features": "特征",
+  "app-menu-persona": "人格面具",
+  "app-menu-country-select": "国家",
+  "app-menu-interests": "兴趣",
+  "app-menu-nature-location-quiz": "自然位置测验",
+  "app-menu-command-editor": "命令编辑器",
+  "app-menu-presentation": "推介会",
+  "app-menu-editor": "编辑",
+  "app-menu-run-code": "跑步",
+  "app-menu-clear-editor": "清除",
+  "app-menu-cover-topic": "封面主题",
+  "app-menu-news": "消息",
+  "app-menu-culture": "文化",
+  "app-menu-nature": "自然",
+  "app-menu-license": "执照",
+  "app-menu-goto-next-topic": "转到下一个主题（在侧边栏结果中）",
+  "app-menu-goto-previous-topic": "转到上一个主题（在侧边栏结果中）",
+  "app-menu-goto-next-pane": "转到下一个窗格",
+  "app-menu-goto-previous-pane": "转到上一个窗格",
+  "app-menu-new-search": "新搜索",
+  "app-menu-structured-search": "结构化搜索",
+  "app-menu-geo-search": "地理搜索",
+  "app-section-main": "主要的",
+  "app-section-info": "信息",
+  "app-section-library": "图书馆",
+  "app-section-web": "网络",
+  "app-section-news": "消息",
+  "app-section-news-general": "一般的",
+  "app-section-social": "社会的",
+  "app-section-news-tech": "科技",
+  "app-section-society-jobs": "工作",
+  "app-section-location": "地点",
+  "app-section-location-geography": "地理",
+  "app-section-location-demography": "人口统计学",
+  "app-section-location-ecology": "生态",
+  "app-section-location-travel": "旅行",
+  "app-section-location-weather": "天气",
+  "app-section-location-real-estate": "房地产",
   "app-section-business": "商业",
   "app-section-government": "政府",
   "app-section-government-general": "一般的",
@@ -132,6 +132,7 @@
   "app-section-library-general": "一般的",
   "app-section-library-manuscripts": "手稿",
   "app-section-library-history": "历史",
+  "app-section-library-philosophy": "哲学",
   "app-section-library-genealogy": "家谱",
   "app-section-library-legal": "合法的",
   "app-section-library-products": "产品",
@@ -144,19 +145,31 @@
   "app-section-society": "社会",
   "app-section-society-sports": "运动的",
   "app-section-society-food": "食物",
-  "app-section-library-philosophy": "哲学",
   "app-section-library-religion": "宗教",
   "app-section-library-poetry": "诗歌",
   "app-section-library-identity": "身份",
   "app-section-society-events": "事件",
-  "app-guide-welcome-text": "Conzept 试图创建一本 21 世纪的百科全书。 <br><br> 享受你的探索吧！",
   "app-section-society-shopping": "购物",
-  "app-notification-too-few-compare-topics": "首先使用 按钮（位于维基百科文章顶部和主题的元部分）添加两个或多个主题进行比较",
-  "app-menu-goto-next-topic": "转到下一个主题（在侧边栏结果中）",
-  "app-menu-goto-previous-topic": "转到上一个主题（在侧边栏结果中）",
-  "app-menu-goto-next-pane": "转到下一个窗格",
-  "app-menu-goto-previous-pane": "转到上一个窗格",
-  "app-menu-new-search": "新搜索",
+  "app-guide-bookmarks-selected": "已选择",
+  "app-guide-bookmarks-deselect-all": "取消全选",
+  "app-guide-bookmark-teach-topics": "教我",
+  "app-guide-bookmark-quiz-topics": "测验我",
+  "app-guide-bookmark-related-topics": "相关话题",
+  "app-guide-bookmark-topic-differences": "差异",
+  "app-guide-bookmark-commonalities": "共同点",
+  "app-guide-bookmark-similarities": "相似之处",
+  "app-guide-bookmark-implications": "影响",
+  "app-guide-bookmark-history": "历史",
+  "app-guide-bookmark-gapminder-country-trend": "国家趋势",
+  "app-guide-see-more": "查看更多",
+  "app-guide-page": "页",
+  "app-guide-current-events": "现在发生的事",
+  "app-guide-topic": "话题",
+  "app-guide-artwork": "绘画",
+  "app-guide-organism": "生物",
+  "app-guide-music": "音乐",
+  "app-guide-science": "科学",
+  "app-guide-welcome-text": "Conzept 试图创建一本 21 世纪的百科全书。 <br><br> 享受你的探索吧！",
   "app-guide-documentary": "记录",
   "app-guide-country": "国家",
   "app-guide-string-search": "字符串搜索",
@@ -177,11 +190,6 @@
   "app-guide-bacterium": "细菌",
   "app-guide-virus": "病毒",
   "app-guide-featured-article": "特色文章",
-  "app-menu-cover-topic": "封面主题",
-  "app-menu-news": "消息",
-  "app-menu-culture": "文化",
-  "app-menu-nature": "自然",
-  "app-menu-license": "执照",
   "app-guide-help": "帮助",
   "app-guide-sea": "海",
   "app-guide-continent": "大陆",
@@ -192,7 +200,7 @@
   "app-guide-atom": "原子",
   "app-guide-protist": "原生生物",
   "app-guide-country-map": "国家地图",
-  "app-guide-capital": "国会大厦",
+  "app-guide-capital": "首都",
   "app-guide-form-of-government": "政府形式",
   "app-guide-religion": "宗教",
   "app-guide-period": "时期",
@@ -215,25 +223,20 @@
   "app-guide-dish": "盘子",
   "app-guide-cell-type": "细胞类型",
   "app-guide-archae": "古细菌",
-  "app-menu-persona": "人格面具",
   "app-guide-featured-portal": "特色门户网站",
   "app-guide-musical-instrument": "乐器",
   "app-guide-technology": "技术",
   "app-guide-near-me": "靠近我",
+  "app-guide-news-gdelt": "GDELT",
   "app-guide-newspapers": "报纸",
+  "app-guide-radio-map": "无线电地图",
   "app-guide-news-radio": "收音机",
-  "app-guide-live-tv": "live TV",
+  "app-guide-live-tv": "电视直播",
   "app-guide-news-tv": "电视",
   "app-guide-news-economic-indicators": "经济指标",
-  "app-guide-conflict-map": "conflict map",
+  "app-guide-world-statistics": "发展趋势",
+  "app-guide-conflict-map": "冲突地图",
   "app-guide-ongoing-conflicts": "冲突",
   "app-guide-radio": "收音机",
-  "app-menu-country-select": "国家",
-  "app-menu-interests": "兴趣",
-  "app-menu-command-editor": "命令编辑器",
-  "app-menu-presentation": "推介会",
-  "app-menu-editor": "编辑",
-  "app-menu-run-code": "跑步",
-  "app-menu-clear-editor": "清除",
   "app-foo": "富巴巴兹"
 }
